CI images update

--- a/images/chieu-lac-soc-18/config.ini
+++ b/images/chieu-lac-soc-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-18.html
 lastopen = 2024-06-06 16:53:55
 
 [search]
-lastsearch = 2024-08-09 03:34:41
+lastsearch = 2024-08-09 12:41:10
 
 [scholar.google.com]
 match = -43.8%%
@@ -47,9 +47,9 @@ title = Khám phá làng nghề làm chiếu Long Cang truyền thống
 url = https://laodongtre.laodong.vn/doi-song/kham-pha-lang-nghe-lam-chieu-long-cang-truyen-thong-1277659.ldo
 
 [www.vinmec.com]
-match = -75.0%%
-title = Chiều cao, cân nặng bé gái 18 tháng tuổi
-url = https://www.vinmec.com/vie/bai-viet/chieu-cao-can-nang-be-gai-18-thang-tuoi-vi/
+match = -81.2%%
+title = Chiều cao, cân nặng bé trai 18 tháng tuổi
+url = https://www.vinmec.com/vie/bai-viet/chieu-cao-can-nang-be-trai-18-thang-tuoi-vi
 
 [www.bachhoaxanh.com]
 match = -218.8%%
@@ -112,9 +112,9 @@ title = Giá vàng 9999 hôm nay tại 64 tỉnh 4/8/2024 | Bảng giá vàng
 url = https://primagold.com.vn/
 
 [www.youtube.com]
-match = -150.0%%
-title = TIN CHIỀU 7/8: ONANA TUYÊN BỐ GÂY SỐC, DE BRUYNE ...
-url = https://www.youtube.com/watch?v=7PT5F_WYNaA
+match = -225.0%%
+title = 18 phút tập lắc vòng giảm eo,giảm mỡ bụng nhanh trong một ...
+url = https://www.youtube.com/watch?v=Z9nt7fzWvqI
 
 [books.google.com]
 match = -156.2%%
@@ -687,9 +687,9 @@ title = Xinh Núm Tình Trên Lộ Bigo Vô Gái
 url = https://kristin-gildemeister.de/4721414-xinh-gái-tình-vô-lộ-núm-trên-bigo.html
 
 [www.momo.vn]
-match = -18.8%%
-title = Lịch chiếu phim Lotte Cinema
-url = https://www.momo.vn/cinema/rap/lotte-cinema
+match = -56.2%%
+title = Lịch chiếu phim BHD Star Long Khánh
+url = https://www.momo.vn/cinema/rap/bhd-star/bhd-star-long-khanh-216
 
 [baotintuc.vn]
 match = -37.5%%
@@ -845,4 +845,9 @@ url = https://baobacgiang.vn/bg2/tp-bac-giang/de-thanh-pho-dep-hon-071417.bbg
 match = -168.8%%
 title = Bộ Công an khởi tố 18 bị can tổ chức đánh bạc và ...
 url = https://baodienbienphu.com.vn/tin-tuc/phap-luat/217276/bo-cong-an-khoi-to-18-bi-can-to-chuc-danh-bac-va-danh-bac-trai-phep-tai-clb-doanh-nghiep-viet-kieu---king-club
+
+[www.huggies.com.vn]
+match = -200.0%%
+title = Trẻ 18 tháng tuổi: Phát triển chiều cao cân nặng, dinh ...
+url = https://www.huggies.com.vn/cham-soc-be/phat-trien-cua-be-qua-tung-thang/be-18-thang-tuoi
 
