--- a/images/nem-sieu-nhe-9f-14/config.ini
+++ b/images/nem-sieu-nhe-9f-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-sieu-nhe-9f-14.html
 lastopen = 2024-06-10 00:53:20
 
 [search]
-lastsearch = 2024-08-09 12:22:24
+lastsearch = 2024-08-09 12:45:20
 
 [www.lazada.vn]
 match = -61.1%%
@@ -12,9 +12,9 @@ title = Orangesky Cần Câu Cá Biển Yuantou ...
 url = https://www.lazada.vn/products/orangesky-can-cau-ca-bien-yuantou-can-cau-ca-yuantou-sieu-nhe-can-nem-can-cau-ca-yuantou-i2413511947.html
 
 [www.facebook.com]
-match = -5.6%%
-title = Nem Nướng Mỗ Lao - Hà Đông
-url = https://www.facebook.com/story.php/?story_fbid=767320398760395&id=100064473260604
+match = -88.9%%
+title = Chuchu Shop - 𝐍𝐄𝐌 𝐂𝐇𝐔𝐀 𝐕𝐈𝐄̂𝐍 𝐌𝐈𝐍𝐈 𝐎̛́𝐓 𝐗𝐈𝐄̂𝐌 ...
+url = https://www.facebook.com/story.php/?story_fbid=883178550515220&id=100064692486421
 
 [thegioinem.com]
 match = -55.6%%
