--- a/images/chieu-cay-moc-hoa18/config.ini
+++ b/images/chieu-cay-moc-hoa18/config.ini
@@ -4,27 +4,27 @@ url = https://www.diepxuan.com/chieu-cay-moc-hoa18.html
 lastopen = 2024-06-09 22:43:05
 
 [search]
-lastsearch = 2024-08-09 11:22:41
+lastsearch = 2024-08-09 12:43:56
 
 [hoa18.com]
-match = 10.5%%
-title = Đại lý 63 tỉnh thành Hoa18
-url = https://hoa18.com/dai-ly-63-tinh-thanh-hoa18
+match = -126.3%%
+title = Tiết lộ ý nghĩa phong thủy của nụ tầm xuân hút tài ...
+url = https://hoa18.com/thong-tin/tiet-lo-y-nghia-phong-thuy-cua-nu-tam-xuan-hut-tai-loc-trong-nam-moi
 
 [www.youtube.com]
-match = -147.4%%
-title = Cây Mộc Hương Ta Và 8 Loài Hoa Đẹp Chơi Tết 2023 | Đt ...
-url = https://www.youtube.com/watch?v=NPdIFgtFTso
+match = -105.3%%
+title = Cách giúp hoa Mộc Hương bền hoa để chơi Tết âm lịch
+url = https://www.youtube.com/watch?v=demL5DzJK5M
 
 [kallos.co]
 match = -105.3%%
 title = Mệnh khuyết HOẢ: 18 phương pháp cải vận hiệu quả
-url = https://kallos.co/blogs/philosophy/menh-khuyet-hoa-18-phuong-phap-cai-van-hieu-qua?srsltid=AfmBOoouIn3z2ZXKnjXirxWdD_OQQh8P6eNtkM48dq2nOSscBBC-I0mV
+url = https://kallos.co/blogs/philosophy/menh-khuyet-hoa-18-phuong-phap-cai-van-hieu-qua
 
 [www.facebook.com]
-match = -52.6%%
-title = Lắp đặt tấm pin năng lượng mặt trời
-url = https://www.facebook.com/denledeurosuper/photos/-hướng-dẫn-cách-lắp-đèn-pha-led-năng-lượng-mặt-trời-đúng-chuẩn-️-đèn-pha-led-năn/720282063461086/
+match = -47.4%%
+title = Hoa18 Tuyển Dụng | Ho Chi Minh City
+url = https://www.facebook.com/hoa18tuyendung/
 
 [vietnambiz.vn]
 match = -126.3%%
@@ -132,9 +132,9 @@ title =
 url = https://www.bachhoaxanh.com/kinh-nghiem-hay/nu-tam-xuan-la-hoa-gi-cach-cam-nu-tam-xuan-trang-tri-tet-dep-sang-trong-1406607
 
 [shopee.vn]
-match = -84.2%%
-title = [Chỉ Giao HCM Ship Hỏa Tốc] Bó Hoa Cúc Tana ...
-url = https://shopee.vn/-Chỉ-Giao-HCM-Ship-Hỏa-Tốc-Bó-Hoa-Cúc-Tana-Tươi(-1-Bó)-Hoa-Tươi-Hoa18-i.52741467.16241410836
+match = -121.1%%
+title = Nhang nở hoa - Giá Tốt, Sale Tháng 08, Ship 0 Đồng
+url = https://shopee.vn/list/nhang/nở hoa
 
 [baobinhdinh.vn]
 match = -110.5%%
