--- a/images/chieu-nhua-ha-noi-10/config.ini
+++ b/images/chieu-nhua-ha-noi-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-nhua-ha-noi-10.html
 lastopen = 2024-06-09 23:36:00
 
 [search]
-lastsearch = 2024-08-09 10:39:06
+lastsearch = 2024-08-09 12:35:15
 
 [www.maihuyencorp.com]
 match = -85.0%%
@@ -12,9 +12,9 @@ title = Cửa hàng chiếu nhựa, mành, rèm, thảm uy tin tại Hà Nội
 url = https://www.maihuyencorp.com/shop
 
 [shopee.vn]
-match = 70.0%%
-title = Chiếu nhựa Hà Nội các cỡ
-url = https://shopee.vn/Chiếu-nhựa-Hà-Nội-các-cỡ-i.236527859.6960486970
+match = 15.0%%
+title = Chiếu Nhựa Mai Huyền ❤️FREESHIP ...
+url = https://shopee.vn/Chiếu-Nhựa-Mai-Huyền-❤️FREESHIP❤️-Chiếu-Nhựa-Hà-Nội-(1-5m-1-6m-1m8-x-2m-1m8x3m-1m8x4m)-i.126028938.4749254076
 
 [tchome.vn]
 match = 20.0%%
@@ -33,8 +33,8 @@ url = https://www.yellowpages.vn/class/490435/chiếu-nhựa,-chiếu-cói-ở_h
 
 [tiki.vn]
 match = -80.0%%
-title = Chiếu nhựa việt nam 2mx4m hàng chính hãng, giao nhanh
-url = https://tiki.vn/search?q=chiếu nhựa việt nam 2mx4m
+title = Chiếu Nhựa Hà Nội (1,5m , 1,6m , 1m8 x 2m ,1m8x3m , ...
+url = https://tiki.vn/chieu-nhua-freeship-chieu-nhua-ha-noi-1-5m-1-6m-1m8-x-2m-1m8x3m-1m8x4m-p131589762.html?spid=198258706
 
 [www.sendo.vn]
 match = -35.0%%
