--- a/images/giuong-mn-1/config.ini
+++ b/images/giuong-mn-1/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/giuong-mn-1.html
 lastopen = 2024-06-07 00:35:37
 
 [search]
-lastsearch = 2024-08-09 12:23:27
+lastsearch = 2024-08-09 12:34:54
 
 [phana.com.vn]
 match = -90.9%%
@@ -17,9 +17,9 @@ title = Giường 1,8mx2m hàng chính hãng, giao nhanh
 url = https://tiki.vn/search?q=giường 1,8mx2m
 
 [www.facebook.com]
-match = -254.5%%
-title = Có bán Vách đầu giường tại Minneapolis, Minnesota
-url = https://www.facebook.com/marketplace/minneapolis/headboards-footboards/?locale=vi_VN
+match = -281.8%%
+title = Có bán Đệm giường đôi lớn tại Minneapolis, Minnesota
+url = https://www.facebook.com/marketplace/minneapolis/queen-mattresses/?locale=vi_VN
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -107,9 +107,9 @@ title = Giường MN 5
 url = http://thietbimamnontienloc.com/san-pham/giuong-mn-5-253.html
 
 [www.airbnb.com.vn]
-match = -318.2%%
-title = Phòng tiêu chuẩn 1 giường đôi tại Millennium Minneapolis
-url = https://www.airbnb.com.vn/hotels/1059440610457947224
+match = -309.1%%
+title = Phòng 1 Giường cỡ King 2 Phòng tại Bloomington - Airbnb
+url = https://www.airbnb.com.vn/rooms/929459059736966278
 
 [freemeteo.cl]
 match = -281.8%%
