--- a/images/vo-goi-bears-45x65/config.ini
+++ b/images/vo-goi-bears-45x65/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/vo-goi-bears-45x65.html
 lastopen = 2024-07-01 17:35:59
 
 [search]
-lastsearch = 2024-08-09 07:01:16
+lastsearch = 2024-08-09 12:48:06
 
 [everonvn.com.vn]
-match = -111.1%%
-title = Bảng Giá Vỏ Gối Hàn Quốc Everon Est-20034 Màu Tím
-url = https://everonvn.com.vn/everon/4749/vo-goi-everon-est-20034
+match = -94.4%%
+title = Bộ Everon Ep 1738 - chăn ga gối đệm Everon
+url = https://everonvn.com.vn/everon/553/bo-everon-ep-1738?srsltid=AfmBOorlC8hTN8SNf4QC3SX9bZJJjkpS-BQ9mrhxv8HlDPCNeCmTHgyi
 
 [www.lazada.vn]
 match = -161.1%%
 title = Hoạt động♀Chất lượng cao Vỏ gối bông 45x65 etami, mềm mại ...
-url = https://www.lazada.vn/products/hoat-dongchat-luong-cao-vo-goi-bong-45x65-etami-mem-mai-va-min-mang-thiet-ke-i2641874444-s12892934652.html?from_gmc=1&fl_tag=1
+url = https://www.lazada.vn/products/hoat-dongchat-luong-cao-vo-goi-bong-45x65-etami-mem-mai-va-min-mang-thiet-ke-i2641874444-s12892934652.html?from_gmc=1&fl_tag=1&srsltid=AfmBOor98YTZ1zoD41nUQi1DSYjifvTKP83XLjjq8NBnPu9v53n6Vemp
 
 [www.reddit.com]
 match = -150.0%%
@@ -34,12 +34,12 @@ url = https://muathongminh.vn/xu-huong-vo-goi-dau-cotton-poly-45x65-ao-goi-nam-n
 [www.diepxuan.com]
 match = -11.1%%
 title = Vỏ gối EPM21070 45x65 - Điệp Xuân
-url = https://www.diepxuan.com/vo-goi-epm21070-45x65.html
+url = https://www.diepxuan.com/vo-goi-epm21070-45x65.html?srsltid=AfmBOoopSRmKKgF7boiWsmxpK6jsaBeNe7n3itIAzFc7vVFTrQxgnvBD
 
 [www.everonqb.com]
-match = -88.9%%
-title = Vỏ gối TRAINS 45x65 - Everon Quảng Bình Trang Chủ
-url = https://www.everonqb.com/vo-goi-trains-45x65.html
+match = -100.0%%
+title = Vỏ gối EP1818 45x65 - Everon Quảng Bình Trang Chủ
+url = https://www.everonqb.com/vo-goi-ep1818-45x65.html
 
 [shopee.vn]
 match = -127.8%%
