--- a/images/nem-di-a-mon-9f-2m-22-re/config.ini
+++ b/images/nem-di-a-mon-9f-2m-22-re/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-di-a-mon-9f-2m-22-re.html
 lastopen = 2024-06-10 00:56:34
 
 [search]
-lastsearch = 2024-08-09 10:59:57
+lastsearch = 2024-08-09 12:50:37
 
 [www.tiktok.com]
 match = -5.3%%
@@ -12,9 +12,9 @@ title = Ea Email Method Cut
 url = https://www.tiktok.com/discover/ea-email-method-cut
 
 [www.reddit.com]
-match = -79.2%%
-title = Why is the 22re such a good engine? : r/ToyotaPickup
-url = https://www.reddit.com/r/ToyotaPickup/comments/1au9dnh/why_is_the_22re_such_a_good_engine/
+match = -91.7%%
+title = 22re/22r - Mechanic told me it was junk : r/ToyotaPickup
+url = https://www.reddit.com/r/ToyotaPickup/comments/12aw6b1/22re22r_mechanic_told_me_it_was_junk/
 
 [www.pirate4x4.com]
 match = -20.8%%
