--- a/images/chieu-cay-ht-15/config.ini
+++ b/images/chieu-cay-ht-15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-ht-15.html
 lastopen = 2024-06-09 23:44:26
 
 [search]
-lastsearch = 2024-08-09 11:44:02
+lastsearch = 2024-08-09 13:35:12
 
 [www.diepxuan.com]
 match = -13.3%%
@@ -57,9 +57,9 @@ title = TIN TÔN GIÁO, SÁNG THỨ TƯ 07/08/2024
 url = https://www.youtube.com/watch?v=o0pRUWhRktM
 
 [htlight.vn]
-match = 6.7%%
-title = ĐÈN LED - HTLIGHT
-url = http://htlight.vn/
+match = -26.7%%
+title = Đèn chiếu cỏ CD-15W - HTLIGHT
+url = http://htlight.vn/den-chieu-co-cd-15w-1.html
 
 [www.thietbidiendgp.vn]
 match = -6.7%%
@@ -132,9 +132,9 @@ title = The Bodog Group|Nơi Cá Cược Casino Hàng Đầu Châu Á
 url = https://hawater.com.vn/bmw769346.xhtm
 
 [vietnamese.alibaba.com]
-match = -226.7%%
-title = Thiết Kế Mới Nhỏ Mini Máy Xúc 1.5 Tấn HT15 Chức Năng Tùy ...
-url = https://vietnamese.alibaba.com/product-detail/new-design-small-mini-excavators-1-5-ton-ht15-optional-function-swing-boom-and-extendable-track-1600398729442.html?isSpider=true
+match = -113.3%%
+title = Chiều Cao HT-M15-8 Công Tắc Phao Enm-10 Flygt
+url = https://vietnamese.alibaba.com/product-detail/HEIGHT-HT-M15-8-flygt-enm-60769591286.html
 
 [congnghehoangtien.com]
 match = -160.0%%
