--- a/images/chieu-dieu-hoa-khong-goi-16/config.ini
+++ b/images/chieu-dieu-hoa-khong-goi-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-khong-goi-16.html
 lastopen = 2024-06-09 22:26:33
 
 [search]
-lastsearch = 2024-08-09 06:51:14
+lastsearch = 2024-08-09 13:32:27
 
 [demxanh.com]
-match = -14.8%%
-title = Bảng giá chiếu điều hòa cao cấp giá tốt nhất tại ...
-url = https://demxanh.com/chieu-dieu-hoa.html
+match = 25.9%%
+title = Chiếu điều hòa Nhật Bản NEKIO chính hãng
+url = https://demxanh.com/chieu-dieu-hoa-nhat-ban-nekio-chinh-hang-nhat.html
 
 [shopee.vn]
 match = 0.0%%
@@ -190,4 +190,14 @@ url = https://ru9.vn/blogs/magazine/chieu-dieu-hoa-cao-su-non-co-tot-khong
 match = -37.0%%
 title = Top 3 các loại chiếu điều hòa cao cấp được ưa chuộng ...
 url = https://joliefam.vn/chieu-dieu-hoa-cao-cap/
+
+[khonemtonghop.com]
+match = -33.3%%
+title = Chiếu Điều Hòa Là Gì? TOP 4 Chiếu Điều Hòa Hot Nhất ...
+url = https://khonemtonghop.com/chieu-dieu-hoa-la-gi/
+
+[www.facebook.com]
+match = -40.7%%
+title = Chiếu điều hòa Nhật Bản NEKIO | Sản phẩm chiếu điều hòa ...
+url = https://www.facebook.com/demxanhcom/videos/chiếu-điều-hòa-nhật-bản-nekio/842170253095013/?locale=hi_IN
 
