--- a/images/chieu-lac-gam-14/config.ini
+++ b/images/chieu-lac-gam-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-14.html
 lastopen = 2024-06-09 23:47:29
 
 [search]
-lastsearch = 2024-08-09 06:37:59
+lastsearch = 2024-08-09 13:25:51
 
 [www.diepxuan.com]
 match = 56.2%%
@@ -227,9 +227,9 @@ title = chelsea vs🍯 【WW88.game】Casino Online Châu Á
 url = https://hoanghaco.com.vn/ios/farmer_pyramid_summer/
 
 [www.facebook.com]
-match = -118.8%%
-title = BBC News Tiếng Việt added a new photo. ...
-url = https://www.facebook.com/100064688586481/photos/898251185674493/
+match = -22.2%%
+title = Nhược Lạc
+url = https://www.facebook.com/nhuoclac.writing/
 
 [baocaobang.vn]
 match = -218.8%%
@@ -570,4 +570,9 @@ url = https://tienphong.vn/cam-thay-bi-bo-roi-chong-tim-den-tam-tinh-cung-co-giu
 match = -193.8%%
 title = Sắp diễn ra chương trình nghệ thuật “Bản hùng ca bất diệt”
 url = https://thoibaonganhang.vn/sap-dien-ra-chuong-trinh-nghe-thuat-ban-hung-ca-bat-diet-154410.html
+
+[viettelpost.com.vn]
+match = -37.5%%
+title = Giao hàng nhanh Hồ Chí Minh
+url = https://viettelpost.com.vn/tin-tuc/giao-hang-nhanh-ho-chi-minh/
 
