--- a/images/chieu-nhua-ha-noi-du-lich-180x400/config.ini
+++ b/images/chieu-nhua-ha-noi-du-lich-180x400/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-nhua-ha-noi-du-lich-180x400.html
 lastopen = 2024-06-07 00:22:51
 
 [search]
-lastsearch = 2024-08-09 10:22:43
+lastsearch = 2024-08-09 13:20:39
 
 [www.diepxuan.com]
-match = 48.5%%
-title = Chiếu nhựa Hà Nội 100x190 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-nhua-ha-noi-100x190.html
+match = 24.2%%
+title = Chiếu gấp Thái Bình 180x400 - Điệp Xuân
+url = https://www.diepxuan.com/chieu-gap-thai-binh-180x400.html
 
 [shopee.vn]
 match = 9.1%%
