--- a/images/man-tu-bung-dinh-vuong-14/config.ini
+++ b/images/man-tu-bung-dinh-vuong-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-tu-bung-dinh-vuong-14.html
 lastopen = 2024-06-07 00:50:47
 
 [search]
-lastsearch = 2024-08-09 10:57:31
+lastsearch = 2024-08-09 13:33:45
 
 [shopee.vn]
 match = 40.0%%
@@ -49,7 +49,7 @@ url = https://easydream.vn/man-chup-dinh-vuong-31-11.html
 [www.lazada.vn]
 match = -36.0%%
 title = Mẫu mùng chụp tự bung người lớn chống muỗi gấp gọn ...
-url = https://www.lazada.vn/products/man-chup-tu-bung-dinh-vuong-dinh-tron-mau-mung-chup-tu-bung-nguoi-lon-chong-muoi-gap-gon-tien-dung-i2219420128.html
+url = https://www.lazada.vn/products/man-chup-tu-bung-dinh-vuong-dinh-tron-mau-mung-chup-tu-bung-nguoi-lon-chong-muoi-gap-gon-tien-dung-i2219420128.html?srsltid=AfmBOorPikxN2iFcaioG53ahkj8AIR6ssvbh9civtnl5-1W26eH3e_H5
 
 [demxanh.com]
 match = 12.0%%
