--- a/images/tham-chan-khach-san/config.ini
+++ b/images/tham-chan-khach-san/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-chan-khach-san.html
 lastopen = 2024-06-07 00:37:03
 
 [search]
-lastsearch = 2024-08-09 12:46:02
+lastsearch = 2024-08-09 13:29:02
 
 [www.khanbongcaocap.com.vn]
 match = -78.9%%
@@ -14,7 +14,7 @@ url = https://www.khanbongcaocap.com.vn/tham-chui-chan-khach-san
 [www.lazada.vn]
 match = -36.8%%
 title = Thảm Chân Khách Sạn Giá Tốt T08/2024 - Lazada
-url = https://www.lazada.vn/tag/tham-chan-khach-san/
+url = https://www.lazada.vn/tag/tham-chan-khach-san/?srsltid=AfmBOoqURIEhNTmsBL4YjJzu4k9ZPqd_esR29KnXIHorl2OckGvi5Jo_
 
 [falcon.com.vn]
 match = -105.3%%
