--- a/images/tham-giuong-ii-140x190/config.ini
+++ b/images/tham-giuong-ii-140x190/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tham-giuong-ii-140x190.html
 lastopen = 2024-06-17 21:12:12
 
 [search]
-lastsearch = 2024-08-09 12:45:51
+lastsearch = 2024-08-09 13:18:55
 
 [www.diepxuan.com]
-match = 40.9%%
-title = Thảm giường nỉ 140x190 - Điệp Xuân
-url = https://www.diepxuan.com/tham-giuong-ni-140x190.html?srsltid=AfmBOoqSvacT6K_qFR8tGnpbPAzmluB9vo1tmR7lGNxtihV72SHYXQnK
+match = 36.4%%
+title = Điệp Xuân Thảm giường Bode 140x190
+url = https://www.diepxuan.com/tham-giuong-bode-140x190.html
 
 [tiki.vn]
 match = -36.4%%
@@ -47,9 +47,9 @@ title = Thảm trải sàn BLANC' | Thảm lông, thảm dệt 3D đổi trả .
 url = https://blanc.vn/tham-trai-san
 
 [demxanh.com]
-match = -86.4%%
-title = Đệm bông ép 1m4 (1m4x1m9 và 1m4x2m) giá bao nhiêu?
-url = https://demxanh.com/dem-bong-ep-1m4x2m-140x200cm-gia-bao-nhieu.html?srsltid=AfmBOoqvo5SH6cnn3RoCxySJe-zD1Zd0Kk_2EZ7RmeoVyySx8sA-Q63_
+match = -54.5%%
+title = Đệm bông ép 1m4 (1m4x1m9 và 1m4x2m) giá ...
+url = https://demxanh.com/dem-bong-ep-1m4x2m-140x200cm-gia-bao-nhieu.html
 
 [www.kymdan.com]
 match = 15.8%%
@@ -82,8 +82,8 @@ title = CĂN HỘ 2 TẦNG 8/10 pers, 110m2 KHỞI HÀNH/ARRIVEE SKIS ...
 url = https://www.airbnb.com.vn/rooms/1258488
 
 [comehome.com.vn]
-match = -109.1%%
-title = 100+ Mẫu giường tầng trẻ em đẹp hiện đại giá rẻ cho bé ...
+match = -77.3%%
+title = 100+ Mẫu giường tầng trẻ em đẹp hiện đại giá rẻ ...
 url = https://comehome.com.vn/blog/post/mau-giuong-tang-cho-be
 
 [anawood.vn]
@@ -154,7 +154,7 @@ url = https://namduonghome.net/tin-tuc-moi/cach-giat-tham-soi-tong-hop-don-gian-
 [dongagroup.vn]
 match = 10.0%%
 title = Chăn drap nệm giường
-url = https://dongagroup.vn/noi-that-phong-ngu/chan-drap-nem-giuong-189.html?srsltid=AfmBOorZbaTw2V5HxJXGUz4e5i6LtYzeZ5cJGRns4Fm9c8ws_k0-U2a7
+url = https://dongagroup.vn/noi-that-phong-ngu/chan-drap-nem-giuong-189.html
 
 [jysk.vn]
 match = -118.2%%
@@ -162,8 +162,8 @@ title = Seersucker duvet cover set ALICIA 200x220 multi - JYSK.vn
 url = https://jysk.vn/en-US/seersucker-duvet-cover-set-alicia-200x220-multi
 
 [noithatcaco.vn]
-match = -109.1%%
-title = 78+ mẫu giường bệt gỗ tự nhiên đẹp, sang trọng với giá tốt
+match = -77.3%%
+title = 78+ mẫu giường bệt gỗ tự nhiên đẹp, sang trọng ...
 url = https://noithatcaco.vn/cam-nang-noi-that/mau-giuong-bet-go-tu-nhien-dep-849.html
 
 [www.facebook.com]
