--- a/images/tham-giuong-loai-2-16/config.ini
+++ b/images/tham-giuong-loai-2-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tham-giuong-loai-2-16.html
 lastopen = 2024-06-10 00:46:28
 
 [search]
-lastsearch = 2024-08-09 11:39:28
+lastsearch = 2024-08-09 13:31:45
 
 [shopee.vn]
-match = -114.3%%
-title = Thảm lông trải sàn lót sàn phòng khách trải giường phòng ...
-url = https://shopee.vn/Thảm-lông-trải-sàn-lót-sàn-phòng-khách-trải-giường-phòng-ngủ-thảm-lông-trắng-loang-mịn-chụp-ảnh-hình-tròn-vuông-1m6x2m-i.472596491.3194973741
+match = -76.2%%
+title = thảm trải giường loại 1 giá tốt Tháng 7, 2024 | Mua ngay
+url = https://shopee.vn/search?keyword=thảm trải giường loại 1
 
 [www.lazada.vn]
 match = -85.7%%
@@ -129,7 +129,7 @@ url = https://danacity.com/chon-tham-trai-san-giuong-ngu-theo-phong-thuy-cho-tun
 [noithatcaco.vn]
 match = -95.2%%
 title = Giường ngủ hiện đại đẹp giá rẻ 100+ mẫu mới 09/2024
-url = https://noithatcaco.vn/collections/giuong-ngu?srsltid=AfmBOooArjnGmf_AStEuKJOV5JJm_yU0Una9-jgFbUQf4LbH8wy0--5X
+url = https://noithatcaco.vn/collections/giuong-ngu
 
 [danacity.com.vn]
 match = -42.9%%
