--- a/images/tui-korea-16/config.ini
+++ b/images/tui-korea-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-korea-16.html
 lastopen = 2024-06-17 10:42:33
 
 [search]
-lastsearch = 2024-08-09 12:17:24
+lastsearch = 2024-08-09 13:21:00
 
 [www.cfd-online.com]
 match = -266.7%%
@@ -34,12 +34,12 @@ url = https://embraer.com/global/en/news?slug=1207114-tui-selects-embraer-e195-e
 [davidtrubridge.com]
 match = -200.0%%
 title = Tūī
-url = https://davidtrubridge.com/global/lighting/tui
+url = https://davidtrubridge.com/au/lighting/tui
 
 [www.linkedin.com]
-match = -50.0%%
-title = Tui Allen - Ticketmaster
-url = https://www.linkedin.com/in/tuiallen
+match = 10.0%%
+title = TUI's Post
+url = https://www.linkedin.com/posts/tuigroup_???-???-????-????-the-activity-7169328748431925248-2RWQ
 
 [www.diepxuan.com]
 match = -133.3%%
@@ -107,9 +107,9 @@ title = TUI Hotels & Resorts shares green recommendations to ...
 url = https://www.ttgasia.com/2023/06/16/tui-hotels-resorts-shares-green-recommendations-to-drive-sustainable-hospitality/
 
 [www.tui.co.uk]
-match = 36.4%%
-title = tui sitemap
-url = https://www.tui.co.uk/sitemap
+match = -250.0%%
+title = TUI.co.uk | Holidays, Flights & Cruises 2024 / ...
+url = https://www.tui.co.uk/
 
 [maritime-executive.com]
 match = -316.7%%
