--- a/images/tui-singapore14/config.ini
+++ b/images/tui-singapore14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tui-singapore14.html
 lastopen = 2024-06-17 10:45:32
 
 [search]
-lastsearch = 2024-08-09 10:01:55
+lastsearch = 2024-08-09 13:30:06
 
 [www.tui.co.uk]
-match = -20.0%%
-title = Find & Book Flights
-url = https://www.tui.co.uk/flight/
+match = -153.3%%
+title = Where We Fly | Flights with TUI 2024 / ...
+url = https://www.tui.co.uk/flight/where-we-fly
 
 [cruisepanda.com]
 match = -213.3%%
