--- a/images/bo-chan-ga-goi-sini-co-hop-2-18/config.ini
+++ b/images/bo-chan-ga-goi-sini-co-hop-2-18/config.ini
@@ -4,22 +4,22 @@ url = https://www.diepxuan.com/bo-chan-ga-goi-sini-co-hop-2-18.html
 lastopen = 2024-06-09 23:47:13
 
 [search]
-lastsearch = 2024-08-09 11:48:40
+lastsearch = 2024-08-09 13:42:00
 
 [chanrathanhthuy.com]
-match = -9.7%%
-title = Nên chọn màu sắc chăn ga gối đệm theo tuổi chồng hay vợ
-url = https://chanrathanhthuy.com/tin-tuc/nen-chon-mau-sac-chan-ga-goi-dem-theo-tuoi-chong-hay-vo-1273.html
+match = -3.2%%
+title = Bí quyết chọn màu sắc chăn ga gối đệm hợp phong thủy
+url = https://chanrathanhthuy.com/hoat-dong-cong-ty/bi-quyet-chon-mau-sac-chan-ga-goi-dem-hop-phong-thuy-1400.html
 
 [demxanh.com]
 match = 38.7%%
-title = Bộ chăn ga gối Singapore King Luxury KL2418
-url = https://demxanh.com/bo-chan-ga-goi-singapore-king-luxury-kl2418.html
+title = Chăn ga gối Singapore lụa 5 món L5M18
+url = https://demxanh.com/chan-ga-goi-singapore-lua-5-mon-l5m18.html?srsltid=AfmBOorrV_O2jO83tmcSbgQiuRpmZr3nbCDhuuKNQsnVulRv8re7yZ1l
 
 [songhongonline.vn]
-match = 53.8%%
-title = Bộ chăn ga gối SH_UT23 028
-url = https://songhongonline.vn/products/nhan-ban-tu-bo-chan-ga-goi-sh-ut23-032
+match = 50.0%%
+title = Bộ chăn ga gối SH_UT24 203
+url = https://songhongonline.vn/products/bo-chan-ga-goi-sh-ut24-203
 
 [changagoidemsonghong.com]
 match = 9.7%%
@@ -29,7 +29,7 @@ url = https://changagoidemsonghong.com/chan-ga-goi-te19-09
 [foreverbedding.net]
 match = -3.2%%
 title = Màu Sắc Chăn Ga Gối Đệm Phong Thủy Cho Người Mệnh Hỏa
-url = https://foreverbedding.net/mau-sac-chan-ga-goi-dem-phong-thuy-cho-nguoi-menh-hoa
+url = https://foreverbedding.net/mau-sac-chan-ga-goi-dem-phong-thuy-cho-nguoi-menh-hoa?srsltid=AfmBOopOT7Rzn1wulGQ8IUR3mGTi02Be-TdeDdNIiLcycV9Up7eCugVL
 
 [shopee.vn]
 match = -12.9%%
@@ -54,7 +54,7 @@ url = https://ru9.vn/blogs/magazine/cac-mau-chan-ga-goi-dem
 [everonvn.com.vn]
 match = -19.4%%
 title = Kích thước đệm giường đơn tiêu chuẩn là bao nhiêu?
-url = https://everonvn.com.vn/tin-tuc/196/kich-thuoc-giuong-dem-tieu-chuan-va-chan-ga-goi-la-bao-nhieu-
+url = https://everonvn.com.vn/tin-tuc/196/kich-thuoc-giuong-dem-tieu-chuan-va-chan-ga-goi-la-bao-nhieu-?srsltid=AfmBOop2Dkzy4OP3KqnYA_fXuF3653MKwMb9Hj3wDba_kkXlNy9QAORa
 
 [lizd.vn]
 match = 0.0%%
