--- a/images/chieu-dieu-hoa-khong-goi-15/config.ini
+++ b/images/chieu-dieu-hoa-khong-goi-15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-khong-goi-15.html
 lastopen = 2024-06-09 23:41:33
 
 [search]
-lastsearch = 2024-08-09 11:41:57
+lastsearch = 2024-08-09 13:49:11
 
 [demxanh.com]
 match = 0.0%%
@@ -22,9 +22,9 @@ title = Chiếu Điều Hoà Sợi Mây Tơ Tằm Mát Lạnh Không Gối ...
 url = https://shopee.vn/Chiếu-Điều-Hoà-Sợi-Mây-Tơ-Tằm-Mát-Lạnh-Không-Gối-Cao-Cấp-Chiếu-Có-Chun-Cài-Góc-Hàng-Loại-1-i.529742790.25073007553
 
 [foreverbedding.net]
-match = -59.3%%
-title = Những Thông Tin Cần Biết Khi Mua Chiếu Điều Hoà Cao Su ...
-url = https://foreverbedding.net/chieu-dieu-hoa-cao-su-non-la-gi
+match = 0.0%%
+title = Nằm Chiếu Điều Hòa Có Mát Không? - Forever Bedding
+url = https://foreverbedding.net/nam-chieu-dieu-hoa-co-mat-khong
 
 [congtynemthangloi.com]
 match = -29.6%%
@@ -37,9 +37,9 @@ title = Chiếu điều hòa có mát không? Review 10 ...
 url = https://tiki.vn/blog/chieu-dieu-hoa/
 
 [kyoryo.vn]
-match = -40.7%%
-title = Top 3 loại chiếu điều hòa cao cấp nhất thị trường - Kyoryo
-url = https://kyoryo.vn/tin-tuc/top-3-loai-chieu-dieu-hoa-cao-cap-nhat-thi-truong-.html
+match = 18.5%%
+title = Chiếu (Ga) Điều Hòa Viscose mát - Kyoryo
+url = https://kyoryo.vn/chieu-cao-cap/chieu-dieu-hoa-viscose.html
 
 [suongtuyet.com]
 match = 18.5%%
@@ -63,8 +63,8 @@ url = https://www.youtube.com/watch?v=-ddYMCa_58o
 
 [sieuthidem.vn]
 match = 22.2%%
-title = Bộ chiếu điều hoà Tencel TC05 - Hà Nội
-url = https://sieuthidem.vn/san-pham/bo-chieu-dieu-hoa-tencel-tc05/
+title = Bộ chiếu điều hoà Tencel TC01 - Hà Nội
+url = https://sieuthidem.vn/san-pham/bo-chieu-dieu-hoa-tencel-tc01/
 
 [fptshop.com.vn]
 match = 0.0%%
