--- a/images/chieu-gap-dai-loan-lua-12/config.ini
+++ b/images/chieu-gap-dai-loan-lua-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-lua-12.html
 lastopen = 2024-06-09 22:43:24
 
 [search]
-lastsearch = 2024-08-09 06:49:49
+lastsearch = 2024-08-09 13:40:38
 
 [tiki.vn]
 match = 16.0%%
@@ -17,9 +17,9 @@ title = Phim MAI của Trấn Thành sẽ được khởi chiếu tại Đài Lo
 url = https://www.tiktok.com/@danghoaly86/video/7348795087473609989
 
 [shopee.vn]
-match = -8.0%%
-title = BẢN LỀ GẬP THÔNG MINH ĐÀI LOAN CHỊU LỰC 80KG
-url = https://shopee.vn/BẢN-LỀ-GẬP-THÔNG-MINH-ĐÀI-LOAN-CHỊU-LỰC-80KG-LOẠI-CAO-CẤP-INOX-BẢN-DÀY-CHẮC-CHẮN-GIÁ-ĐỠ-GẤP-BÀN-TREO-TƯỜNG-XẾP-GỌN-i.120824980.3158643972
+match = -28.0%%
+title = Chiếu cói tự nhiên kiểu gập đôi cao cấp Đài Loan.
+url = https://shopee.vn/Chiếu-cói-tự-nhiên-kiểu-gập-đôi-cao-cấp-Đài-Loan.-i.17414239.5745968545
 
 [congly.vn]
 match = -72.0%%
@@ -32,9 +32,9 @@ title = 20231212 Bản tin tiếng Việt PTS Đài Loan 公視越南語新聞 .
 url = https://www.facebook.com/ptsvietnamesenews/videos/20231212-bản-tin-tiếng-việt-pts-đài-loan-公視越南語新聞/1378308362826085/
 
 [vi.wikipedia.org]
-match = -4.0%%
-title = Đài Loan – Wikipedia tiếng Việt
-url = https://vi.wikipedia.org/wiki/Đài_Loan
+match = 6.7%%
+title = Địa lý Đài Loan
+url = https://vi.wikipedia.org/wiki/Địa_lý_Đài_Loan
 
 [www.roc-taiwan.org]
 match = -44.0%%
