--- a/images/chieu-truc-den-khong-vien-lson-15/config.ini
+++ b/images/chieu-truc-den-khong-vien-lson-15/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-truc-den-khong-vien-lson-15.html
 lastopen = 2024-06-07 00:20:03
 
 [search]
-lastsearch = 2024-08-09 12:15:56
+lastsearch = 2024-08-09 13:40:17
 
 [demxanh.com]
 match = 42.4%%
 title = Chiếu Trúc cao cấp hạt Đen - Hà Nội
-url = https://demxanh.com/chieu-truc-den.html?srsltid=AfmBOorRYVWSKOP32MaRaifeGO5hULP3vtLrX1LfknWkR1W148gGfKKS
+url = https://demxanh.com/chieu-truc-den.html
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -38,8 +38,8 @@ url = https://www.youtube.com/watch?v=XsFS_4Jr5lc
 
 [shopee.vn]
 match = 6.1%%
-title = [Rẻ nhất Shopee] - Chiếu trúc hạt đen không viền
-url = https://shopee.vn/-Rẻ-nhất-Shopee-Chiếu-trúc-hạt-đen-không-viền-i.142932742.11103566495
+title = Chiếu trúc - Giá Tốt, Miễn Phí Vận Chuyển, Đủ Loại
+url = https://shopee.vn/list/chiếu/trúc
 
 [chieutrucxinh.weebly.com]
 match = -9.1%%
