--- a/images/ga-ni-long-18/config.ini
+++ b/images/ga-ni-long-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-ni-long-18.html
 lastopen = 2024-06-09 23:39:01
 
 [search]
-lastsearch = 2024-08-09 09:21:31
+lastsearch = 2024-08-09 13:39:33
 
 [www.zillow.com]
 match = -115.4%%
@@ -132,9 +132,9 @@ title = CDL Licensing Information FAQs | Georgia Department of ...
 url = https://dds.georgia.gov/cdl-licensing-information-faqs
 
 [twitter.com]
-match = -92.3%%
-title = Shahzad Gani 🍉 (@shahzadgani) ...
-url = https://twitter.com/shahzadgani?lang=en
+match = -69.2%%
+title = dargandhi123 - Darwish Gani
+url = https://twitter.com/dargandhi123
 
 [kidshealth.org]
 match = 0.0%%
@@ -147,9 +147,9 @@ title =
 url = https://georgia.gov/request-immunization-records
 
 [www.instagram.com]
-match = -261.5%%
-title = Jacq Gani (@gainswithjacq) • Instagram photos and videos
-url = https://www.instagram.com/gainswithjacq/?hl=en
+match = -61.5%%
+title = NEETI MOHAN (@neetimohan18)
+url = https://www.instagram.com/neetimohan18/?hl=en
 
 [www.mariettaga.gov]
 match = -84.6%%
