--- a/images/ga-phu-es1804-160x200/config.ini
+++ b/images/ga-phu-es1804-160x200/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/ga-phu-es1804-160x200.html
 lastopen = 2024-07-01 16:45:20
 
 [search]
-lastsearch = 2024-08-09 11:16:24
+lastsearch = 2024-08-09 13:56:02
 
 [everonvn.com.vn]
 match = -133.3%%
 title = Bảng giá bán bộ chăn ga gối Everon Es1807 - Serenity màu ...
-url = https://everonvn.com.vn/everon/611/bo-everon-es1807?srsltid=AfmBOoo2z7Wk8c6QWUAusKpqlgf225OY_dyl4PzfsWdhJHHrYIdjrG1E
+url = https://everonvn.com.vn/everon/611/bo-everon-es1807
 
 [www.everonqb.com]
 match = -9.5%%
@@ -19,16 +19,16 @@ url = https://www.everonqb.com/ga-phu-epm19043-180x200.html
 [www.diepxuan.com]
 match = -19.0%%
 title = Chiếu cây HT 150x190 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-cay-ht-150x190.html?srsltid=AfmBOoorzkv-5_QFZ2z8lk_-ZjxShSQo4g6Vp7Fg3as0rre2_pIXUfC5
+url = https://www.diepxuan.com/chieu-cay-ht-150x190.html
 
 [muathongminh.vn]
-match = -142.9%%
-title = Trọn bộ chăn ga gối satin poly 7 món ga phủ trần bông ...
-url = https://muathongminh.vn/tron-bo-chan-ga-goi-satin-poly-7-mon-ga-phu-tran-bong-koseul-san-hang-p.1__7418213403__16397825
+match = -66.7%%
+title = Bộ chăn bốn mùa ga phủ vỏ gối EVERON ESM21011
+url = https://muathongminh.vn/bo-chan-bon-mua-ga-phu-vo-goi-everon-esm21011-p.1__5442067327__7352455
 
 [beecost.vn]
-match = -176.2%%
-title = Lịch sử giá Srm set chăn ga gối 5 món cotton living drap hàn ...
+match = -147.6%%
+title = Srm set chăn ga gối 5 món cotton living drap hàn quốc ...
 url = https://beecost.vn/srm-set-chan-ga-goi-5-mon-cotton-living-drap-han-quoc-ga-phu-giuong-chan-bong-day-cao-cap-he-thong-n-p.1__9631034161__146302121
 
 [www.reef2reef.com]
