--- a/images/ruot-nem-korea-9f-16-20/config.ini
+++ b/images/ruot-nem-korea-9f-16-20/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-16-20.html
 lastopen = 2024-06-10 00:40:18
 
 [search]
-lastsearch = 2024-08-09 11:23:03
+lastsearch = 2024-08-09 13:53:36
 
 [www.reddit.com]
 match = -104.3%%
@@ -282,9 +282,9 @@ title = Introduction
 url = https://www.degruyter.com/document/doi/10.1515/9780824887964-013/pdf?licenseType=restricted
 
 [en.yna.co.kr]
-match = -69.6%%
-title = (EDITORIAL from Korea JoongAng Daily on April 6) ...
-url = https://en.yna.co.kr/view/AEN20180406000600320
+match = -117.4%%
+title = (2nd LD) PM: THAAD deployment 'difficult yet inevitable ...
+url = https://en.yna.co.kr/view/AEN20170907001852315
 
 [lol.fandom.com]
 match = 0.0%%
@@ -615,4 +615,9 @@ url = https://www.mycouriertribune.com/lifestyles/entertainment/big-brother-snea
 match = -82.6%%
 title = Advancing the Esports and Player Experience in MENA
 url = https://www.riotgames.com/en/news/riot-games-mena-players
+
+[www.oregon.gov]
+match = -13.0%%
+title = NCIC Code Manual as of March 31, 2021
+url = https://www.oregon.gov/osp/Docs/NCICCodeManual.pdf
 
