--- a/images/tui-nem-korea-tuan-anh-14/config.ini
+++ b/images/tui-nem-korea-tuan-anh-14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tui-nem-korea-tuan-anh-14.html
 lastopen = 2024-06-17 10:43:32
 
 [search]
-lastsearch = 2024-08-09 10:43:54
+lastsearch = 2024-08-09 13:48:52
 
 [suongtuyet.com]
-match = 16.0%%
-title = Nệm Bông Ép Tuấn Anh Korea Cotton
-url = https://suongtuyet.com/nem-bong-ep-tuan-anh-korea-kaki
+match = -4.0%%
+title = Nệm Gòn Ép Tuấn Anh Korea Plus Vải Gấm
+url = https://suongtuyet.com/nem-gon-ep-tuan-anh-korea-plus-vai-gam
 
 [tuananh.vn]
 match = 12.0%%
@@ -19,7 +19,7 @@ url = https://tuananh.vn/dem-bong-ep-korea-gam--p110.html
 [demxanh.com]
 match = -72.0%%
 title = Đệm bông ép Tuấn Anh chính hãng giá tốt nhất thị trường!
-url = https://demxanh.com/dem-bong-ep-tuan-anh.html?srsltid=AfmBOopggSMKPLDLArCC4nMl_PC_J8i3sYBA7vDFU0hvgzYJ9UeiyI3A
+url = https://demxanh.com/dem-bong-ep-tuan-anh.html?srsltid=AfmBOoowni66Yp0lns-i2vRaTzsqqgpENtH5RXRIKPPOYTPTVxih-Q4y
 
 [shopee.vn]
 match = -40.0%%
@@ -49,7 +49,7 @@ url = https://dem24h.vn/dem-bong-ep-korea-vai-cotton
 [demviethome.vn]
 match = -4.0%%
 title = Đệm Bông Ép Tuấn Anh 3 Mảnh Korea Gấm
-url = https://demviethome.vn/dem-bong-ep-tuan-anh-3-manh-korea-gam/
+url = https://demviethome.vn/dem-bong-ep-tuan-anh-3-manh-korea-gam/?srsltid=AfmBOorwI42QfAEyHQTwR7kLYbpxrFWNs8fZGkAycH-G4P7N-JG6uwOg
 
 [bedding.vn]
 match = -76.0%%
