--- a/images/vo-goi-ks-uc-50-70/config.ini
+++ b/images/vo-goi-ks-uc-50-70/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-goi-ks-uc-50-70.html
 lastopen = 2024-06-10 00:52:12
 
 [search]
-lastsearch = 2024-08-09 11:50:46
+lastsearch = 2024-08-09 13:39:11
 
 [www.lazada.vn]
 match = -27.8%%
@@ -14,7 +14,7 @@ url = https://www.lazada.vn/tag/vo-goi-50x70-trang/
 [ru9.vn]
 match = -38.9%%
 title = Bật Mí: Vỏ Gối Khách Sạn Dùng Loại Gì?
-url = https://ru9.vn/blogs/magazine/vo-goi-khach-san-dung-la-loai-gi
+url = https://ru9.vn/blogs/magazine/vo-goi-khach-san-dung-la-loai-gi?srsltid=AfmBOorNIhpD0WrsNteQzckVeaBy5AMH_csQQsT1SvxP1Nxd6vEs1UXE
 
 [www.diepxuan.com]
 match = -55.6%%
@@ -49,7 +49,7 @@ url = {search_url}
 [ninhouse.vn]
 match = 44.4%%
 title = Vỏ gối nằm Classic
-url = https://ninhouse.vn/collections/vo-goi-nam-classic
+url = https://ninhouse.vn/collections/vo-goi-nam-classic?srsltid=AfmBOor0pEw_DFUo6MKtJB8pNc9tKLqlPFByyfNGXFni0z19mhs8XlqQ
 
 [tonybed.vn]
 match = 22.2%%
@@ -89,7 +89,7 @@ url = https://thegioidemviet.vn/vo-goi-khach-san/
 [demxanh.com]
 match = -155.6%%
 title = Chuyên các sản phẩm vỏ gối chính hãng giá rẻ nhất Hà Nội
-url = https://demxanh.com/vo-goi.html
+url = https://demxanh.com/vo-goi.html?srsltid=AfmBOopGBpcstA-ad80-EtbNoSTP0FtRBDABkvgXnNHGJtdPTniZqJ2J
 
 [templeshalom.ca]
 match = 0.0%%
@@ -385,4 +385,9 @@ url = https://changmibedding.com/vo-goi-nam/
 match = 38.9%%
 title = Vỏ gối Ngọc Hạnh 50*70cm
 url = https://online.mmvietnam.com/san-pham/mm-rach-gia/vo-goi-ngoc-hanh-50x70cm-3/
+
+[ndma.gov.in]
+match = -38.5%%
+title = ndmp-2019.pdf
+url = https://ndma.gov.in/sites/default/files/PDF/ndmp-2019.pdf
 
