CI images update

--- a/images/tui-warmdream-18/config.ini
+++ b/images/tui-warmdream-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-warmdream-18.html
 lastopen = 2024-06-10 00:27:15
 
 [search]
-lastsearch = 2024-08-09 12:36:57
+lastsearch = 2024-08-09 14:03:33
 
 [www.walmart.com]
 match = -162.5%%
@@ -12,9 +12,9 @@ title = Zury Natural Dream Multi Yaky 18" 20" 22", SOM RT BURG
 url = https://www.walmart.com/ip/Zury-Natural-Dream-Multi-Yaky-18-20-22-SOM-RT-BURG/652131534
 
 [www.tiktok.com]
-match = -25.0%%
-title = Simple Xiangling Build
-url = https://www.tiktok.com/discover/simple-xiangling-build
+match = -6.2%%
+title = Dvorak Genshin Bpc
+url = https://www.tiktok.com/discover/dvorak-genshin-bpc?lang=en
 
 [www.diepxuan.com]
 match = -162.5%%
@@ -250,4 +250,9 @@ url = https://www.dmrw859.com/blog/vljjrwrj-233/
 match = -187.5%%
 title = tui warmdream 16 - TUI BLUE Sensatori Atlantica Dreams in ...
 url = https://hkmahui88.com/blog/vljjrwrj-233/
+
+[lolprofile.net]
+match = -87.5%%
+title = Live Games - League of Legends - AR
+url = https://lolprofile.net/ar/livegames/hastad
 
