--- a/images/chan-hoi-mai-rua/config.ini
+++ b/images/chan-hoi-mai-rua/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-hoi-mai-rua.html
 lastopen = 2024-06-09 23:40:13
 
 [search]
-lastsearch = 2024-08-09 09:50:50
+lastsearch = 2024-08-09 14:04:30
 
 [shopee.vn]
 match = 56.2%%
@@ -117,8 +117,8 @@ title = Những Vấn Đề Cần Biết về "Hôi Chân"
 url = https://medcare.com.vn/nhung-van-de-can-biet-ve-hoi-chan/
 
 [kodo.vn]
-match = -206.2%%
-title = 12 cách khử mùi hôi chân tức thì chỉ với 5 phút tại nhà - Kodo
+match = -162.5%%
+title = 12 cách khử mùi hôi chân tức thì chỉ với 5 phút tại nhà
 url = https://kodo.vn/cach-khu-mui-hoi-chan/
 
 [www.nitrc.org]
@@ -279,7 +279,7 @@ url = https://www.christies.com/en/lot/lot-5751621
 [leflair.com]
 match = -131.2%%
 title = Nước rửa chân khử mùi hôi, ngăn ngừa nấm HAKINI...
-url = https://leflair.com/en/shop/nuoc-rua-chan-khu-mui-hoi-ngan-ngua-nam-hakinika-98798
+url = https://leflair.com/en/shop/nuoc-rua-chan-khu-mui-hoi-ngan-ngua-nam-hakinika-98798?srsltid=AfmBOorGp8N829UneOkYZ1hyfS_GgCVCxRhfXcS6qG2ctsgKe1U7IMNR
 
 [olm.vn]
 match = -93.8%%
