--- a/images/chieu-lac-d2-10/config.ini
+++ b/images/chieu-lac-d2-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-10.html
 lastopen = 2024-06-21 02:07:26
 
 [search]
-lastsearch = 2024-08-09 13:21:40
+lastsearch = 2024-08-09 13:58:59
 
 [zhangbrickshop.com]
 match = -133.3
@@ -107,9 +107,9 @@ title = Cách giải bài tập Sai số các đại lượng vật lí trong th
 url = https://vietjack.com/vat-ly-lop-12/sai-so-cac-dai-luong-vat-li-trong-thi-nghiem-dao-dong-dieu-hoa.jsp
 
 [www.facebook.com]
-match = -106.7%%
-title = Busan Korean Food | Ho Chi Minh City
-url = https://www.facebook.com/Busan.Korean.Food/?locale=vi_VN
+match = -26.7%%
+title = Du học Hàn Quốc - ANIDO
+url = https://www.facebook.com/duhochanquoc.anido/posts/tin-vui-cho-du-học-sinh-d2-d10-có-thể-xin-visa-cư-trú-tại-10-tỉnh-thành-của-hq-n/722079063361574/
 
 [hoc247.vn]
 match = -213.3%%
@@ -289,7 +289,7 @@ url = https://rentapartment.vn/vietnam-zip-postal-code/
 [alphardaudio.us]
 match = -100.0%%
 title = Machete ML-10S D2 10" 600W MAX Subwoofer
-url = https://alphardaudio.us/products/machete-ml-10s-d2-subwoofer?srsltid=AfmBOop7524_wHFd42q4X0YcuRFKYBYjU-dvM6YR86rCOJHN2ljN-AsP
+url = https://alphardaudio.us/products/machete-ml-10s-d2-subwoofer
 
 [www.handspan.com]
 match = -126.7%%
