--- a/images/chieu-truc-den-khong-vien-18/config.ini
+++ b/images/chieu-truc-den-khong-vien-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-den-khong-vien-18.html
 lastopen = 2024-06-07 00:19:24
 
 [search]
-lastsearch = 2024-08-09 10:24:09
+lastsearch = 2024-08-09 13:56:32
 
 [chieutrelanlan.com]
 match = 0.0%%
@@ -42,9 +42,9 @@ title = Chiếu trúc hạt đen có viền
 url = https://tongkhonem.com/san-pham/chieu-truc-hat-den-co-vien/
 
 [www.sendo.vn]
-match = -10.7%%
-title = Chiếu trúc đen không viền hàng việt nam cao cấp 1m2x2m ...
-url = https://www.sendo.vn/chieu-truc-den-khong-vien-hang-viet-nam-cao-cap-1m2x2m-duo-c-kie-m-ha-ng-31921335-117250615.html
+match = 7.1%%
+title = Chiếu trúc hạt đen cao cấp không viền 1m8x2m [Được ...
+url = https://www.sendo.vn/chieu-truc-hat-den-cao-cap-khong-vien-1m8x2m-duo-c-kie-m-ha-ng-19203105-117572088.html?source_block_id=feed&source_page_id=search&source_info=pwa_60_1722729600324_undefined_-1_cateLvl2_0_96_23_-1
 
 [chanrathanhthuy.com]
 match = -3.6%%
@@ -62,9 +62,9 @@ title = Chiếu trúc mắt mai không viền màu vàng 120x190cm
 url = https://noithatbamboo.vn/chieu-truc-hat-1m2/chieu-truc-mat-mai-khong-vien-mau-vang-120x190cm.html
 
 [www.lazada.vn]
-match = -25.0%%
-title = Chiếu trúc rộng 1m dài 1,9m hạt nâu không viền hàng Việt ...
-url = https://www.lazada.vn/products/chieu-truc-rong-1m-dai-19m-hat-nau-khong-vien-hang-viet-nam-i281846554.html
+match = 3.6%%
+title = 1m8 x 1m9 - Chiếu trúc Cao cấp Hạt đen
+url = https://www.lazada.vn/products/1m8-x-1m9-khong-vien-chieu-tre-chieu-truc-cao-cap-hat-den-i280812352.html
 
 [chieutrucsaigon.com]
 match = 42.9%%
