--- a/images/man-tu-bung-20-22/config.ini
+++ b/images/man-tu-bung-20-22/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/man-tu-bung-20-22.html
 lastopen = 2024-06-09 23:31:04
 
 [search]
-lastsearch = 2024-08-09 06:19:31
+lastsearch = 2024-08-09 14:05:10
 
 [www.bible.com]
-match = -100.0%%
-title = MATHAIA 20 | MIZCLBSI Bible | YouVersion
-url = https://www.bible.com/bible/1048/MAT.20.MIZCLBSI
+match = -88.2%%
+title = LUKA 22 | MIZCLBSI Bible | YouVersion
+url = https://www.bible.com/bible/1048/LUK.22.MIZCLBSI
 
 [mizobibleblog.wordpress.com]
 match = -123.5%%
@@ -29,7 +29,7 @@ url = https://mungchup.com/
 [munghoangphat.com]
 match = -88.2%%
 title = Mùng chụp tự bung ĐỈNH VUÔNG không viền chân
-url = https://munghoangphat.com/mung-chup-tu-bung-dinh-vuong-khong-vien-chan-vien-xanh.html
+url = https://munghoangphat.com/mung-chup-tu-bung-dinh-vuong-khong-vien-chan-vien-hong.html
 
 [www.churchofjesuschrist.org]
 match = -205.9%%
