--- a/images/nem-everhome-tc-16-20/config.ini
+++ b/images/nem-everhome-tc-16-20/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-everhome-tc-16-20.html
 lastopen = 2024-06-09 23:43:18
 
 [search]
-lastsearch = 2024-08-09 10:55:45
+lastsearch = 2024-08-09 14:00:00
 
 [www.sieuthinem.com]
 match = -28.6%%
@@ -12,9 +12,9 @@ title = NỆM CAO SU THIÊN NHIÊN EVERHOME - DELUXE
 url = https://www.sieuthinem.com/ct-san-pham/273/nem-cao-su-thien-nhien-everhome-deluxe-sieu-thi-nem-com.html
 
 [demxanh.com]
-match = -14.3%%
-title = Đệm bông ép Everhome 2m giá bao nhiêu?
-url = https://demxanh.com/dem-bong-ep-everhome-2m-gia-bao-nhieu.html?srsltid=AfmBOooIS9w-t4tHhVYMfLk_Qs1xUi_uY-9JkOLAoE3N0scbFIN1msfO
+match = -19.0%%
+title = Đệm bông ép chính hãng giảm 50 ...
+url = https://demxanh.com/dem-bong-ep.html
 
 [www.ebay.com]
 match = -100.0%%
@@ -39,7 +39,7 @@ url = https://thegioidemviet.vn/dem-hanvico/
 [www.diepxuan.com]
 match = 23.8%%
 title = Nệm everhome TC 15F 16 20 - Điệp Xuân
-url = https://www.diepxuan.com/nem-everhome-tc-15f-16-20.html?srsltid=AfmBOor6iAjz-SXRDDe68sKi-cG3BuG6kLEOH2O7_0SNVHj9TFXDbWfm
+url = https://www.diepxuan.com/nem-everhome-tc-15f-16-20.html
 
 [bachhoadem.vn]
 match = 28.6%%
@@ -54,7 +54,7 @@ url = https://demsingapore.com/dem-bong-ep-everhome-vo-tc.html
 [demviethome.vn]
 match = -52.4%%
 title = Tổng kho đệm bông ép chính hãng tại Hà Nội
-url = https://demviethome.vn/dem-bong-ep/?srsltid=AfmBOoqHTAxpFrhABbvJaQiCfQkv-p3gGoeRf6Sb5Ghf-sJuTRminhRx
+url = https://demviethome.vn/dem-bong-ep/
 
 [www.tiktok.com]
 match = -95.2%%
