--- a/images/ruot-goi-ke-re/config.ini
+++ b/images/ruot-goi-ke-re/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-goi-ke-re.html
 lastopen = 2024-06-10 01:04:04
 
 [search]
-lastsearch = 2024-08-09 11:56:04
+lastsearch = 2024-08-09 13:51:38
 
 [www.thanhthuyhanh.com]
 match = -50.0%%
@@ -14,7 +14,7 @@ url = https://www.thanhthuyhanh.com/products/ruot-goi-nam-dream-zone
 [ninhouse.vn]
 match = -171.4%%
 title = Ruột gối nằm giá rẻ NIN House chính hãng tại Tphcm
-url = https://ninhouse.vn/collections/ruot-goi-1?srsltid=AfmBOoqk78HjZSi6XMJCnCWS7Cj3eidXqnKF5VB9vDnliAqGeDXndFt2
+url = https://ninhouse.vn/collections/ruot-goi-1
 
 [elambo.vn]
 match = -142.9%%
@@ -34,7 +34,7 @@ url = https://changagoidemsonghong.online/ruot-chan-ruot-goi-song-hong.html
 [demxanh.com]
 match = -150.0%%
 title = Ruột gối chính hãng giá khuyến mãi rẻ nhất Hà Nội
-url = https://demxanh.com/ruot-goi.html?srsltid=AfmBOorTklM6OL2lDz5W2BNkrJplwOvPTqx1YybldDwB_iazyFM86F_4
+url = https://demxanh.com/ruot-goi.html
 
 [www.diepxuan.com]
 match = -100.0%%
@@ -64,7 +64,7 @@ url = https://jysk.vn/ruot-chan-goi?srsltid=AfmBOooQ0SoHVTQnh6j872YJMuBE0UW3P-Rq
 [everonvn.com.vn]
 match = -164.3%%
 title = Bảng Giá Ruột Gối Đầu Everon Chính Hãng Hàn Quốc
-url = https://everonvn.com.vn/5/ruot-goi-everon?srsltid=AfmBOop0fOuyi8QrAX_cp47suMOSSDUxfSH1JtHxUc4bVf7QZ1M_jvut
+url = https://everonvn.com.vn/5/ruot-goi-everon
 
 [demsonghonghanoi.com]
 match = -235.7%%
@@ -72,9 +72,9 @@ title = Ruột gối Sông Hồng chính hãng giá rẻ nhất thị trường 
 url = https://demsonghonghanoi.com/ruot-goi-song-hong/
 
 [shopee.vn]
-match = -121.4%%
-title = ruột gối giá tốt Tháng 8, 2024 | Mua ngay
-url = https://shopee.vn/search?keyword=ruột gối
+match = -157.1%%
+title = Ruột gối - Giá Tốt, Miễn Phí Vận Chuyển, Đủ Loại
+url = https://shopee.vn/list/ruột gối
 
 [www.changagoidemeveron.vn]
 match = -78.6%%
@@ -89,7 +89,7 @@ url = https://tiki.vn/ruot-goi-ruot-chan/c6724
 [ru9.vn]
 match = -171.4%%
 title = Kinh Nghiệm Nên Mua Ruột Gối Loại Nào Để Ngủ Ngon
-url = https://ru9.vn/blogs/magazine/nen-mua-ruot-goi-loai-nao?srsltid=AfmBOoruc6QT5-y1rWCyJFMnc3eImDTqrB14u1zvHNBaoHduNjphmRuD
+url = https://ru9.vn/blogs/magazine/nen-mua-ruot-goi-loai-nao
 
 [www.nguonhangsigiare.com.vn]
 match = -235.7%%
