--- a/images/tham-giuong-ii-180x200/config.ini
+++ b/images/tham-giuong-ii-180x200/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-giuong-ii-180x200.html
 lastopen = 2024-06-17 21:09:53
 
 [search]
-lastsearch = 2024-08-09 04:25:43
+lastsearch = 2024-08-09 14:02:50
 
 [www.diepxuan.com]
 match = 50.0%%
@@ -12,9 +12,9 @@ title = Điệp Xuân Thảm giường nỉ 180x200
 url = https://www.diepxuan.com/tham-giuong-ni-180x200.html
 
 [demxanh.com]
-match = -22.7%%
-title = Thảm trải giường lông cừu TLC 06 - Hà Nội
-url = https://demxanh.com/tham-trai-giuong-long-cuu-tlc-06.html
+match = 0.0%%
+title = Thảm trải giường cao su non màu ghi
+url = https://demxanh.com/tham-trai-giuong-cao-su-non-mau-ghi.html
 
 [www.lazada.vn]
 match = -68.2%%
@@ -62,9 +62,9 @@ title = Cách Tính Diện Tích, Kích Thước Các Loại ... - Ru9
 url = https://ru9.vn/blogs/magazine/cach-tinh-dien-tich-kich-thuoc-cac-loai-giuong-ngu
 
 [jysk.vn]
-match = -54.5%%
-title = Bed frame VEDDE 180x200 wild oak - JYSK.vn
-url = https://jysk.vn/en-US/bed-frame-vedde-180x200-wild-oak
+match = -68.2%%
+title = Mattress 180x200 GOLD S95 DREAMZONE - JYSK
+url = https://jysk.vn/en-US/spring-mattress-dreamzone-s95-r180xd200xc28cm
 
 [decosy.com]
 match = -50.0%%
@@ -82,9 +82,9 @@ title = Giường bọc nệm hoàng gia GK01
 url = https://nemgiakho.com/giuong-boc-nem-hoang-gia-gk01.html
 
 [dovihome.vn]
-match = -77.3%%
-title = Giường ngủ Decor có tựa đầu bọc nệm Sofa ...
-url = https://dovihome.vn/giuong-bay-ma-m30-giuong-ngu-decor-co-tua-dau-boc-nem-sofa-phong-cach-toi-gian
+match = -86.4%%
+title = Giường ngủ Decor kết hợp mây mắt cáo từ gỗ ...
+url = https://dovihome.vn/giuong-ma-dv6-giuong-ngu-decor-ket-hop-may-mat-cao-tu-go-thong-nhap-khau
 
 [decoviet.vn]
 match = 22.2%%
@@ -102,9 +102,9 @@ title = Eksternt link - Filskov Friskole
 url = https://filskovfriskole.skoleporten.dk/sp/298936/iframe?address=http://xn--e1aaa3bd0cza.xn--p1ai/95DwMiUfe43v
 
 [tonybed.com]
-match = -4.5%%
-title = Bộ Drap Ga Trải Giường Modal - 21
-url = https://tonybed.com/bo-drap-ga-trai-giuong-modal-21/
+match = -40.0%%
+title = Đầu giường
+url = https://tonybed.com/dau-giuong/
 
 [covacu.com]
 match = 28.6%%
@@ -150,4 +150,14 @@ url = https://everonvn.com.vn/tin-tuc/196/kich-thuoc-giuong-dem-tieu-chuan-va-ch
 match = -77.3%%
 title = Tổng hợp những loại thảm trải giường hot nhất năm 2023
 url = https://vuanem.com/blog/tham-trai-giuong.html
+
+[beyours.vn]
+match = -22.7%%
+title = TOP 3 SẢN PHẨM GIƯỜNG NGỦ CHẤT LƯỢNG ...
+url = https://beyours.vn/blogs/news/top-3-san-pham-giuong-ngu-chat-luong-nhat-tai-beyours
+
+[lmgworld.com]
+match = -4.5%%
+title = Giường Archives - LMG World
+url = https://lmgworld.com/danh-muc-san-pham/giuong/
 
