CI images update

--- a/images/vo-goi-ke-mau/config.ini
+++ b/images/vo-goi-ke-mau/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-goi-ke-mau.html
 lastopen = 2024-06-10 01:36:08
 
 [search]
-lastsearch = 2024-08-09 12:27:57
+lastsearch = 2024-08-09 14:27:24
 
 [ninhouse.vn]
 match = -146.2%%
@@ -24,7 +24,7 @@ url = https://www.translate.com/vietnamese-english
 [ru9.vn]
 match = -253.8%%
 title = Phân Loại Vỏ Gối Theo Chất Liệu - Ưu, Nhược Điểm Từng ...
-url = https://ru9.vn/blogs/magazine/phan-loai-vo-goi-theo-chat-lieu-uu-nhuoc-diem-tung-loai?srsltid=AfmBOooAHD2nLuNjEg40zCdX3pfORYqt_L7H6yf4tdOApGQ1XqRwwOz0
+url = https://ru9.vn/blogs/magazine/phan-loai-vo-goi-theo-chat-lieu-uu-nhuoc-diem-tung-loai
 
 [www.reddit.com]
 match = -230.8%%
@@ -205,4 +205,9 @@ url = https://www.federalpaint.com.my/home/
 match = -20.0%%
 title = eah.com.my
 url = http://www.eah.com.my/
+
+[cic.gov.in]
+match = -46.2%%
+title = CPIO Officer List Report
+url = https://cic.gov.in/sites/default/files/Rtinodalofficer_0.pdf
 
