--- a/images/bo-ga-goi-chun-xoa-16/config.ini
+++ b/images/bo-ga-goi-chun-xoa-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-goi-chun-xoa-16.html
 lastopen = 2024-06-09 23:12:29
 
 [search]
-lastsearch = 2024-08-09 13:33:07
+lastsearch = 2024-08-09 14:12:13
 
 [hanvico.com.vn]
 match = 28.6%%
@@ -19,12 +19,12 @@ url = https://songhong.info/chan-ga-goi-bc16
 [demxanh.com]
 match = -19.0%%
 title = Bộ ga gối chun Olympia chần vải Cotton Hàn 16
-url = https://demxanh.com/bo-ga-goi-chun-olympia-chan-vai-cotton-han-16.html?srsltid=AfmBOoqJx9w8EbPZs924ADx_K6lM_Hc-k9CMZi-j-Av-rizJOdyLjuBZ
+url = https://demxanh.com/bo-ga-goi-chun-olympia-chan-vai-cotton-han-16.html
 
 [foreverbedding.net]
-match = -33.3%%
-title = Bộ ga chun Velina V16 - Forever Bedding
-url = https://foreverbedding.net/bo-ga-chun-velina-v16?srsltid=AfmBOorsiLAtCbsM7xoIixgBQxZZjM6yHtuXT3ZWWyoIWId_P8VCtS6d
+match = -57.1%%
+title = Bộ ga chun chần mặt Velina V16 - Forever Bedding
+url = https://foreverbedding.net/bo-ga-chun-chan-mat-velina-v16
 
 [changagoidemsonghong.com]
 match = -38.1%%
