--- a/images/chieu-cay-cao-bang-a-16/config.ini
+++ b/images/chieu-cay-cao-bang-a-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-cao-bang-a-16.html
 lastopen = 2024-06-09 22:42:42
 
 [search]
-lastsearch = 2024-08-09 12:36:34
+lastsearch = 2024-08-09 14:21:11
 
 [shopee.vn]
 match = 4.3%%
@@ -14,7 +14,7 @@ url = https://shopee.vn/Chiếu-Trúc-Cao-Bằng-Chiếu-trúc-cá-nhân-i.81313
 [www.diepxuan.com]
 match = 26.1%%
 title = Chiếu cây Cao Bằng A 160x200 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-cay-cao-bang-a-160x200.html?srsltid=AfmBOoqRib3HO3zSvGE-AMZ64sf0gDlk7sOM2Y55VJ-hI2LlSqDp4_Fw
+url = https://www.diepxuan.com/chieu-cay-cao-bang-a-160x200.html
 
 [chuyenhangviet.com]
 match = -43.5%%
@@ -67,9 +67,9 @@ title = Độc đáo các sản phẩm từ trúc Cao Bằng
 url = https://caobang.gov.vn/viet-nam-dat-nuoc-con-nguoi/doc-dao-cac-san-pham-tu-truc-cao-bang-778155
 
 [www.facebook.com]
-match = 21.7%%
-title = Chiếu Trúc Cao Sơn Cao Bằng | Cao Bang
-url = https://www.facebook.com/chieutruccaobangcbg/
+match = -52.2%%
+title = Chiếu trúc Cao Bằng, Chiếu trúc thanh, Chiếu trúc cây
+url = https://www.facebook.com/chieutrucvietso1/
 
 [www.youtube.com]
 match = -95.7%%
