--- a/images/chieu-lac-soc-18/config.ini
+++ b/images/chieu-lac-soc-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-18.html
 lastopen = 2024-06-06 16:53:55
 
 [search]
-lastsearch = 2024-08-09 12:41:10
+lastsearch = 2024-08-09 14:27:03
 
 [scholar.google.com]
 match = -43.8%%
@@ -112,9 +112,9 @@ title = Giá vàng 9999 hôm nay tại 64 tỉnh 4/8/2024 | Bảng giá vàng
 url = https://primagold.com.vn/
 
 [www.youtube.com]
-match = -225.0%%
-title = 18 phút tập lắc vòng giảm eo,giảm mỡ bụng nhanh trong một ...
-url = https://www.youtube.com/watch?v=Z9nt7fzWvqI
+match = -218.8%%
+title = Toàn cảnh thế giới: “Chiêu mới” cao tay của ông Trump, dồn ...
+url = https://www.youtube.com/watch?v=gBx4rpDipqA
 
 [books.google.com]
 match = -156.2%%
@@ -850,4 +850,9 @@ url = https://baodienbienphu.com.vn/tin-tuc/phap-luat/217276/bo-cong-an-khoi-to-
 match = -200.0%%
 title = Trẻ 18 tháng tuổi: Phát triển chiều cao cân nặng, dinh ...
 url = https://www.huggies.com.vn/cham-soc-be/phat-trien-cua-be-qua-tung-thang/be-18-thang-tuoi
+
+[thanhnienviet.vn]
+match = -193.8%%
+title = Dàn diễn viên phim Hoa ngữ 18+ "Sắc, Giới" sau 17 năm ...
+url = https://thanhnienviet.vn/dan-dien-vien-phim-hoa-ngu-18-sac-gioi-sau-17-nam-bay-gio-ra-sao-209240408193718955.htm
 
