--- a/images/goi-om-re-to/config.ini
+++ b/images/goi-om-re-to/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/goi-om-re-to.html
 lastopen = 2024-06-10 00:44:39
 
 [search]
-lastsearch = 2024-08-09 00:34:46
+lastsearch = 2024-08-09 14:21:49
 
 [dvan.org]
 match = -41.7%%
@@ -89,7 +89,7 @@ url = https://tiki.vn/search?q=gối ôm
 [changagoidemsonghong.net]
 match = -108.3%%
 title = Gối ôm Sông Hồng Chính Hãng Giá Rẻ
-url = https://changagoidemsonghong.net/goi-om-song-hong-chinh-hang-gia-re/
+url = https://changagoidemsonghong.net/goi-om-song-hong-chinh-hang-gia-re/?srsltid=AfmBOopMquHqkY3lWi6pEAqzcgSbdvSwc2zIh4BegcYi7LRZWENmclDQ
 
 [suongtuyet.com]
 match = -58.3%%
