--- a/images/ruot-nem-korea-9f-18/config.ini
+++ b/images/ruot-nem-korea-9f-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-18.html
 lastopen = 2024-06-10 00:54:35
 
 [search]
-lastsearch = 2024-08-09 03:29:02
+lastsearch = 2024-08-09 14:16:01
 
 [en.wikipedia.org]
 match = 15.0%%
@@ -42,9 +42,9 @@ title = Recently Added Coins
 url = https://cryptoslate.com/recently-added-coins/
 
 [30rates.com]
-match = -90.0%%
-title = BITCOIN PRICE PREDICTION TOMORROW, WEEK AND ...
-url = https://30rates.com/btc-to-usd-forecast-today-dollar-to-bitcoin
+match = -125.0%%
+title = USD to PHP forecast for tomorrow, this week and month.
+url = https://30rates.com/usd-to-php-forecast-today-dollar-to-philippines-peso
 
 [www.akc.org]
 match = -45.0%%
@@ -237,9 +237,9 @@ title = The Hollowing Out of Kim Jong Un's North Korea
 url = https://carnegieendowment.org/research/2024/04/the-hollowing-out-of-kim-jong-uns-north-korea
 
 [www.usfk.mil]
-match = -20.0%%
-title = United States Forces Korea > About
-url = https://www.usfk.mil/About/Combined-Forces-Command/
+match = 11.1%%
+title = Traveling to Korea
+url = https://www.usfk.mil/Resources/Traveling-to-Korea/
 
 [www.coingecko.com]
 match = 27.8%%
@@ -522,9 +522,9 @@ title = 'Big Brother' Sneak Peek: Kimo Tells Tucker a Key Secret ...
 url = https://www.mycouriertribune.com/lifestyles/entertainment/big-brother-sneak-peek-kimo-tells-tucker-a-key-secret-video/article_1617f93a-04a3-5cec-9c37-a0657008888c.html
 
 [www.wdtn.com]
-match = -135.0%%
-title = Could another insurrection happen in January? This film ...
-url = https://www.wdtn.com/news/politics/ap-politics/ap-could-another-insurrection-happen-in-january-this-film-imagines-what-if/
+match = -130.0%%
+title = FBI: California woman brought sword, whip and other ...
+url = https://www.wdtn.com/news/politics/ap-politics/ap-fbi-california-woman-brought-sword-whip-and-other-weapons-into-capitol-during-jan-6-riot/
 
 [www.localsyr.com]
 match = -130.0%%
