--- a/images/tham-ghe-nem/config.ini
+++ b/images/tham-ghe-nem/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-ghe-nem.html
 lastopen = 2024-06-07 00:34:34
 
 [search]
-lastsearch = 2024-08-09 11:34:40
+lastsearch = 2024-08-09 14:16:39
 
 [shopee.vn]
 match = -216.7%%
@@ -59,7 +59,7 @@ url = https://nemkimcuong.vn/vi/san-pham/bo-ghe-don-model-01/
 [www.lazada.vn]
 match = -116.7%%
 title = Nệm lot ghế, thảm trải ghế 1m6 x53cm
-url = https://www.lazada.vn/products/nem-lot-ghe-tham-trai-ghe-1m6-x53cm-i2418423966.html
+url = https://www.lazada.vn/products/nem-lot-ghe-tham-trai-ghe-1m6-x53cm-i2418423966.html?srsltid=AfmBOopAykg1oQ3A1UGee8L6tTlsVXHei7Iw01JXZSkklWslXUVr_lXA
 
 [vn.my-best.com]
 match = -233.3%%
@@ -134,7 +134,7 @@ url = https://anmoc.vn/blogs/news/nem-lot-ghe-go
 [dienmaycholon.com]
 match = -200.0%%
 title = Máy Giặt Sofa, Nệm, Thảm Cầm Tay Uwant B100
-url = https://dienmaycholon.com/may-hut-bui-robot-hut-bui/may-giat-sofa-nem-tham-cam-tay-uwant-b100
+url = https://dienmaycholon.com/may-hut-bui-robot-hut-bui/may-giat-sofa-nem-tham-cam-tay-uwant-b100?srsltid=AfmBOoqlpXfWSxcl-IEuHNFfealIr4xwNm0oSmubDCqo0xl-NVXTnbDz
 
 [thenewgastronome.com]
 match = -41.7%%
