--- a/images/tham-giuong-ii-150x190/config.ini
+++ b/images/tham-giuong-ii-150x190/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-giuong-ii-150x190.html
 lastopen = 2024-06-17 14:26:11
 
 [search]
-lastsearch = 2024-08-09 09:19:48
+lastsearch = 2024-08-09 14:21:30
 
 [demxanh.com]
 match = 18.2%%
@@ -13,8 +13,8 @@ url = https://demxanh.com/tham-trai-giuong-long-cuu-tlc-04.html
 
 [demre.com.vn]
 match = 18.2%%
-title = Thảm ghế thảm giường - Trang 3
-url = https://demre.com.vn/tham-ghe-tham-giuong?sortby=price-desc&page=3
+title = Thảm ghế thảm giường - Trang 7
+url = https://demre.com.vn/tham-ghe-tham-giuong?sortby=created-asc&page=7
 
 [decoviet.vn]
 match = 22.2%%
@@ -42,9 +42,9 @@ title = Thảm trải sàn phòng khách trẻ trung năng động TBD2582
 url = https://flexhouse.vn/tham-trai-san-phong-khach-tre-trung-nang-dong-tbd2582
 
 [www.diepxuan.com]
-match = 31.8%%
-title = Điệp Xuân Thảm giường nỉ 200x220
-url = https://www.diepxuan.com/tham-giuong-ni-200x220.html
+match = 50.0%%
+title = Điệp Xuân Thảm giường nỉ 150x190
+url = https://www.diepxuan.com/tham-giuong-ni-150x190.html
 
 [www.lazada.vn]
 match = -77.3%%
