CI images update

--- a/images/nem-everon-160x200x14/config.ini
+++ b/images/nem-everon-160x200x14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-everon-160x200x14.html
 lastopen = 2024-06-06 17:09:53
 
 [search]
-lastsearch = 2024-08-09 00:18:43
+lastsearch = 2024-08-09 14:39:49
 
 [everon.vip]
 match = 44.4%%
@@ -120,4 +120,9 @@ url = https://thegioidemviet.vn/nem-cao-su-bong-kim-cuong/
 match = -81.0%%
 title = ĐỆM BÔNG ÉP CAO SU KIM CƯƠNG TITANIUM - Akasi
 url = https://akasi.com.vn/san-pham/dem-bong-ep-cao-su-kim-cuong-titanium/
+
+[everon.com]
+match = -45.5%%
+title = Đệm bông ép
+url = https://everon.com/danh-muc-san-pham/dem-bong-ep
 
