--- a/images/bo-bon-mua-chun-chan-182m/config.ini
+++ b/images/bo-bon-mua-chun-chan-182m/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-bon-mua-chun-chan-182m.html
 lastopen = 2024-06-07 00:25:46
 
 [search]
-lastsearch = 2024-08-09 10:59:15
+lastsearch = 2024-08-09 14:38:44
 
 [everon.online]
 match = 12.0%%
@@ -19,7 +19,7 @@ url = https://everonchinhhang.vn/products/bo-chan-bon-mua-hoa-ngot-ngao-esm24015
 [everonvn.com.vn]
 match = 28.0%%
 title = Báo giá chăn 4 mùa Everon
-url = https://everonvn.com.vn/everon/582/chan-bon-mua-everon?srsltid=AfmBOopJBF79vimYNi6NkYfYMiHynEiQigsY_k9GI_69B5VyyS6N1NYb
+url = https://everonvn.com.vn/everon/582/chan-bon-mua-everon
 
 [www.changagoidemeveron.vn]
 match = -8.0%%
@@ -52,9 +52,9 @@ title = Bán căn hộ chung cư tại Đường 129, , Huyện Thăng Bình ...
 url = https://batdongsan.com.vn/ban-can-ho-chung-cu-duong-129-516/dt-tu-50m2-den-80m2-1pn
 
 [www.youtube.com]
-match = -100.0%%
-title = Vở Bài Tập Tiếng Việt Lớp 2 | Ôn Tập Giữa Học Kì 2 | Tuần 27 ...
-url = https://www.youtube.com/watch?v=3c3xQJ1BOgM
+match = -96.0%%
+title = Vở bài tập Toán lớp 5 - trang 69, 70 - Bài 136: Luyện tập ...
+url = https://www.youtube.com/watch?v=U84zJdnzJak
 
 [bdshanoi.com.vn]
 match = -4.0%%
@@ -74,7 +74,7 @@ url = https://www.canhociputra.com/ban-can-ho-chung-cu-ciputra/ban-gap-can-ho-4-
 [www.everonvni.vn]
 match = 24.0%%
 title = BỘ CHĂN BỐN MÙA HOA MỘC LAN ESB23022
-url = https://www.everonvni.vn/bo-chan-bon-mua-hoa-moc-lan-esb23022/?srsltid=AfmBOoojAUHupMh_ZUcbkrgH9x7yRv8gr7c4-bSz1YlzPpjtnBSDuHo-
+url = https://www.everonvni.vn/bo-chan-bon-mua-hoa-moc-lan-esb23022/
 
 [format.com.vn]
 match = -100.0%%
