--- a/images/chieu-cay-cao-bang-a-15/config.ini
+++ b/images/chieu-cay-cao-bang-a-15/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/chieu-cay-cao-bang-a-15.html
 lastopen = 2024-06-09 22:30:31
 
 [search]
-lastsearch = 2024-08-09 03:18:22
+lastsearch = 2024-08-09 14:27:03
 
 [demxanh.com]
 match = -39.1%%
 title = Bảng giá chiếu trúc Cao Bằng Cao Sơn mới nhất 2024
-url = https://demxanh.com/bang-gia-chieu-truc-cao-bang-cao-son-moi-nhat-2019.html
+url = https://demxanh.com/bang-gia-chieu-truc-cao-bang-cao-son-moi-nhat-2019.html?srsltid=AfmBOorMLuOO8hJNRZ_pR0e6lix0jG84J67PGEnAXKcZsZAoVj4630c3
 
 [www.diepxuan.com]
 match = 26.1%%
 title = Chiếu cây Cao Bằng A 150x190 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-cay-cao-bang-a-150x190.html
+url = https://www.diepxuan.com/chieu-cay-cao-bang-a-150x190.html?srsltid=AfmBOopdoci5Nel7uzc5q7eKzcYfxhCwnMSZsfox3u-uBA7Q2Gd-BEUy
 
 [uannga.vn]
 match = 56.5%%
