--- a/images/chieu-cay-ht-14/config.ini
+++ b/images/chieu-cay-ht-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-ht-14.html
 lastopen = 2024-06-09 21:54:46
 
 [search]
-lastsearch = 2024-08-09 13:56:23
+lastsearch = 2024-08-09 14:39:28
 
 [www.diepxuan.com]
 match = -20.0%%
@@ -22,9 +22,9 @@ title = Lịch phát sóng - Đài Truyền hình TP. ...
 url = https://www.htv.com.vn/lich-phat-song
 
 [www.thietbidiendgp.vn]
-match = -106.7%%
-title = Đèn Led mắt ếch HT 8091 14W HT MAX LIGHT
-url = https://www.thietbidiendgp.vn/products/me91-14-t-v-tt-ht-light-level
+match = -146.7%%
+title = Đèn Led mắt ếch 8091 viền đen 14W HT MAX LIGHT
+url = https://www.thietbidiendgp.vn/products/mevd912-14-t-v-tt-ht-light-level
 
 [www.facebook.com]
 match = -186.7%%
@@ -163,7 +163,7 @@ url = http://muitaro.com/mui-taro-tay-yamawa-ht-m14x2-1-5p-p3.html
 
 [tiki.vn]
 match = -173.3%%
-title = Chiếu trúc hàng chính hãng, giao nhanh - Tháng 7, 2024
+title = Chiếu trúc hàng chính hãng, giao nhanh - Tháng 8, 2024
 url = https://tiki.vn/search?q=chiếu trúc
 
 [hachi.com.vn]
