--- a/images/chieu-nhua-ha-noi-gia-thai-2m/config.ini
+++ b/images/chieu-nhua-ha-noi-gia-thai-2m/config.ini
@@ -7,9 +7,9 @@ lastopen = 2024-06-09 23:51:45
 lastsearch = 2024-08-09 14:22:52
 
 [shopee.vn]
-match = 17.2%%
-title = chiếu nhựa giá tốt Tháng 8, 2024 | Mua ngay
-url = https://shopee.vn/search?keyword=chiếu nhựa
+match = 0.0%%
+title = Chiếu nhựa - Giá Tốt, Miễn Phí Vận Chuyển, Đủ Loại
+url = https://shopee.vn/list/chiếu/nhựa
 
 [www.maihuyencorp.com]
 match = 13.8%%
@@ -17,9 +17,9 @@ title = Mai Huyền - Chiếu nhựa cao cấp - Hanoi
 url = https://www.maihuyencorp.com/
 
 [www.lazada.vn]
-match = -13.8%%
-title = ☫❉♤ Chiếu nhựa thái lan ăn cơm điều hoà gấp gọn đủ cỡ ...
-url = https://www.lazada.vn/products/chieu-nhua-thai-lan-an-com-dieu-hoa-gap-gon-du-co-2m-3m-4m-i1672912142.html
+match = -31.0%%
+title = Chiếu Nhựa Thái Lan (1,5m , 1,6m , 1,8mx2m , 1,8mx3m, ...
+url = https://www.lazada.vn/products/chieu-nhua-chieu-nhua-thai-lan-15m-16m-18mx2m-18mx3m18mx4m-2mx2m2-2mx3m-2mx4m-i1552808477.html
 
 [tiki.vn]
 match = -13.8%%
@@ -175,4 +175,9 @@ url = https://documents1.worldbank.org/curated/es/623121468125975765/text/E2080V
 match = -47.1%%
 title = B1-Đã VH <100 kWp
 url = https://cskh.hcmpc.com.vn/public/files/DIEN_NLMT_AM/2020-10-08_Bao cao danh sach dien mat troi mai nha EVNHCMC.xlsx
+
+[linhkienlammusic.com]
+match = 23.8%%
+title = Chiếu nhựa 0,9m x 1m9
+url = https://linhkienlammusic.com/chieu-nhua-09m-x-1m9
 
