--- a/images/chieu-truc-que-lam-loai-2-10/config.ini
+++ b/images/chieu-truc-que-lam-loai-2-10/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-truc-que-lam-loai-2-10.html
 lastopen = 2024-06-07 00:19:30
 
 [search]
-lastsearch = 2024-08-09 12:23:48
+lastsearch = 2024-08-09 14:40:29
 
 [thegioidemviet.vn]
-match = 35.7%%
-title = Bảng Giá Chiếu Trúc Quế Lâm [Chính hãng
-url = https://thegioidemviet.vn/chieu-truc-que-lam/
+match = 32.1%%
+title = BẢNG GIÁ Chiếu Trúc Việt Nam mới ...
+url = https://thegioidemviet.vn/chieu-truc/
 
 [chieutrelanlan.com]
 match = 25.0%%
@@ -22,9 +22,9 @@ title = Chiếu Trúc Quế Lâm | Hai Phong
 url = https://www.facebook.com/ChieuTrucQueLam/
 
 [shopee.vn]
-match = -3.6%%
-title = Chiếu Trúc QUẾ LÂM Hạt Vàng Cao cấp đủ kích thước ...
-url = https://shopee.vn/Chiếu-Trúc-QUẾ-LÂM-Hạt-Vàng-Cao-cấp-đủ-kích-thước-Chiếu-Trúc-Miếng-Siêu-Bền-i.264312794.4455092764
+match = 17.9%%
+title = CHIẾU TRÚC QUẾ LÂM MẮT NGỌC KHÔNG HOA VĂN ...
+url = https://shopee.vn/CHIẾU-TRÚC-QUẾ-LÂM-MẮT-NGỌC-KHÔNG-HOA-VĂN-HÀNG-LOẠI-1-BÓNG-ĐẸP-i.444652147.14296554126
 
 [demxanh.com]
 match = -25.0%%
