--- a/images/chieu-truc-que-lam-loai-2-18/config.ini
+++ b/images/chieu-truc-que-lam-loai-2-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-que-lam-loai-2-18.html
 lastopen = 2024-06-07 00:19:47
 
 [search]
-lastsearch = 2024-08-09 11:56:43
+lastsearch = 2024-08-09 14:35:40
 
 [chieutrelanlan.com]
 match = -7.1%%
@@ -17,9 +17,9 @@ title = Bảng Giá Chiếu Trúc Quế Lâm [Chính hãng
 url = https://thegioidemviet.vn/chieu-truc-que-lam/
 
 [demxanh.com]
-match = -10.7%%
-title = Chiếu trúc hạt Quế Lâm hạt vàng 100x190cm hàng loại 1
-url = https://demxanh.com/chieu-truc-hat-que-lam-hat-vang.html
+match = -28.6%%
+title = Tổng kho Chiếu trúc cao cấp khuyến mãi giá rẻ nhất 2024
+url = https://demxanh.com/chieu-truc.html?srsltid=AfmBOoqcbsXcGL6dsD_aLSmOwvzpZiGWC4Jb1Y6Ff3O5zjRj5Toz2TZp
 
 [shopee.vn]
 match = -3.6%%
