--- a/images/giuong-mn-2/config.ini
+++ b/images/giuong-mn-2/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/giuong-mn-2.html
 lastopen = 2024-06-07 00:35:31
 
 [search]
-lastsearch = 2024-08-08 22:32:09
+lastsearch = 2024-08-09 14:38:02
 
 [dongagroup.vn]
 match = -272.7%%
@@ -107,8 +107,8 @@ title = Zinus: Shop Mattresses, Bed Frames & Sofas
 url = https://www.zinus.com/
 
 [pamed.com.vn]
-match = -145.5%%
-title = MN-G2CN - Giường 2 chức năng - Pamed
+match = -409.1%%
+title = MN-G2CN - Giường 2 chức năng | Pamed – Trang thiết bị, vật tư y tế
 url = https://pamed.com.vn/mn-g2cn-giuong-2-chuc-nang
 
 [www.nitrc.org]
@@ -235,4 +235,9 @@ url = https://www.dungcuykhoathammytuankiet.com/products/giuong-dien-y-te-2-chuc
 match = -390.9%%
 title = I always felt like Nem was the more levelheaded one💔 #fyp ...
 url = https://www.tiktok.com/@famovereverythingg/video/7398777305557978398
+
+[freemeteo.mn]
+match = -163.6%%
+title = Xom Giuong (2), Vietnam Current Weather
+url = https://freemeteo.mn/mobile/weather/xom-giuong-2/current-weather/location/?gid=1561484&language=english&country=vietnam
 
