--- a/images/man-re-trang-10/config.ini
+++ b/images/man-re-trang-10/config.ini
@@ -4,11 +4,11 @@ url = https://www.diepxuan.com/man-re-trang-10.html
 lastopen = 2024-06-07 00:52:54
 
 [search]
-lastsearch = 2024-08-09 12:19:09
+lastsearch = 2024-08-09 14:32:35
 
 [burningman.org]
-match = 0.0%%
-title = 
+match = -60.0%%
+title = The 10 Principles of Burning Man
 url = https://burningman.org/about/10-principles/
 
 [www.youtube.com]
@@ -22,8 +22,8 @@ title = Inmate Search
 url = https://www.hcso.org/justice-center-services/inmate-search/
 
 [desaulnier.house.gov]
-match = 0.0%%
-title = 
+match = -180.0%%
+title = Congressman Mark Desaulnier | Representing the 10th ...
 url = http://desaulnier.house.gov/
 
 [account.microsoft.com]
@@ -217,8 +217,8 @@ title =
 url = https://www.dol.gov/general/topic/disability/ada
 
 [www.massresort.com]
-match = -253.3%%
-title = Massanutten Resort® Virginia: VA Ski Area, Golf, WaterPark ...
+match = -240.0%%
+title = Massanutten Resort® | Virginia Ski Area, Golf, WaterPark ...
 url = https://www.massresort.com/
 
 [new.mta.info]
@@ -940,4 +940,9 @@ url = https://www.realmadrid.com/en-US
 match = -40.0%%
 title = CA Department of Insurance
 url = https://www.insurance.ca.gov/
+
+[www.stumbleguys.com]
+match = -8.3%%
+title = Stumble Guys
+url = https://www.stumbleguys.com/
 
