--- a/images/ruot-goi-ke-re/config.ini
+++ b/images/ruot-goi-ke-re/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-goi-ke-re.html
 lastopen = 2024-06-10 01:04:04
 
 [search]
-lastsearch = 2024-08-09 13:51:38
+lastsearch = 2024-08-09 14:30:31
 
 [www.thanhthuyhanh.com]
 match = -50.0%%
@@ -59,7 +59,7 @@ url = https://songhonghanoi.vn/bang-gia-vo-goi-ruot-goi-song-hong-moi-nhat-2021.
 [jysk.vn]
 match = -164.3%%
 title = Ruột Chăn, Ruột Gối Ngủ Cao Cấp, Giá Rẻ - JYSK.vn
-url = https://jysk.vn/ruot-chan-goi?srsltid=AfmBOooQ0SoHVTQnh6j872YJMuBE0UW3P-RqTcAau4Wi49_LnDCpf0TI
+url = https://jysk.vn/ruot-chan-goi
 
 [everonvn.com.vn]
 match = -164.3%%
@@ -72,9 +72,9 @@ title = Ruột gối Sông Hồng chính hãng giá rẻ nhất thị trường 
 url = https://demsonghonghanoi.com/ruot-goi-song-hong/
 
 [shopee.vn]
-match = -157.1%%
-title = Ruột gối - Giá Tốt, Miễn Phí Vận Chuyển, Đủ Loại
-url = https://shopee.vn/list/ruột gối
+match = -121.4%%
+title = ruột gối giá tốt Tháng 8, 2024 | Mua ngay
+url = https://shopee.vn/search?keyword=ruột gối
 
 [www.changagoidemeveron.vn]
 match = -78.6%%
