--- a/images/tham-ghe-1m7roi/config.ini
+++ b/images/tham-ghe-1m7roi/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-ghe-1m7roi.html
 lastopen = 2024-06-07 00:15:10
 
 [search]
-lastsearch = 2024-08-09 13:44:24
+lastsearch = 2024-08-09 14:31:53
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -22,9 +22,9 @@ title = tin tức - Trẻ dưới 10 tuổi không được ngồi ghế trướ
 url = https://voz.vn/t/tre-duoi-10-tuoi-khong-duoc-ngoi-ghe-truoc-o-to.805464/page-5
 
 [www.tiktok.com]
-match = -240.0%%
-title = Diễn Viên Đinh Y Nhung chia sẻ mình có một vai diễn “dễ ...
-url = https://www.tiktok.com/@thegioishowbizmuonmau/video/7357041904854371592
+match = -246.7%%
+title = Nhan sắc mãi keo của diễn viên Ðinh Y Nhung ngày ra mắt ...
+url = https://www.tiktok.com/@khanhnguyen1509/video/7361568477901114631
 
 [www.reddit.com]
 match = -120.0%%
