--- a/images/man-in-hoa-dep-16/config.ini
+++ b/images/man-in-hoa-dep-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-in-hoa-dep-16.html
 lastopen = 2024-06-10 01:11:01
 
 [search]
-lastsearch = 2024-08-09 11:49:23
+lastsearch = 2024-08-09 15:26:37
 
 [www.tiktok.com]
 match = -235.3%%
@@ -67,9 +67,9 @@ title = Chiêm ngưỡng mùa hoa cực đẹp ở Hà Giang vào tháng 03
 url = https://www.pinterest.com/pin/1087971222468991265/
 
 [books.google.com]
-match = -229.4%%
-title = Lexicon Palaeslovenico-Græco-Latinum emendatum auctum edidit ...
-url = https://books.google.com/books?id=QBJhAAAAcAAJ&pg=PA10&lpg=PA10&dq=man+in+hoa+dep+16&source=bl&ots=rtyW0GijUj&sig=ACfU3U1rrGnxpGjJNtTjK2lFNW18rj1J3A&hl=en&sa=X&ved=2ahUKEwjvi72s6-aHAxUJGzQIHcekHnIQ6AF6BAg0EAM
+match = -123.5%%
+title = The army list - Page 234 - Google Books Result
+url = https://books.google.com/books?id=tfANAAAAQAAJ&pg=RA2-PA234&lpg=RA2-PA234&dq=man+in+hoa+dep+16&source=bl&ots=vQEa9YwsVF&sig=ACfU3U1igkFzjoEFqtkQfgIYxuwxrv_R3Q&hl=en&sa=X&ved=2ahUKEwiDhv62vueHAxU0FFkFHevPKycQ6AF6BAgYEAM
 
 [tax.vermont.gov]
 match = -29.4%%
