--- a/images/bo-ga-goi-chun-coco-18/config.ini
+++ b/images/bo-ga-goi-chun-coco-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-goi-chun-coco-18.html
 lastopen = 2024-06-09 23:53:28
 
 [search]
-lastsearch = 2024-08-09 10:56:49
+lastsearch = 2024-08-09 15:25:54
 
 [www.diepxuan.com]
 match = 4.5%%
@@ -27,9 +27,9 @@ title = Bộ ga chun My Youth - MY18
 url = https://hanvico.com.vn/san-pham/bo-ga-chun-my-youth-my18/
 
 [www.lazada.vn]
-match = -77.3%%
-title = Chiếu Điều Hòa Cao Su Non Bo Chun Chanel Coco phiên ...
-url = https://www.lazada.vn/products/chieu-dieu-hoa-cao-su-non-bo-chun-chanel-coco-phien-ban-2023-i2300743328.html
+match = 27.3%%
+title = Ga gối chun nỉ COCO KHÔNG VIỀN
+url = https://www.lazada.vn/products/ga-goi-chun-ni-coco-khong-vien-i2477643141.html
 
 [www.instagram.com]
 match = -81.8%%
@@ -47,9 +47,9 @@ title = Bộ Ga Gối Nỉ Nhung MÀU XÁM COCO 1m6x2m in Nổi Hoạ ...
 url = https://www.sendo.vn/bo-ga-goi-ni-nhung-mau-xam-coco-1m6x2m-in-noi-hoa-tiet-mau-moi-2023-116258982.html
 
 [demxanh.com]
-match = -40.9%%
-title = Chiếu cao su non Coco bo chun màu xám nhạt
-url = https://demxanh.com/chieu-cao-su-non-coco-bo-chun-mau-xam-nhat.html
+match = -45.5%%
+title = Chiếu cao su non Coco bo chun màu xanh mint
+url = https://demxanh.com/chieu-cao-su-non-coco-bo-chun-mau-xanh-mint.html
 
 [www.tiktok.com]
 match = -59.1%%
@@ -57,9 +57,9 @@ title = Ga gối coco nằm điều hoà mát rễ chịu#coco #gagoi
 url = https://www.tiktok.com/@decor6223/video/7365936323837906177
 
 [thegioidemviet.vn]
-match = -122.7%%
-title = 【365+ Bộ Chăn Ga Gối Đệm - Đẹp giá rẻ chính hãng [Sale TT3, ...
-url = https://thegioidemviet.vn/chan-ga-goi/page/9/
+match = -100.0%%
+title = 【365+ Bộ Chăn Ga Gối Đệm - Đẹp giá rẻ chính hãng [Sale ...
+url = https://thegioidemviet.vn/chan-ga-goi/page/3/
 
 [songhonghanoi.vn]
 match = -63.6%%
@@ -67,9 +67,9 @@ title = Chăn ga gối cho nam và sự bất tử của họa tiết sọc kẻ
 url = https://songhonghanoi.vn/chan-ga-goi-cho-nam-va-su-bat-tu-cua-hoa-tiet-soc-ke.html
 
 [www.facebook.com]
-match = -13.6%%
-title = Chăn ga gối đệm - CoCo HOUSE | Vinh Yen
-url = https://www.facebook.com/hoa32/
+match = -68.2%%
+title = COCO 2024 ✔️ Chiếu bọc chun mới nhất của CoCo siêu ...
+url = https://www.facebook.com/groups/151776543537474/posts/-coco-2024️-chiếu-bọc-chun-mới-nhất-của-coco-siêu-bắt-mắt-với-thiết-kế-mới-nhất️/776878567693932/
 
 [foreverbedding.net]
 match = -27.3%%
