--- a/images/chieu-nhua-ha-noi-gia-thai-2m/config.ini
+++ b/images/chieu-nhua-ha-noi-gia-thai-2m/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-nhua-ha-noi-gia-thai-2m.html
 lastopen = 2024-06-09 23:51:45
 
 [search]
-lastsearch = 2024-08-09 14:22:52
+lastsearch = 2024-08-09 15:30:08
 
 [shopee.vn]
 match = 0.0%%
@@ -17,9 +17,9 @@ title = Mai Huyền - Chiếu nhựa cao cấp - Hanoi
 url = https://www.maihuyencorp.com/
 
 [www.lazada.vn]
-match = -31.0%%
-title = Chiếu Nhựa Thái Lan (1,5m , 1,6m , 1,8mx2m , 1,8mx3m, ...
-url = https://www.lazada.vn/products/chieu-nhua-chieu-nhua-thai-lan-15m-16m-18mx2m-18mx3m18mx4m-2mx2m2-2mx3m-2mx4m-i1552808477.html
+match = -13.8%%
+title = ☫❉♤ Chiếu nhựa thái lan ăn cơm điều hoà gấp gọn đủ cỡ ...
+url = https://www.lazada.vn/products/chieu-nhua-thai-lan-an-com-dieu-hoa-gap-gon-du-co-2m-3m-4m-i1672912142.html
 
 [tiki.vn]
 match = -13.8%%
@@ -32,9 +32,9 @@ title = Chiếu Nhựa Thái Lan
 url = https://www.facebook.com/chieunhuathailan/
 
 [www.sendo.vn]
-match = 24.1%%
-title = Chiếu Nhựa Bền Đẹp, Giá Sốc, Bán Chạy Nhất
-url = https://www.sendo.vn/chieu-nhua.htm
+match = -17.2%%
+title = Chiếu nhựa hàng Thái chất lượng cao m8 2m [Được kiểm ...
+url = https://www.sendo.vn/chieu-nhua-hang-thai-chat-luong-cao-m8-2m-duo-c-kie-m-ha-ng-16392961-116708484.html?source_block_id=feed&source_page_id=search&source_info=pwa_60_1715558400321_undefined_-1_cateLvl2_0_117_23_-1
 
 [chieuvietbac.blogspot.com]
 match = -20.7%%
