--- a/images/chieu-truc-que-lam-loai-1-15/config.ini
+++ b/images/chieu-truc-que-lam-loai-1-15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-que-lam-loai-1-15.html
 lastopen = 2024-06-07 00:19:57
 
 [search]
-lastsearch = 2024-08-09 14:32:14
+lastsearch = 2024-08-09 15:24:30
 
 [thegioidemviet.vn]
 match = 32.1%%
@@ -12,9 +12,9 @@ title = BẢNG GIÁ Chiếu Trúc Việt Nam mới ...
 url = https://thegioidemviet.vn/chieu-truc/
 
 [shopee.vn]
-match = 7.1%%
-title = Chiếu Trúc Hạt Mắt Trắng Quế Lâm (Mắt nhỏ Loại 1)
-url = https://shopee.vn/Chiếu-Trúc-Hạt-Mắt-Trắng-Quế-Lâm-(Mắt-nhỏ-Loại-1)-i.22156385.939014750
+match = -3.6%%
+title = Chiếu trúc Quế Lâm mắt ngọc hạt vàng bóng đẹp loại 1
+url = https://shopee.vn/Chiếu-trúc-Quế-Lâm-mắt-ngọc-hạt-vàng-bóng-đẹp-loại-1-i.121274905.7879754206
 
 [chieutrelanlan.com]
 match = 25.0%%
@@ -24,7 +24,7 @@ url = https://chieutrelanlan.com/chieu-truc-p17.html
 [demxanh.com]
 match = -28.6%%
 title = Tổng kho Chiếu trúc cao cấp khuyến mãi giá rẻ nhất 2024
-url = https://demxanh.com/chieu-truc.html
+url = https://demxanh.com/chieu-truc.html?srsltid=AfmBOooVbtvucX5tr4LPq4pJM5R-XJARFobcNwXDOHNaoaieISrbsa7Z
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -44,7 +44,7 @@ url = https://www.sendo.vn/anh-that-100-chieu-truc-que-lam-loai-1-cao-cap-loai-c
 [www.lazada.vn]
 match = 3.6%%
 title = Chiếu trúc hạt Quế Lâm loại 1, chiếu điều hoà cao cấp
-url = https://www.lazada.vn/products/chieu-truc-hat-que-lam-loai-1-chieu-dieu-hoa-cao-cap-i1845950408.html
+url = https://www.lazada.vn/products/chieu-truc-hat-que-lam-loai-1-chieu-dieu-hoa-cao-cap-i1845950408.html?srsltid=AfmBOooT2IAZhgEBlqk-Gawk1s3CwkLw1qf7l9DBB63vL31U0R2d5Xft
 
 [thegioidemonline.com]
 match = -39.3%%
