--- a/images/man-re-trang-10/config.ini
+++ b/images/man-re-trang-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-re-trang-10.html
 lastopen = 2024-06-07 00:52:54
 
 [search]
-lastsearch = 2024-08-09 14:32:35
+lastsearch = 2024-08-09 15:25:33
 
 [burningman.org]
 match = -60.0%%
@@ -12,9 +12,9 @@ title = The 10 Principles of Burning Man
 url = https://burningman.org/about/10-principles/
 
 [www.youtube.com]
-match = -193.3%%
-title = Mom CALLS THE COPS On TATTOOED DAD, She Lives To ...
-url = https://www.youtube.com/watch?v=YpGCOvQN5Oc
+match = 0.0%%
+title = Primitive Technology
+url = https://www.youtube.com/@primitivetechnology9550
 
 [www.hcso.org]
 match = 7.7%%
@@ -22,8 +22,8 @@ title = Inmate Search
 url = https://www.hcso.org/justice-center-services/inmate-search/
 
 [desaulnier.house.gov]
-match = -180.0%%
-title = Congressman Mark Desaulnier | Representing the 10th ...
+match = 0.0%%
+title = 
 url = http://desaulnier.house.gov/
 
 [account.microsoft.com]
