--- a/images/tham-giuong-loai-2-16/config.ini
+++ b/images/tham-giuong-loai-2-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-giuong-loai-2-16.html
 lastopen = 2024-06-10 00:46:28
 
 [search]
-lastsearch = 2024-08-09 13:31:45
+lastsearch = 2024-08-09 15:16:56
 
 [shopee.vn]
 match = -76.2%%
@@ -14,7 +14,7 @@ url = https://shopee.vn/search?keyword=thảm trải giường loại 1
 [www.lazada.vn]
 match = -85.7%%
 title = Thảm Lông Cừu Thảm Trải Giường Trải SànTtrần Bông 3 ...
-url = https://www.lazada.vn/products/tham-long-cuu-tham-trai-giuong-trai-santtran-bong-3-lop-sieu-am-hang-loai-1du-kich-thuoc-16x2m-18x2m-i2134244460-s10053256482.html
+url = https://www.lazada.vn/products/tham-long-cuu-tham-trai-giuong-trai-santtran-bong-3-lop-sieu-am-hang-loai-1du-kich-thuoc-16x2m-18x2m-i2134244460-s10053256482.html?srsltid=AfmBOopqTjKrzmRYL7SUMjAUYitFNwq0jBpi_My8tg9wkyZI5ZuW3T3h
 
 [tiki.vn]
 match = -38.1%%
@@ -114,7 +114,7 @@ url = https://thangnhomsaigon.com/giuong-xep/
 [noithatduongdong.com]
 match = 23.8%%
 title = Giường sắt 2 tầng -GT16
-url = https://noithatduongdong.com/giuong-sat-2-tang-co-rem-gt16?srsltid=AfmBOopeE9LxQlO3uxcXkA6HobJf143hJIEBtxHrNJD900_Y8F2vaPHC
+url = https://noithatduongdong.com/giuong-sat-2-tang-co-rem-gt16?srsltid=AfmBOooSDF6tiufa5OEwBDcdeVeDNmrhKckZfPk8r5ATPCVJFn6H3Zpe
 
 [beyours.vn]
 match = 0.0%%
@@ -129,7 +129,7 @@ url = https://danacity.com/chon-tham-trai-san-giuong-ngu-theo-phong-thuy-cho-tun
 [noithatcaco.vn]
 match = -95.2%%
 title = Giường ngủ hiện đại đẹp giá rẻ 100+ mẫu mới 09/2024
-url = https://noithatcaco.vn/collections/giuong-ngu
+url = https://noithatcaco.vn/collections/giuong-ngu?srsltid=AfmBOopswhBKxazHcAGFqlXAZRD8EIV__I7z0sCPdjlBsuAeb8AL858q
 
 [danacity.com.vn]
 match = -42.9%%
