--- a/images/vo-goi-epm20065-45x65/config.ini
+++ b/images/vo-goi-epm20065-45x65/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/vo-goi-epm20065-45x65.html
 lastopen = 2024-07-07 18:08:23
 
 [search]
-lastsearch = 2024-08-09 15:35:30
+lastsearch = 2024-08-09 16:16:38
 
 [www.diepxuan.com]
 match = 42.9%%
 title = Vỏ gối EPM20065 45x65 - Điệp Xuân
-url = https://www.diepxuan.com/vo-goi-epm20065-45x65.html?srsltid=AfmBOorYiUhsbGOihWDeaN7xAsUZKWb4IIi3VmMEXnbZ2IjTSv1gRS52
+url = https://www.diepxuan.com/vo-goi-epm20065-45x65.html
 
 [tiki.vn]
 match = -81.0%%
