--- a/images/bo-bon-mua-chun-chan-1602m/config.ini
+++ b/images/bo-bon-mua-chun-chan-1602m/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-bon-mua-chun-chan-1602m.html
 lastopen = 2024-06-07 01:32:26
 
 [search]
-lastsearch = 2024-08-09 14:48:39
+lastsearch = 2024-08-09 16:19:20
 
 [everon.online]
 match = 15.4%%
@@ -77,9 +77,9 @@ title = Tiết kiệm đến 75%% khi mua Anno 2070™ trên Steam
 url = https://store.steampowered.com/app/48240?l=vietnamese&curator_clanid=33358846
 
 [vi.wikipedia.org]
-match = -19.2%%
-title = Trận Gaugamela – Wikipedia tiếng Việt
-url = https://vi.wikipedia.org/wiki/Trận_Gaugamela
+match = -23.1%%
+title = Mậu dịch Nanban – Wikipedia tiếng Việt
+url = https://vi.wikipedia.org/wiki/Mậu_dịch_Nanban
 
 [baocaotaichinh.vn]
 match = -19.2%%
@@ -127,9 +127,9 @@ title = Hướng dẫn cách giặt ruột gối sạch sẽ bằng tay và bằ
 url = https://everonvn.com.vn/tin-tuc/1602/cach-giat-ruot-goi-everon-bang-tay-va-bang-may-giat
 
 [www.youtube.com]
-match = -69.2%%
-title = Bài Ca Bốn Mùa | Liên khúc nhạc thiếu nhi hay nhất | Chun Chin
-url = https://www.youtube.com/watch?v=7uuXmCaHgCw
+match = -23.1%%
+title = Bài ca bốn mùa | Chun Chin | Nhạc thiếu nhi vui nhộn
+url = https://www.youtube.com/watch?v=KEP4EdvSrP8
 
 [www.thegioididong.com]
 match = -11.5%%
