--- a/images/bo-bon-mua-chun-chan-182m/config.ini
+++ b/images/bo-bon-mua-chun-chan-182m/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-bon-mua-chun-chan-182m.html
 lastopen = 2024-06-07 00:25:46
 
 [search]
-lastsearch = 2024-08-09 14:38:44
+lastsearch = 2024-08-09 16:23:55
 
 [everon.online]
 match = 12.0%%
@@ -19,7 +19,7 @@ url = https://everonchinhhang.vn/products/bo-chan-bon-mua-hoa-ngot-ngao-esm24015
 [everonvn.com.vn]
 match = 28.0%%
 title = Báo giá chăn 4 mùa Everon
-url = https://everonvn.com.vn/everon/582/chan-bon-mua-everon
+url = https://everonvn.com.vn/everon/582/chan-bon-mua-everon?srsltid=AfmBOor49_eJBWo3myEnRuP02P8W55KIZ80PlDByt5GoDYUrWwx3P7x2
 
 [www.changagoidemeveron.vn]
 match = -8.0%%
@@ -74,7 +74,7 @@ url = https://www.canhociputra.com/ban-can-ho-chung-cu-ciputra/ban-gap-can-ho-4-
 [www.everonvni.vn]
 match = 24.0%%
 title = BỘ CHĂN BỐN MÙA HOA MỘC LAN ESB23022
-url = https://www.everonvni.vn/bo-chan-bon-mua-hoa-moc-lan-esb23022/
+url = https://www.everonvni.vn/bo-chan-bon-mua-hoa-moc-lan-esb23022/?srsltid=AfmBOorixZ95D8mZbJRw8RhfNTtPpBdbZJvY5OUkn9aOhsYOtbtmrAV0
 
 [format.com.vn]
 match = -100.0%%
