--- a/images/chan-5-kg-kq-song/config.ini
+++ b/images/chan-5-kg-kq-song/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-5-kg-kq-song.html
 lastopen = 2024-06-09 23:17:50
 
 [search]
-lastsearch = 2024-08-09 10:16:07
+lastsearch = 2024-08-09 16:24:18
 
 [en.wikipedia.org]
 match = -16.7%%
@@ -27,14 +27,14 @@ title = QSC K12.2 premium powered, 12-inch, two-way loudspeaker
 url = https://www.qsc.com/solutions-products/loudspeakers/portable/powered/portable-pa/k2-series/k122/
 
 [www.ncbi.nlm.nih.gov]
-match = -223.5%%
-title = Translational strategies for neuroprotection in ischemic stroke
-url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC3933947/
+match = -200.0%%
+title = Discovery of a novel third-generation EGFR inhibitor and ...
+url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC7218543/
 
 [books.google.com]
-match = -200.0%%
-title = Reactive Oxygen Species in Chemistry, Biology, and Medicine
-url = https://books.google.com/books?id=p5LkBwAAQBAJ&pg=PA123&lpg=PA123&dq=chan+5+kg+kq+song&source=bl&ots=XG0v4p32Ie&sig=ACfU3U2qHYRVm7vqpVNLirvIzltefkzOTA&hl=en&sa=X&ved=2ahUKEwjRr_e4_-SHAxXRFFkFHV69LrsQ6AF6BAgaEAM
+match = -11.8%%
+title = Cumulated Index Medicus
+url = https://books.google.com/books?id=KlBiDKi_dngC&pg=PA5960&lpg=PA5960&dq=chan+5+kg+kq+song&source=bl&ots=BOWXEQ-q2h&sig=ACfU3U1ryc1KqlGSlH4pXtz7fZ9cKMnQ4Q&hl=en&sa=X&ved=2ahUKEwiD4cGpy-eHAxVYhYkEHUr3JKkQ6AF6BAg2EAM
 
 [www.ateezstoryline.com]
 match = 0.0%%
