--- a/images/chan-cuu-loai-2/config.ini
+++ b/images/chan-cuu-loai-2/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-cuu-loai-2.html
 lastopen = 2024-06-09 23:05:55
 
 [search]
-lastsearch = 2024-08-09 14:28:04
+lastsearch = 2024-08-09 16:20:24
 
 [tiki.vn]
 match = -133.3%%
@@ -19,7 +19,7 @@ url = https://joliefam.vn/chan-ga-goi-gia-dinh/chan-cuu-phap-joliefam/
 [www.lazada.vn]
 match = -166.7%%
 title = Chan Long Cuu 2m Giá Tốt T05/2024 | Mua tại Lazada.vn
-url = https://www.lazada.vn/tag/chan-long-cuu-2m/
+url = https://www.lazada.vn/tag/chan-long-cuu-2m/?srsltid=AfmBOop4dGJbTr2ylqAi5Nyjmr5SH4whi8JMxhClw7PX7UqGkzb5IThg
 
 [tokyolife.vn]
 match = -193.3%%
@@ -94,7 +94,7 @@ url = https://www.dem365.vn/chan-long-cuu-gia-re/
 [demxanh.com]
 match = -73.3%%
 title = Chăn lông cừu Normal mã 12 Hoa kẻ ngang
-url = https://demxanh.com/chan-long-cuu-normal-ma-12-hoa-ke-ngang.html
+url = https://demxanh.com/chan-long-cuu-normal-ma-12-hoa-ke-ngang.html?srsltid=AfmBOore1ifhlnCmCIM-CnJZ0DW_Ppj7rpKJtxTUUz-UppuYYkpzK64F
 
 [shope.io.vn]
 match = -186.7%%
