--- a/images/chieu-dieu-hoa-cao-su-150x190/config.ini
+++ b/images/chieu-dieu-hoa-cao-su-150x190/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-cao-su-150x190.html
 lastopen = 2024-07-01 03:08:57
 
 [search]
-lastsearch = 2024-08-09 14:16:20
+lastsearch = 2024-08-09 16:19:42
 
 [demxanh.com]
-match = 3.4%%
-title = [Hot] Bảng giá chiếu Điều Hoà mới nhất 2023
-url = https://demxanh.com/bang-gia-chieu-dieu-hoa-moi-nhat-2019.html
+match = -31.0%%
+title = Tư vấn chọn chiếu phù hợp với đệm lò xo, đệm cao su
+url = https://demxanh.com/tu-van-chon-chieu-phu-hop-voi-dem-lo-xo-dem-cao-su.html?srsltid=AfmBOop-NH99FIXc3qBO_8V7jhlq7anANhJjDCI0BT21IF2RQ-u1tsn5
 
 [entershopping.vn]
 match = -13.8%%
@@ -47,14 +47,14 @@ title = Chiếu điều hòa cao su non chính hãng đẹp nhất 2024 - Russo
 url = https://russo.vn/chieu-dieu-hoa-cao-su-non/
 
 [thegioidemonline.com]
-match = 37.9%%
-title = Chiếu điều hòa cao su non Tencel màu Ghi
-url = https://thegioidemonline.com/chieu-dieu-hoa-cao-su-non-tencel-ghi.html
+match = 34.5%%
+title = Chiếu điều hòa cao su non Tencel Xanh nhạt
+url = https://thegioidemonline.com/chieu-dieu-hoa-cao-su-non-tencel-xanh-nhat.html?srsltid=AfmBOoqBHjieoUpHv1pZPAI28tTYlor9ybjt32RguW2vao-idr9NDRTT
 
 [shopee.vn]
-match = -27.6%%
-title = Chiếu điều hoà cao su non in hình 5D siêu mát tặng kèm 2 ...
-url = https://shopee.vn/Chiếu-điều-hoà-cao-su-non-in-hình-5D-siêu-mát-tặng-kèm-2-vỏ-gối-i.547721201.15020384769
+match = -20.7%%
+title = chiếu điều hòa cao su non giá tốt Tháng 8, 2024 | Mua ngay
+url = https://shopee.vn/search?keyword=chiếu điều hòa cao su non
 
 [suongtuyet.com]
 match = 72.4%%
