--- a/images/chieu-lac-soc-08/config.ini
+++ b/images/chieu-lac-soc-08/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-08.html
 lastopen = 2024-06-06 16:42:06
 
 [search]
-lastsearch = 2024-08-09 05:48:24
+lastsearch = 2024-08-09 16:30:14
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -207,9 +207,9 @@ title = Mổ u tuyến giáp có bị tái phát không? Các yếu tố ảnh h
 url = https://tamanhhospital.vn/mo-u-tuyen-giap-co-bi-tai-phat-khong/
 
 [dangcongsan.vn]
-match = -106.2%%
-title = Để người thu nhập thấp “an cư lạc nghiệp”
-url = https://dangcongsan.vn/cung-ban-luan/de-nguoi-thu-nhap-thap-an-cu-lac-nghiep-674525.html
+match = -37.5%%
+title = BẢN TIN THỜI SỰ NGÀY 8/8/2024
+url = https://dangcongsan.vn/video/ban-tin-thoi-su-ngay-8-8-2024-1887420.html
 
 [soctrang.gov.vn]
 match = -218.8%%
@@ -244,7 +244,7 @@ url = https://baosonla.org.vn/the-thao/phong-trao-the-duc-the-thao-o-sop-cop-LcJ
 [books.google.com]
 match = -268.8%%
 title = Phật giáo Nam tông cái vùng Nam bộ - Page 112 - Google Books Result
-url = https://books.google.com/books?id=eREfEAAAQBAJ&pg=PA112&lpg=PA112&dq=chieu+lac+soc+08&source=bl&ots=d4HyrkN04O&sig=ACfU3U0INGAMelflC0XWnRjSqkXUsyC5-Q&hl=en&sa=X&ved=2ahUKEwjqz4WNouaHAxUlhIkEHdcUIPAQ6AF6BAg3EAM
+url = https://books.google.com/books?id=eREfEAAAQBAJ&pg=PA112&lpg=PA112&dq=chieu+lac+soc+08&source=bl&ots=d4HyroS82P&sig=ACfU3U2NocMXUG3oJii1L1BVdRcd2lxlkg&hl=en&sa=X&ved=2ahUKEwj1yJ7TzOeHAxVTv4kEHRxULn4Q6AF6BAgZEAM
 
 [daihoc.fpt.edu.vn]
 match = -162.5%%
@@ -282,9 +282,9 @@ title = Địa chấn lớn nhất EURO 2024: Georgia đánh bại Bồ Đào ..
 url = https://baolongan.vn/dia-chan-lon-nhat-euro-2024-georgia-danh-bai-bo-dao-nha-khien-ronaldo-hoan-toan-tat-tieng-a178337.html
 
 [vietstock.vn]
-match = -25.0%%
-title = Góc nhìn 09/08: Rung lắc?
-url = https://vietstock.vn/2024/08/goc-nhin-0908-rung-lac-145-1217731.htm
+match = -218.8%%
+title = Phân tích kỹ thuật phiên chiều 09/08: Tâm lý phân vân vẫn ...
+url = https://vietstock.vn/2024/08/phan-tich-ky-thuat-phien-chieu-0908-tam-ly-phan-van-van-con-hien-huu-585-1217868.htm
 
 [baohungyen.vn]
 match = -200.0%%
