--- a/images/chieu-lac-soc-12/config.ini
+++ b/images/chieu-lac-soc-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-12.html
 lastopen = 2024-06-09 23:46:56
 
 [search]
-lastsearch = 2024-08-09 15:44:52
+lastsearch = 2024-08-09 16:15:34
 
 [shopee.vn]
 match = 25.0%%
@@ -410,4 +410,19 @@ url = https://baoangiang.com.vn/dong-dat-7-1-do-richter-xuat-hien-song-than-o-nh
 match = 12.5%%
 title = Tìm kiếm bưu cục
 url = https://viettelpost.com.vn/tim-kiem-buu-cuc/
+
+[tpb.vn]
+match = 12.5%%
+title = Tìm điểm giao dịch
+url = https://tpb.vn/lien-he/tim-diem-giao-dich
+
+[dichvucong.bocongan.gov.vn]
+match = -25.0%%
+title = Cổng Dịch vụ công Bộ Công An
+url = https://dichvucong.bocongan.gov.vn/
+
+[capnuoccholon.com.vn]
+match = -50.0%%
+title = CÔNG TY CỔ PHẦN CẤP NƯỚC CHỢ LỚN
+url = https://capnuoccholon.com.vn/
 
