--- a/images/nem-sieu-nhe-9f-18/config.ini
+++ b/images/nem-sieu-nhe-9f-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-sieu-nhe-9f-18.html
 lastopen = 2024-06-09 23:55:48
 
 [search]
-lastsearch = 2024-08-09 15:34:48
+lastsearch = 2024-08-09 16:20:45
 
 [m.youtube.com]
 match = -144.4%%
@@ -17,8 +17,8 @@ title = Bảng giá nệm Vạn Thành khuyến mãi mới nhất 2024
 url = https://thegioinem.com/bang-gia-nem-van-thanh-moi.html
 
 [www.instagram.com]
-match = -144.4%%
-title = NEM CHAY SỐT KEM HẠNH NHÂN siêu ngon các đồng chí ơi. ...
+match = -105.6%%
+title = NEM CHAY SỐT KEM HẠNH NHÂN siêu ngon các đồng ...
 url = https://www.instagram.com/p/C9mD02RvBka/
 
 [www.facebook.com]
@@ -44,7 +44,7 @@ url = https://www.grab.com/vn/en/food-blog/trending-food/tphcm-bun-nem-nuong-sie
 [www.diepxuan.com]
 match = 11.1%%
 title = Điệp Xuân Nệm siêu nhẹ
-url = https://www.diepxuan.com/nem-sieu-nhe.html?srsltid=AfmBOoraE7UuRtng3Ao8f3ptwJhuDjvuQPWWSAZvet3MXW9RX5WDXzGi
+url = https://www.diepxuan.com/nem-sieu-nhe.html
 
 [shopcamping.vn]
 match = -144.4%%
@@ -73,8 +73,8 @@ url = https://www.ojp.gov/pdffiles1/Photocopy/93776NCJRS.pdf
 
 [m.facebook.com]
 match = -122.2%%
-title = Người Việt Bolsa/Orange County | 🌮NEM CHUA THANH ...
-url = https://m.facebook.com/groups/nguoivietorangecounty/posts/2900660673417630/
+title = Người Việt Bolsa/Orange County | ‼️NEM CHUA CÁC ...
+url = https://m.facebook.com/groups/nguoivietorangecounty/posts/2895681627248868/
 
 [www.proz.com]
 match = -183.3%%
