--- a/images/tham-giuong-loai-2-12/config.ini
+++ b/images/tham-giuong-loai-2-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-giuong-loai-2-12.html
 lastopen = 2024-06-17 22:30:02
 
 [search]
-lastsearch = 2024-08-09 13:55:47
+lastsearch = 2024-08-09 16:24:41
 
 [shopee.vn]
 match = -76.2%%
@@ -74,7 +74,7 @@ url = https://h5.lazada.vn/products/tham-nhung-trai-giuong-loai-2m-x2m2-cac-mau-
 [erado.vn]
 match = 0.0%%
 title = Giường vải nỉ hạng sang mã DV12
-url = https://erado.vn/giuong-dang-giam-gia/giuong-vai-ni-hang-sang-ma-dv12.html?srsltid=AfmBOopo0HNr4wGtz-K49whoNFNR1h6BKs6nxtmyvSKu3RjTKafLdt0S
+url = https://erado.vn/giuong-dang-giam-gia/giuong-vai-ni-hang-sang-ma-dv12.html
 
 [www.facebook.com]
 match = 33.3%%
@@ -99,7 +99,7 @@ url = https://suongtuyet.com/tham-trai-giuong-fila
 [noithatcaco.vn]
 match = -95.2%%
 title = Giường ngủ hiện đại đẹp giá rẻ 100+ mẫu mới 09/2024
-url = https://noithatcaco.vn/collections/giuong-ngu?srsltid=AfmBOorQTEHK0jQovmpKGd51mJbwy1F3zWBUuuuBhtgQXanXsPW0XpyL
+url = https://noithatcaco.vn/collections/giuong-ngu
 
 [unmei.com.vn]
 match = -100.0%%
