--- a/images/tham-xop-18/config.ini
+++ b/images/tham-xop-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-xop-18.html
 lastopen = 2024-06-07 00:22:33
 
 [search]
-lastsearch = 2024-08-09 11:18:10
+lastsearch = 2024-08-09 16:28:52
 
 [www.sendo.vn]
 match = 0.0%%
@@ -28,13 +28,13 @@ url = https://thamtretho.com/
 
 [trieuchau.com]
 match = -200.0%%
-title = 30*30*18 tấm - Thảm xốp mặt nỉ ghép Âu Lạc
-url = https://trieuchau.com/vi-vn/1057/28077/Tham-Xop-30x30cm/303018-tam--Tham-xop-mat-ni-ghep-Au-Lac
+title = 30*30*18 tấm - Thảm xốp trải sàn nỉ Âu Lạc
+url = https://trieuchau.com/vi-vn/1057/28066/Tham-Xop-30x30cm/303018-tam--Tham-xop-trai-san-ni-Au-Lac
 
 [www.lazada.vn]
-match = -136.4%%
-title = BỘ 18 MIẾNG THẢM XỐP VÂN GỖ CAO CẤP
-url = https://www.lazada.vn/products/bo-18-mieng-tham-xop-van-go-cao-cap-18-mieng-tham-nhieu-mau-i377144802.html?srsltid=AfmBOoqg3eV4xpUhhb5HfizSy9Z_38eBU7USgu4kE3zjSTR7OfxIoGPG
+match = -109.1%%
+title = BỘ THẢM XỐP LÓT TRẢI SÀN CAO CẤP
+url = https://www.lazada.vn/products/bo-tham-xop-lot-trai-san-cao-cap-tham-xop-lot-san-van-go-bo-gom-6-12-18-24-30-36-42-48-tam-tham-trai-san-i377144776.html?srsltid=AfmBOoohnwfvxmFgHZxEcf11yPbtgZNoHyXhVAsBdLdlKGsGSdSZaGIk
 
 [tayphuthuan.com]
 match = -154.5%%
@@ -62,9 +62,9 @@ title = A new micropolydesmoid millipede of the genus Eutrichodesmus ...
 url = https://zookeys.pensoft.net/article/57411/list/18/
 
 [thamxoplotsan.com]
-match = -127.3%%
-title = Thảm Xốp Trải Sàn Cho Công Nhân 18mm
-url = https://thamxoplotsan.com/tham-xop-trai-san-cho-cong-nhan-18mm/
+match = -136.4%%
+title = Thảm Tập Võ 18mm - Thảm Xốp Lót Sàn
+url = https://thamxoplotsan.com/tham-tap-vo-18mm/
 
 [thamtapvo.com]
 match = -118.2%%
