--- a/images/tui-korea-16/config.ini
+++ b/images/tui-korea-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-korea-16.html
 lastopen = 2024-06-17 10:42:33
 
 [search]
-lastsearch = 2024-08-09 13:55:28
+lastsearch = 2024-08-09 16:30:37
 
 [www.cfd-online.com]
 match = -266.7%%
@@ -82,8 +82,8 @@ title = Tui De Roy. Blue-footed Booby.
 url = https://vitalimpacts.org/products/tui-deroy-blue-footed-booby
 
 [www.flightaware.com]
-match = -333.3%%
-title = BY16 (TOM16) TUI Airways Flight Tracking and History 23- ...
+match = -308.3%%
+title = BY16 (TOM16) TUI Airways Flight Tracking and History ...
 url = https://www.flightaware.com/live/flight/TOM16/history/20240623/0920Z/EGKK/KMLB
 
 [www.hotelmanagement-network.com]
