CI images update

--- a/images/man-re-trang-10/config.ini
+++ b/images/man-re-trang-10/config.ini
@@ -946,3 +946,13 @@ match = -8.3%%
 title = Stumble Guys
 url = https://www.stumbleguys.com/
 
+[www.mncourts.gov]
+match = -126.7%%
+title = Jury Service | Minnesota Judicial Branch
+url = https://www.mncourts.gov/jurors.aspx
+
+[www.bigtenplus.com]
+match = -8.3%%
+title = Big Ten Plus
+url = https://www.bigtenplus.com/
+
