--- a/images/bo-ga-goi-chun-xoa-18/config.ini
+++ b/images/bo-ga-goi-chun-xoa-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-goi-chun-xoa-18.html
 lastopen = 2024-06-09 23:12:50
 
 [search]
-lastsearch = 2024-08-09 03:29:54
+lastsearch = 2024-08-09 16:40:12
 
 [hanvico.com.vn]
 match = 38.1%%
@@ -14,12 +14,12 @@ url = https://hanvico.com.vn/san-pham/bo-ga-chun-living-lv18/
 [foreverbedding.net]
 match = -33.3%%
 title = Bộ ga chun Velina V18 - Forever Bedding
-url = https://foreverbedding.net/bo-ga-chun-velina-v18?srsltid=AfmBOoq3APAdA_hPGo_CViOh5MMZGHQPKZ7qmfUuoGRY0ib4fa4WFbCk
+url = https://foreverbedding.net/bo-ga-chun-velina-v18
 
 [shopee.vn]
-match = -114.3%%
-title = bộ vỏ chăn ga chun gối 18m x 2m cotton poly giá tốt Tháng ...
-url = https://shopee.vn/search?keyword=bộ vỏ chăn ga chun gối 18m x 2m cotton poly
+match = -104.8%%
+title = Bộ Chăn Ga Gối Trải Giường Poly Cotton bo chun miễn phí ...
+url = https://shopee.vn/Bộ-Chăn-Ga-Gối-Trải-Giường-Poly-Cotton-bo-chun-miễn-phí-Ga-trải-giường-BÒ-XÁM-i.600110082.21919470309
 
 [changagoidemsonghong.com]
 match = -57.1%%
@@ -39,7 +39,7 @@ url = https://songhong.info/chan-ga-goi-uc020
 [www.diepxuan.com]
 match = -9.5%%
 title = Bộ chun xoa 180x200 - Điệp Xuân
-url = https://www.diepxuan.com/bo-chun-xoa-180x200.html?srsltid=AfmBOoq1DQzuRZDfgc-b6-qBTo3x1FQFYYW2wm9ltLqOZ4AsvuIuSgv-
+url = https://www.diepxuan.com/bo-chun-xoa-180x200.html
 
 [hoangkimhome.com]
 match = -90.5%%
@@ -59,7 +59,7 @@ url = https://m.enbac.com/?page=list&province_id=ha-noi&cate_alias=&category_id=
 [demxanh.com]
 match = -52.4%%
 title = Bộ chăn ga gối cotton 5 món chăn hè ga chun chần 18
-url = https://demxanh.com/bo-chan-ga-goi-cotton-5-mon-chan-he-ga-chun-chan-18.html?srsltid=AfmBOoqTGPjvOcOySuEnWu5PQn2XeTcVpwOm2MbKod0pKuGnRSWyFi2C
+url = https://demxanh.com/bo-chan-ga-goi-cotton-5-mon-chan-he-ga-chun-chan-18.html
 
 [dongahome.vn]
 match = -57.1%%
