--- a/images/chan-5-kg-kq-song/config.ini
+++ b/images/chan-5-kg-kq-song/config.ini
@@ -7,9 +7,9 @@ lastopen = 2024-06-09 23:17:50
 lastsearch = 2024-08-09 16:24:18
 
 [en.wikipedia.org]
-match = -16.7%%
-title = Kikuko Inoue
-url = https://en.wikipedia.org/wiki/Kikuko_Inoue
+match = 0.0%%
+title = 
+url = https://en.wikipedia.org/wiki/XG_(group)
 
 [kpop.fandom.com]
 match = -47.1%%
@@ -42,9 +42,9 @@ title =
 url = https://www.ateezstoryline.com/ateez
 
 [www.youtube.com]
-match = -76.5%%
-title = Eltee Skhillz - Odg (Official Video)
-url = https://www.youtube.com/watch?v=DfOdZ3CTXko
+match = -200.0%%
+title = DAILY UPLOADS DAY 1 JFJFJFJF #music #fortnite #ukulele ...
+url = https://www.youtube.com/watch?v=SfhTqo-KgkQ
 
 [www.tiktok.com]
 match = 37.5%%
