--- a/images/chieu-cay-dai-loan-vien-da18/config.ini
+++ b/images/chieu-cay-dai-loan-vien-da18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-dai-loan-vien-da18.html
 lastopen = 2024-06-09 21:45:17
 
 [search]
-lastsearch = 2024-08-09 10:25:14
+lastsearch = 2024-08-09 16:41:13
 
 [www.diepxuan.com]
 match = 35.7%%
@@ -107,8 +107,8 @@ title = SÁCH HƯỚNG DẪN HỌC VIÊN
 url = https://stableprogram.org/pdf/vietnamese/STABLE Vietnamese Learner Manual - 6 ed..pdf
 
 [drhc-cosmetics.com]
-match = -71.4%%
-title = Goat Milk Orange (110g, 3.8oz.) (Skin brightening, Anti- ...
+match = -60.7%%
+title = DR.HC All-Natural Skincare Face Soap - Goat Milk Orange ...
 url = https://drhc-cosmetics.com/products/drc-lab-organic-natural-vegan-cosmetics-skincare-face-wash-soap-bar-xa-phong-rua-mat-duong-da-18
 
 [quangduc.com]
@@ -177,9 +177,9 @@ title = TP. Đào Viên · XUẤT KHẨU LAO ĐỘNG ĐÀI LOAN - Coda
 url = https://coda.io/@xuatkhaulaodong/xkld-dai-loan/tp-ao-vien-13
 
 [abina.vn]
-match = -75.0%%
-title = Viên uống Xtend-Life NR6: tăng sinh NAD tự nhiên, chống lão ...
-url = https://abina.vn/xtend-life-nr6-tang-sinh-nad-tu-nhien-tang-cuong-tuoi-tho/
+match = -57.1%%
+title = Bột làm 1kg sữa chua Hy Lạp vị mật ong manuka Easiyo - Abina
+url = https://abina.vn/sua-chua-hy-lap-mat-ong-manuka-easiyo-manuka-honey/
 
 [kinhtexaydung.gov.vn]
 match = -21.4%%
