--- a/images/chieu-cay-moc-hoa14/config.ini
+++ b/images/chieu-cay-moc-hoa14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-moc-hoa14.html
 lastopen = 2024-06-09 23:35:14
 
 [search]
-lastsearch = 2024-08-09 14:29:25
+lastsearch = 2024-08-09 16:38:44
 
 [www.youtube.com]
 match = -142.9%%
@@ -152,9 +152,9 @@ title = Hoàng hậu Dương Lệ Hoa - 14
 url = https://khoahoc.tv/s/Hoàng+hậu+Dương+Lệ+Hoa?p=14
 
 [www.tiktok.com]
-match = -152.6%%
-title = Dù a ấy ở Mỹ nhưng tui vẫn bắt có hoa 14/2 hihi 🤭🤭🤭 yêu lắm ...
-url = https://www.tiktok.com/@po.trann77/video/7335051037310569730
+match = -131.6%%
+title = "Chiều nay bật gốc bồ đề Hoàng hôn tắt nắng não nề nhân ...
+url = https://www.tiktok.com/@diem.hoa14/video/7393695673692048661
 
 [batdongsan.com.vn]
 match = -184.2%%
