--- a/images/chieu-lac-d2-08/config.ini
+++ b/images/chieu-lac-d2-08/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-lac-d2-08.html
 lastopen = 2024-06-20 13:15:42
 
 [search]
-lastsearch = 2024-08-09 11:42:39
+lastsearch = 2024-08-09 16:41:36
 
 [batdongsan.com.vn]
-match = -193.3%%
-title = Chung cư D2 Giảng Võ - Mua Bán Căn Hộ Chung Cư T8/ ...
-url = https://batdongsan.com.vn/ban-can-ho-chung-cu-chung-cu-d2-giang-vo
+match = -180.0%%
+title = Khu dân cư Phú Lợi - Mua Bán Căn Hộ Chung Cư T8/2024
+url = https://batdongsan.com.vn/ban-can-ho-chung-cu-khu-dan-cu-phu-loi
 
 [vinatools.com]
 match = -200.0%%
