--- a/images/bo-ga-goi-chun-xoa-2m-22/config.ini
+++ b/images/bo-ga-goi-chun-xoa-2m-22/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-goi-chun-xoa-2m-22.html
 lastopen = 2024-06-09 22:43:18
 
 [search]
-lastsearch = 2024-08-09 12:44:17
+lastsearch = 2024-08-09 16:47:39
 
 [www.diepxuan.com]
 match = -62.5%%
@@ -17,9 +17,9 @@ title = Nơi cung cấp chăn ga gối Sông Hồng Basic mã BC22
 url = https://changagoidemsonghong.com/chan-ga-goi-bc22
 
 [songhong.info]
-match = -33.3%%
-title = Nơi cung cấp chăn ga gối Sông Hồng Basic mã BC22
-url = https://songhong.info/chan-ga-goi-bc22
+match = -66.7%%
+title = Bộ chăn ga gối cotton 100%% mã màu BC22-063 - Sông Hồng ...
+url = https://songhong.info/chan-ga-goi-bc63
 
 [hanvico.com.vn]
 match = 41.7%%
@@ -27,9 +27,9 @@ title = Bộ ga chun LIVING - LV22
 url = https://hanvico.com.vn/san-pham/bo-ga-chun-living-lv22/
 
 [www.everonvn.vn]
-match = 12.5%%
-title = Everon 2022 - Bộ chăn ga gối
-url = https://www.everonvn.vn/bo-suu-tap/everon-2022.html
+match = -87.5%%
+title = Everon ESB-22051 | Bảng giá chi tiết bộ vỏ chăn ga gối ...
+url = https://www.everonvn.vn/chi-tiet/everon-esb22051.html
 
 [songhongchinhhang.vn]
 match = 0.0%%
@@ -37,9 +37,9 @@ title = Bộ chăn gối cao cấp Sông Hồng SH_UC22 025
 url = https://songhongchinhhang.vn/URBAN-COLLECTION/bo-urban-coleection-2022-2023/bo-chan-goi-cao-cap-song-hong-sh-uc22-025.html
 
 [everon.com.vn]
-match = 29.2%%
-title = Bộ Chăn Ga Everon EPM 22070
-url = https://everon.com.vn/bo-chan-ga-everon-epm-22070/
+match = -66.7%%
+title = Bộ Chăn Ga Everon EPM 22060 | Mới Nhất Năm 2022. Hotline
+url = https://everon.com.vn/bo-chan-ga-everon-epm-22060/
 
 [dailyeveron.vn]
 match = -66.7%%
@@ -58,8 +58,8 @@ url = https://songhongonline.vn/products/bo-san-pham-song-hong-sh-bc22-1
 
 [dongahome.vn]
 match = -12.5%%
-title = Bộ chăn ga SH_UC22 018 cao cấp Sông Hồng
-url = https://dongahome.vn/bo-chan-ga-sh_uc22-018
+title = Bộ chăn ga SH_UC22 019 cao cấp Sông Hồng
+url = https://dongahome.vn/bo-chan-ga-sh_uc22-019
 
 [thegioinem.com]
 match = -12.5%%
