--- a/images/ga-chun-dreamland-150x190-ct/config.ini
+++ b/images/ga-chun-dreamland-150x190-ct/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/ga-chun-dreamland-150x190-ct.html
 lastopen = 2024-06-07 00:24:00
 
 [search]
-lastsearch = 2024-08-09 15:43:27
+lastsearch = 2024-08-09 16:57:21
 
 [www.diepxuan.com]
-match = 10.7%%
-title = Chiếu lác 90x190 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-lac-90x190.html
+match = 17.9%%
+title = Điệp Xuân Ga chun EPCARLESS 180x200
+url = https://www.diepxuan.com/ga-chun-epcarless-180x200.html?srsltid=AfmBOorD0KCnMoFJHMlTDSPLIh95wD03T8SVQB6m-cjc0mWCf6GerayY
 
 [www.qcyc.ca]
 match = -53.6%%
@@ -29,7 +29,7 @@ url = https://www.sap.edu.hk/custompage/openiniframe.aspx?ct=custompage&webpagei
 [demxanh.com]
 match = 7.1%%
 title = Ga gối Sông Hồng basic TC BT24201
-url = https://demxanh.com/ga-goi-song-hong-basic-tc-bt24201.html
+url = https://demxanh.com/ga-goi-song-hong-basic-tc-bt24201.html?srsltid=AfmBOopFUR7z_W0ifBc5ROy2r9rVDYSNxQjEzDpz_9j8nlqmnlKpJMfT
 
 [stevematuro.com]
 match = -39.3%%
@@ -87,8 +87,8 @@ title = Gallery
 url = http://www.lacecarriage.com/gallery2.htm
 
 [bizonauto.com]
-match = -107.1%%
-title = A school where children learn to eat better - 英语点津News ...
+match = -96.4%%
+title = News educations days A school where children learn to eat better ...
 url = https://bizonauto.com/index3.php?name=https://xn--80aqaehuekgcjc7j.xn--p1ai/3758269488fe
 
 [picclick.co.uk]
