--- a/images/ga-ni-long-18/config.ini
+++ b/images/ga-ni-long-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-ni-long-18.html
 lastopen = 2024-06-09 23:39:01
 
 [search]
-lastsearch = 2024-08-09 14:41:51
+lastsearch = 2024-08-09 16:46:56
 
 [www.zillow.com]
 match = -115.4%%
@@ -607,9 +607,9 @@ title = Trump election case: Fani Willis accuses estranged wife of ...
 url = https://apnews.com/article/willis-wade-relationship-allegations-trump-election-indictment-aef1b2b7fca5bb03d4886cee4c5fee3b
 
 [www.lazada.vn]
-match = -176.9%%
-title = Ga Ni Long Giá Tốt T07/2024 | Mua tại Lazada.vn
-url = https://www.lazada.vn/tag/ga-ni-long/
+match = -169.2%%
+title = Ga Ni Long Giá Tốt T08/2024 | Mua tại Lazada.vn
+url = https://www.lazada.vn/tag/ga-ni-long/?srsltid=AfmBOoq0nO6ZtVZKzmTOTMqt7hV5HJ9YcQrb7_980VWU6eeIeB83Cwdu
 
 [www.njcaa.org]
 match = -140.0%%
