--- a/images/man-re-trang-10/config.ini
+++ b/images/man-re-trang-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-re-trang-10.html
 lastopen = 2024-06-07 00:52:54
 
 [search]
-lastsearch = 2024-08-09 16:29:13
+lastsearch = 2024-08-09 16:51:08
 
 [burningman.org]
 match = -60.0%%
@@ -122,9 +122,9 @@ title = Diabetes Research, Education, Advocacy | ADA
 url = https://diabetes.org/
 
 [mn.gov]
-match = -226.7%%
-title = Minnesota.gov Portal / mn.gov // Minnesota's State Portal
-url = https://mn.gov/
+match = -100.0%%
+title = Minnesota Department of Human Services
+url = https://mn.gov/dhs/
 
 [www.uscis.gov]
 match = -206.7%%
