CI images update

--- a/images/tam-trang-tri-ks-uc/config.ini
+++ b/images/tam-trang-tri-ks-uc/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tam-trang-tri-ks-uc.html
 lastopen = 2024-06-10 00:08:10
 
 [search]
-lastsearch = 2024-08-09 15:16:35
+lastsearch = 2024-08-09 17:22:53
 
 [demxanh.com]
 match = -84.2%%
 title = Tấm trang trí khách sạn giá rẻ nhất tại hệ thống ...
-url = https://demxanh.com/tam-trang-tri-khach-san.html
+url = https://demxanh.com/tam-trang-tri-khach-san.html?srsltid=AfmBOooSTMyAj0_qnw5PqNMtmxkLJdQOwy1wPoOUcUn9kK2EPjAIrlcP
 
 [thegioidemviet.vn]
 match = -73.7%%
