--- a/images/bo-bon-mua-chun-chan-140x190/config.ini
+++ b/images/bo-bon-mua-chun-chan-140x190/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-bon-mua-chun-chan-140x190.html
 lastopen = 2024-06-06 16:45:05
 
 [search]
-lastsearch = 2024-08-09 05:46:39
+lastsearch = 2024-08-09 17:19:44
 
 [www.everonvn.vn]
 match = -50.0%%
@@ -17,14 +17,14 @@ title = Chăn bốn mùa Everon chính hãng - Giảm giá tốt nhất
 url = https://everon.online/collections/chan-bon-mua-everon
 
 [www.diepxuan.com]
-match = 10.7%%
-title = Màn Hồng Hải 140x190 - Điệp Xuân
-url = https://www.diepxuan.com/man-hong-hai-140x190.html
+match = -3.6%%
+title = Bộ chăn bốn mùa ESB23022 160x200 - Điệp Xuân
+url = https://www.diepxuan.com/bo-chan-bon-mua-esb23022-160x200.html?srsltid=AfmBOopoRl_HEJ_ycD6pSx4xEkN_wW-hzgQW_rANyMubPGv2yL8F4F5I
 
 [demxanh.com]
 match = -32.1%%
 title = Đệm bốn mùa Olympia Massage vải gấm xốp chính hãng
-url = https://demxanh.com/dem-bon-mua-olympia-massage-vai-gam-xop.html
+url = https://demxanh.com/dem-bon-mua-olympia-massage-vai-gam-xop.html?srsltid=AfmBOopQZP7pQDzji-UoCrr285F0QLDq3yUQRNMqCIQ-3kOxdHtYGgRK
 
 [everonminhkhai.com]
 match = -26.7%%
