--- a/images/chieu-dieu-hoa-khong-goi-12/config.ini
+++ b/images/chieu-dieu-hoa-khong-goi-12/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-khong-goi-12.html
 lastopen = 2024-06-09 23:15:39
 
 [search]
-lastsearch = 2024-08-09 15:36:10
+lastsearch = 2024-08-09 17:24:59
 
 [demxanh.com]
 match = -14.8%%
 title = Bảng giá chiếu điều hòa cao cấp giá tốt nhất tại ...
-url = https://demxanh.com/chieu-dieu-hoa.html
+url = https://demxanh.com/chieu-dieu-hoa.html?srsltid=AfmBOopXgGHkUzJvVQbOfFpXEXqLDCwu6pGMAspYJVwNz7AgfX1NVLM2
 
 [shopee.vn]
 match = 0.0%%
