--- a/images/ga-chun-dreamland-150x190-ct/config.ini
+++ b/images/ga-chun-dreamland-150x190-ct/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/ga-chun-dreamland-150x190-ct.html
 lastopen = 2024-06-07 00:24:00
 
 [search]
-lastsearch = 2024-08-09 16:57:21
+lastsearch = 2024-08-09 17:26:22
 
 [www.diepxuan.com]
 match = 17.9%%
 title = Điệp Xuân Ga chun EPCARLESS 180x200
-url = https://www.diepxuan.com/ga-chun-epcarless-180x200.html?srsltid=AfmBOorD0KCnMoFJHMlTDSPLIh95wD03T8SVQB6m-cjc0mWCf6GerayY
+url = https://www.diepxuan.com/ga-chun-epcarless-180x200.html
 
 [www.qcyc.ca]
 match = -53.6%%
@@ -29,7 +29,7 @@ url = https://www.sap.edu.hk/custompage/openiniframe.aspx?ct=custompage&webpagei
 [demxanh.com]
 match = 7.1%%
 title = Ga gối Sông Hồng basic TC BT24201
-url = https://demxanh.com/ga-goi-song-hong-basic-tc-bt24201.html?srsltid=AfmBOopFUR7z_W0ifBc5ROy2r9rVDYSNxQjEzDpz_9j8nlqmnlKpJMfT
+url = https://demxanh.com/ga-goi-song-hong-basic-tc-bt24201.html
 
 [stevematuro.com]
 match = -39.3%%
