--- a/images/nem-foam-dreamland-uc-180x200x20/config.ini
+++ b/images/nem-foam-dreamland-uc-180x200x20/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-foam-dreamland-uc-180x200x20.html
 lastopen = 2024-06-07 00:24:18
 
 [search]
-lastsearch = 2024-08-09 14:47:38
+lastsearch = 2024-08-09 17:28:06
 
 [www.diepxuan.com]
 match = 40.6%%
@@ -12,9 +12,9 @@ title = Nệm Dreamland Úc 180x200x09 - Điệp Xuân
 url = https://www.diepxuan.com/nem-dreamland-uc-180x200x09.html
 
 [demxanh.com]
-match = 6.2%%
-title = Đệm bông ép Dreamland chống thoái hóa cột sống
-url = https://demxanh.com/dem-bong-ep-dreamland-chong-thoai-hoa-cot-song.html?srsltid=AfmBOoruj2Rt31hcUqAoygIVVLMgw6UvUXfjb23olNdHpp2utPT18kGZ
+match = 25.0%%
+title = Đệm bông ép Dreamland 1m8 giá bao nhiêu?
+url = https://demxanh.com/dem-bong-ep-dreamland-1m8-gia-bao-nhieu.html?srsltid=AfmBOor68mYLPkcUYRcf9N4LwDlVgirA2D6eE54BK7tiKWuzM7i23yuj
 
 [changagoidemdep.vn]
 match = -12.5%%
