--- a/images/nem-sieu-nhe-9f-15/config.ini
+++ b/images/nem-sieu-nhe-9f-15/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/nem-sieu-nhe-9f-15.html
 lastopen = 2024-06-10 00:49:22
 
 [search]
-lastsearch = 2024-08-09 14:36:01
+lastsearch = 2024-08-09 17:20:04
 
 [www.lazada.vn]
-match = -94.4%%
-title = Nệm Siêu Nhẹ Giá Tốt T07/2024 | Mua tại Lazada.vn
-url = https://www.lazada.vn/tag/nem-sieu-nhe/
+match = -44.4%%
+title = Nem Cao Su Non Day Giá Tốt T06/2024
+url = https://www.lazada.vn/tag/nem-cao-su-non-day/
 
 [m.facebook.com]
 match = -161.1%%
@@ -17,8 +17,8 @@ title = Người Việt Bolsa/Orange County | 💥💥💥 Nem chua lá ổi Bì
 url = https://m.facebook.com/groups/nguoivietorangecounty/posts/2885626441587720/
 
 [www.instagram.com]
-match = -138.9%%
-title = NAN atelier | |𝐅𝐄𝐄𝐃𝐁𝐀𝐂𝐊| My Muse with Nem dress ♥️ ✨ ...
+match = -133.3%%
+title = NAN atelier | |𝐅𝐄𝐄𝐃𝐁𝐀𝐂𝐊| My Muse with Nem dress ♥️ ...
 url = https://www.instagram.com/nan__atelier/p/C801bPgPbAg/?locale=代办圣诞岛判决书模版/样本联系{威信+TG/飞机:@buth2788}ayls6??????ѧ??ƾc6a4Y&hl=am-et
 
 [thegioinem.com]
@@ -179,7 +179,7 @@ url = https://www.sec.gov/Archives/edgar/data/1516522/000101489714000319/0001014
 [www.pge.com]
 match = 0.0%%
 title = 
-url = https://www.pge.com/assets/pge/docs/account/billing-and-assistance/nem-bill-explainer.pdf
+url = https://www.pge.com/en/account/billing-and-assistance/understand-your-bill/net-energy-metering-bill.html
 
 [anta.com.vn]
 match = 0.0%%
