--- a/images/ruot-nem-korea-9f-18/config.ini
+++ b/images/ruot-nem-korea-9f-18/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-18.html
 lastopen = 2024-06-10 00:54:35
 
 [search]
-lastsearch = 2024-08-09 16:48:00
+lastsearch = 2024-08-09 17:17:40
 
 [en.wikipedia.org]
-match = 15.0%%
-title = Timeline of Korean history
-url = https://en.wikipedia.org/wiki/Timeline_of_Korean_history
+match = -28.6%%
+title = Park Chung Hee
+url = https://en.wikipedia.org/wiki/Park_Chung_Hee
 
 [peacehistory-usfp.org]
 match = -45.0%%
