--- a/images/tui-korea-16/config.ini
+++ b/images/tui-korea-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-korea-16.html
 lastopen = 2024-06-17 10:42:33
 
 [search]
-lastsearch = 2024-08-09 16:56:20
+lastsearch = 2024-08-09 17:13:53
 
 [www.cfd-online.com]
 match = -266.7%%
@@ -37,9 +37,9 @@ title = Tūī
 url = https://davidtrubridge.com/au/lighting/tui
 
 [www.linkedin.com]
-match = -200.0%%
-title = TUI
-url = https://www.linkedin.com/company/tuigroup
+match = 10.0%%
+title = TUI's Post
+url = https://www.linkedin.com/posts/tuigroup_???-???-????-????-the-activity-7169328748431925248-2RWQ
 
 [www.diepxuan.com]
 match = -133.3%%
@@ -74,7 +74,7 @@ url = https://www.cruisetimetables.com/tuicruises-10apr2024.html
 [www.lightology.com]
 match = -200.0%%
 title = Tui Pendant by David Trubridge - Lightology
-url = https://www.lightology.com/index.php?module=prod_detail&prod_id=1094441&srsltid=AfmBOop2-g9UCvBkb9yaEQw5-K0jsFCjwXofgKfuv4NSkzUC9RP2w7Qw
+url = https://www.lightology.com/index.php?module=prod_detail&prod_id=1094441
 
 [vitalimpacts.org]
 match = -91.7%%
