CI images update

--- a/images/chieu-cay-cao-bang-a-18/config.ini
+++ b/images/chieu-cay-cao-bang-a-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-cao-bang-a-18.html
 lastopen = 2024-06-09 23:45:38
 
 [search]
-lastsearch = 2024-08-09 13:28:19
+lastsearch = 2024-08-09 17:49:11
 
 [chieutruc.info]
 match = -73.9%%
@@ -18,8 +18,8 @@ url = https://www.diepxuan.com/chieu-cay-cao-bang-lua-180x200.html
 
 [demxanh.com]
 match = -39.1%%
-title = Bảng giá chiếu trúc Cao Bằng Tây Bắc mới nhất 2021
-url = https://demxanh.com/bang-gia-chieu-truc-cao-bang-tay-bac-moi-nhat-2019.html
+title = Bảng giá chiếu trúc Cao Bằng Cao Sơn mới nhất 2024
+url = https://demxanh.com/bang-gia-chieu-truc-cao-bang-cao-son-moi-nhat-2019.html
 
 [shopee.vn]
 match = -78.3%%
@@ -32,9 +32,9 @@ title = Chiếu Tre Cao Bằng - Đà Nẵng
 url = https://suongtuyet.com/chieu-truc-cao-bang
 
 [chieutrucsaigon.com]
-match = -17.4%%
-title = CHIẾU TRÚC CAO BẰNG CHÍNH HÃNG ĐƯỢC BÁN Ở ...
-url = https://chieutrucsaigon.com/tin-tuc/tin-trong-nuoc/chieu-truc-cao-bang-chinh-hang-duoc-ban-o-dau-71.html
+match = 39.1%%
+title = CHIẾU TRÚC THANH CAO BẰNG 1M8X2M
+url = https://chieutrucsaigon.com/chieu-truc-thanh-cao-bang-1m8x2m.html
 
 [thegioidemonline.com]
 match = 43.5%%
@@ -102,8 +102,8 @@ title = Chiếu Tre Cao bằng Nan to loại đẹp Mát Lạnh Mùa Hè
 url = https://www.lazada.vn/products/chieu-truc-long-chieu-tre-cao-bang-nan-to-loai-dep-mat-lanh-mua-he-du-tat-ca-cac-kich-thuoc-i2239379152.html
 
 [chieutruccaobang.com]
-match = 52.6%%
-title = Chiếu Trúc Cao Bằng
+match = -69.6%%
+title = Chiếu Trúc Cao Bằng - Cung cấp chiếu trúc Cao Sơn giá tốt
 url = https://chieutruccaobang.com/
 
 [www.vietnamplus.vn]
@@ -117,9 +117,9 @@ title = Cây sắt phi 18 nặng bao nhiêu kg? Dài bao nhiêu mét?
 url = https://thep.hoaphat.com.vn/tin-cong-nghe/cay-sat-phi-18-nang-bao-nhieu-kg.html
 
 [olm.vn]
-match = -95.7%%
-title = 1) 1 thua vuon HThang co day lon la 180m, day be bang 3/ ...
-url = https://olm.vn/hoi-dap/tim-kiem?id=103358625587&q=1) 1 thua vuon HThang co day lon la 180m, day be bang 3/5 day lon, chieu cao bang 2/3 day be. Nguoi ta trong nhan o trong khu dat, cu 100m2 thi trong duoc 24 cay. Hoi ca khu vuon trong duoc bao nhieu...
+match = -100.0%%
+title = một vườn hoa hình bình hành có cạnh đáy 75m, chiều cao ...
+url = https://olm.vn/cau-hoi/mot-vuon-hoa-hinh-binh-hanh-co-canh-day-75m-chieu-cao-bang-35-canh-day-nguoi-ta-trong-hoa-tren-manh-vuon-do-trung-binh-cu-5m-vuong-thi-trong-duoc.5192993794
 
 [caobang.gov.vn]
 match = -13.0%%
