--- a/images/nem-everhome-tc-16-20/config.ini
+++ b/images/nem-everhome-tc-16-20/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-everhome-tc-16-20.html
 lastopen = 2024-06-09 23:43:18
 
 [search]
-lastsearch = 2024-08-09 14:00:00
+lastsearch = 2024-08-09 17:48:49
 
 [www.sieuthinem.com]
 match = -28.6%%
@@ -12,9 +12,9 @@ title = NỆM CAO SU THIÊN NHIÊN EVERHOME - DELUXE
 url = https://www.sieuthinem.com/ct-san-pham/273/nem-cao-su-thien-nhien-everhome-deluxe-sieu-thi-nem-com.html
 
 [demxanh.com]
-match = -19.0%%
-title = Đệm bông ép chính hãng giảm 50 ...
-url = https://demxanh.com/dem-bong-ep.html
+match = 35.3%%
+title = Everhome - Hà Nội
+url = https://demxanh.com/khan-trai-ban-khach-san.html?sort=view&brand=6
 
 [www.ebay.com]
 match = -100.0%%
