--- a/images/chan-hoi-yuki/config.ini
+++ b/images/chan-hoi-yuki/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/chan-hoi-yuki.html
 lastopen = 2024-06-10 00:16:36
 
 [search]
-lastsearch = 2024-08-09 16:59:27
+lastsearch = 2024-08-09 17:39:27
 
 [www.instagram.com]
-match = -30.8%%
-title = Yuki Chan (@yukichan_la)
-url = https://www.instagram.com/yukichan_la/?hl=en
+match = -23.1%%
+title = Hoi Chan (@hoichandraws)
+url = https://www.instagram.com/hoichandraws/?hl=en
 
 [www.linkedin.com]
-match = 23.1%%
-title = Hoi Chan Studio
-url = https://www.linkedin.com/in/yiu-hoi-chan
+match = -192.3%%
+title = Hoi Ki Chan - 2D Game Artist - Omoté Singapore
+url = https://www.linkedin.com/in/hoi-ki-chan-519219147
 
 [www.creativeboom.com]
 match = -307.7%%
