--- a/images/chieu-dieu-hoa-khong-goi-15/config.ini
+++ b/images/chieu-dieu-hoa-khong-goi-15/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-khong-goi-15.html
 lastopen = 2024-06-09 23:41:33
 
 [search]
-lastsearch = 2024-08-09 16:25:02
+lastsearch = 2024-08-09 17:32:53
 
 [demxanh.com]
 match = 0.0%%
 title = [Hot] Bảng giá chiếu Điều Hoà mới nhất 2023
-url = https://demxanh.com/bang-gia-chieu-dieu-hoa-moi-nhat-2019.html?srsltid=AfmBOoqwVItuDmbVyFs5RPgLhMisYjye3C7QIbaZXrk219Ewb8Drjpzg
+url = https://demxanh.com/bang-gia-chieu-dieu-hoa-moi-nhat-2019.html?srsltid=AfmBOopfIyDchQnACA-hW6FOuMilfAigvtZoamhKZca2BzF_lJlSBQpM
 
 [goni.vn]
 match = 14.8%%
@@ -24,7 +24,7 @@ url = https://shopee.vn/Chiếu-Điều-Hoà-Sợi-Mây-Tơ-Tằm-Mát-Lạnh-Kh
 [foreverbedding.net]
 match = 0.0%%
 title = Nằm Chiếu Điều Hòa Có Mát Không? - Forever Bedding
-url = https://foreverbedding.net/nam-chieu-dieu-hoa-co-mat-khong
+url = https://foreverbedding.net/nam-chieu-dieu-hoa-co-mat-khong?srsltid=AfmBOopsd6jorWO8n26TDF8zVCEJbnp9He_E0Y4_r1RJXZazcxa-4zg4
 
 [congtynemthangloi.com]
 match = -29.6%%
@@ -37,9 +37,9 @@ title = Chiếu điều hòa có mát không? Review 10 ...
 url = https://tiki.vn/blog/chieu-dieu-hoa/
 
 [kyoryo.vn]
-match = -40.7%%
-title = Top 3 loại chiếu điều hòa cao cấp nhất thị trường - Kyoryo
-url = https://kyoryo.vn/tin-tuc/top-3-loai-chieu-dieu-hoa-cao-cap-nhat-thi-truong-.html
+match = 18.5%%
+title = Chiếu (Ga) Điều Hòa Viscose mát - Kyoryo
+url = https://kyoryo.vn/chieu-cao-cap/chieu-dieu-hoa-viscose.html
 
 [suongtuyet.com]
 match = 18.5%%
@@ -57,9 +57,9 @@ title = Nằm chiếu điều hoà có tốt cho sức khoẻ không?
 url = https://thegioinem.com/nam-chieu-dieu-hoa-co-tot-cho-suc-khoe-khong.html
 
 [www.youtube.com]
-match = -7.4%%
-title = DANG DỞ - NAL | OFFICIAL MUSIC VIDEO
-url = https://www.youtube.com/watch?v=-ddYMCa_58o
+match = -55.6%%
+title = Thực hư về khả năng làm mát của chiếu điều hòa | An toàn ...
+url = https://www.youtube.com/watch?v=ccaTWASdw7I
 
 [sieuthidem.vn]
 match = 22.2%%
@@ -84,7 +84,7 @@ url = https://www.congnghieptieudung.vn/su-that-ve-cong-dung-cua-chieu-dieu-hoa-
 [spacet.vn]
 match = -40.7%%
 title = Hướng dẫn giặt chiếu điều hòa đúng cách, đơn giản, hiệu ...
-url = https://spacet.vn/blog/nguon-cam-hung/huong-dan-giat-chieu-dieu-hoa-dung-cach-don-gian-hieu-qua?srsltid=AfmBOoqUUGfSfAJ7vBUOY31zUOVXfLprIcnjBPJsj-cSRmZ--5hC8lDE
+url = https://spacet.vn/blog/nguon-cam-hung/huong-dan-giat-chieu-dieu-hoa-dung-cach-don-gian-hieu-qua?srsltid=AfmBOopbRjCWeGdSdvsxhYVeQA0FVOGzqjxbsE2UGHklZrXRxWmxRIT9
 
 [chieutrelinhchi.com]
 match = 0.0%%
