--- a/images/chieu-dieu-hoa-khong-goi-cao-su-16/config.ini
+++ b/images/chieu-dieu-hoa-khong-goi-cao-su-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-khong-goi-cao-su-16.html
 lastopen = 2024-06-09 23:20:09
 
 [search]
-lastsearch = 2024-08-09 15:28:03
+lastsearch = 2024-08-09 17:42:56
 
 [shopee.vn]
-match = 35.3%%
-title = Chiếu Điều Hòa Giá Tốt, Chất Lượng, Đảm Bảo
-url = https://shopee.vn/list/chiếu điều hòa
+match = 2.9%%
+title = Chiếu điều hoà cao su non 3D chống nóng lưng kèm 2 vỏ ...
+url = https://shopee.vn/Chiếu-điều-hoà-cao-su-non-3D-chống-nóng-lưng-kèm-2-vỏ-gối-nằm-kích-thước-1m6x2m-1m8x2m-i.623633.16760413116
 
 [olbedding.com]
 match = 11.8%%
@@ -24,7 +24,7 @@ url = https://goni.vn/chieu-dieu-hoa-goni/
 [demxanh.com]
 match = 14.7%%
 title = Bảng giá chiếu điều hòa cao cấp giá tốt nhất tại ...
-url = https://demxanh.com/chieu-dieu-hoa.html
+url = https://demxanh.com/chieu-dieu-hoa.html?srsltid=AfmBOoondTw1zDAwNI6Gl7IHl8-vemP-4s1XMO_MdWHup0utHXMvJRZf
 
 [giadunganhvan.vn]
 match = 48.0%%
