--- a/images/ga-ni-long-18/config.ini
+++ b/images/ga-ni-long-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-ni-long-18.html
 lastopen = 2024-06-09 23:39:01
 
 [search]
-lastsearch = 2024-08-09 16:46:56
+lastsearch = 2024-08-09 17:35:22
 
 [www.zillow.com]
 match = -115.4%%
@@ -609,7 +609,7 @@ url = https://apnews.com/article/willis-wade-relationship-allegations-trump-elec
 [www.lazada.vn]
 match = -169.2%%
 title = Ga Ni Long Giá Tốt T08/2024 | Mua tại Lazada.vn
-url = https://www.lazada.vn/tag/ga-ni-long/?srsltid=AfmBOoq0nO6ZtVZKzmTOTMqt7hV5HJ9YcQrb7_980VWU6eeIeB83Cwdu
+url = https://www.lazada.vn/tag/ga-ni-long/
 
 [www.njcaa.org]
 match = -140.0%%
