--- a/images/man-in-hoa-dep-16/config.ini
+++ b/images/man-in-hoa-dep-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-in-hoa-dep-16.html
 lastopen = 2024-06-10 01:11:01
 
 [search]
-lastsearch = 2024-08-09 15:26:37
+lastsearch = 2024-08-09 17:34:19
 
 [www.tiktok.com]
 match = -235.3%%
@@ -665,4 +665,9 @@ url = https://motchillj.tv/
 match = 0.0%%
 title = 
 url = https://ncdoj.gov/protecting-consumers/home-repair-and-products/homeowners-associations/
+
+[www.energy.gov]
+match = 0.0%%
+title = 
+url = https://www.energy.gov/nnsa/articles/nuclear-weapons-life-cycle-fact-sheet
 
