--- a/images/tam-trai-ks-uc-220-250/config.ini
+++ b/images/tam-trai-ks-uc-220-250/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tam-trai-ks-uc-220-250.html
 lastopen = 2024-06-07 01:32:07
 
 [search]
-lastsearch = 2024-08-09 17:18:01
+lastsearch = 2024-08-09 17:34:40
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -242,9 +242,9 @@ title = Sheet 1
 url = https://origin-www.gsa.gov/system/files?file=FRPP GLC - Foreign Countries_June_6_2024 (1).xlsx
 
 [ntrs.nasa.gov]
-match = -118.2%%
-title = Computer Programs for Calculating Pressure Distributions ...
-url = https://ntrs.nasa.gov/api/citations/19810018506/downloads/19810018506.pdf
+match = -216.7%%
+title = notice
+url = https://ntrs.nasa.gov/api/citations/19810009420/downloads/19810009420.pdf
 
 [trackandfieldnews.com]
 match = 13.6%%
@@ -735,4 +735,14 @@ url = https://www.eldoradocounty.ca.gov/files/assets/county/v/1/documents/govern
 match = -28.6%%
 title = ACTIVE MEMBERS
 url = https://www.jstor.org/stable/pdf/43676151.pdf
+
+[records.tamarac.org]
+match = -13.6%%
+title = City of Tamarac Resolution R-2001-018
+url = https://records.tamarac.org/WebLink/DocView.aspx?id=311856&dbid=0&repo=CityOfTamarac
+
+[apps.dtic.mil]
+match = -95.5%%
+title = AIRCRAFT DESIGNER'S HANDBOOK FOR TITANIUM ... - DTIC
+url = https://apps.dtic.mil/sti/tr/pdf/AD0821839.pdf
 
