CI images update

--- a/images/chan-5-kg-kq-khong-song/config.ini
+++ b/images/chan-5-kg-kq-khong-song/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chan-5-kg-kq-khong-song.html
 lastopen = 2024-06-09 23:49:54
 
 [search]
-lastsearch = 2024-08-09 14:45:18
+lastsearch = 2024-08-09 17:47:06
 
 [demxanh.com]
-match = -60.9%%
-title = Chăn lông cừu là gì? Nên chọn loại chăn lông cừu nào?
-url = https://demxanh.com/chan-long-cuu-la-gi-nen-chon-loai-chan-long-cuu-nao.html
+match = 26.3%%
+title = Chăn lông 5kg mã 02
+url = https://demxanh.com/chan-long-5kg-ma-02.html
 
 [shopee.vn]
 match = 43.5%%
@@ -27,9 +27,9 @@ title = Chăn lông KQ cao cấp
 url = https://thegioidemonline.com/chan-long-kq-ma-01.html
 
 [www.youtube.com]
-match = -87.0%%
-title = Nấu Nồi Lẩu Mắm Đầu Năm Nhúng Bắp Chuối Hột Ăn Một ...
-url = https://www.youtube.com/watch?v=_urBtuvQ-kQ
+match = -100.0%%
+title = Bang Chan vibing to cool music while his computer kinda ...
+url = https://www.youtube.com/watch?v=rezmW8IDkRk
 
 [phongkhongkhongquan.vn]
 match = -82.6%%
