--- a/images/chieu-cay-cao-bang-a-18/config.ini
+++ b/images/chieu-cay-cao-bang-a-18/config.ini
@@ -12,9 +12,9 @@ title = Chiếu trúc Cao Bằng Cao Sơn - thương hiệu hàng đầu Việt 
 url = https://chieutruc.info/chieu-truc-cao-bang-cao-son/
 
 [www.diepxuan.com]
-match = 17.4%%
-title = Chiếu cây Cao Bằng lụa 180x200 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-cay-cao-bang-lua-180x200.html
+match = 26.1%%
+title = Chiếu cây Cao Bằng A 180x200 - Điệp Xuân
+url = https://www.diepxuan.com/chieu-cay-cao-bang-a-180x200.html
 
 [demxanh.com]
 match = -39.1%%
@@ -47,9 +47,9 @@ title = Chiếu trúc cao bằng ở tại Hà Tĩnh
 url = https://hanggiadunghatinh.com/?x=76/san-pham/chieu-truc-cao-bang
 
 [www.facebook.com]
-match = 21.7%%
-title = Chiếu Trúc Cao Sơn Cao Bằng | Cao Bang
-url = https://www.facebook.com/chieutruccaobangcbg/
+match = -52.2%%
+title = Chiếu trúc Cao Bằng, Chiếu trúc thanh, Chiếu trúc cây
+url = https://www.facebook.com/chieutrucvietso1/
 
 [chieu.com.vn]
 match = 52.6%%
