--- a/images/chieu-cay-ht-10/config.ini
+++ b/images/chieu-cay-ht-10/config.ini
@@ -171,3 +171,8 @@ match = -106.7%%
 title = Chiều Cao HT-M15-8 Công Tắc Phao Enm-10 Flygt
 url = https://vietnamese.alibaba.com/product-detail/HEIGHT-HT-M15-8-flygt-enm-60769591286.html
 
+[tiki.vn]
+match = -173.3%%
+title = Chiếu trúc hàng chính hãng, giao nhanh - Tháng 8, 2024
+url = https://tiki.vn/search?q=chiếu trúc
+
