--- a/images/bo-bon-mua-chun-chan-182m/config.ini
+++ b/images/bo-bon-mua-chun-chan-182m/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-bon-mua-chun-chan-182m.html
 lastopen = 2024-06-07 00:25:46
 
 [search]
-lastsearch = 2024-08-09 16:23:55
+lastsearch = 2024-08-09 17:46:26
 
 [everon.online]
 match = 12.0%%
@@ -19,7 +19,7 @@ url = https://everonchinhhang.vn/products/bo-chan-bon-mua-hoa-ngot-ngao-esm24015
 [everonvn.com.vn]
 match = 28.0%%
 title = Báo giá chăn 4 mùa Everon
-url = https://everonvn.com.vn/everon/582/chan-bon-mua-everon?srsltid=AfmBOor49_eJBWo3myEnRuP02P8W55KIZ80PlDByt5GoDYUrWwx3P7x2
+url = https://everonvn.com.vn/everon/582/chan-bon-mua-everon
 
 [www.changagoidemeveron.vn]
 match = -8.0%%
@@ -52,9 +52,9 @@ title = Bán căn hộ chung cư tại Đường 129, , Huyện Thăng Bình ...
 url = https://batdongsan.com.vn/ban-can-ho-chung-cu-duong-129-516/dt-tu-50m2-den-80m2-1pn
 
 [www.youtube.com]
-match = -96.0%%
-title = Vở bài tập Toán lớp 5 - trang 69, 70 - Bài 136: Luyện tập ...
-url = https://www.youtube.com/watch?v=U84zJdnzJak
+match = -80.0%%
+title = Hào Khí Việt Nam ♫ Quý Dương ♫ Việt Nam ơi, giống hùng ...
+url = https://www.youtube.com/watch?v=whphnvJAYkQ
 
 [bdshanoi.com.vn]
 match = -4.0%%
@@ -74,7 +74,7 @@ url = https://www.canhociputra.com/ban-can-ho-chung-cu-ciputra/ban-gap-can-ho-4-
 [www.everonvni.vn]
 match = 24.0%%
 title = BỘ CHĂN BỐN MÙA HOA MỘC LAN ESB23022
-url = https://www.everonvni.vn/bo-chan-bon-mua-hoa-moc-lan-esb23022/?srsltid=AfmBOorixZ95D8mZbJRw8RhfNTtPpBdbZJvY5OUkn9aOhsYOtbtmrAV0
+url = https://www.everonvni.vn/bo-chan-bon-mua-hoa-moc-lan-esb23022/
 
 [format.com.vn]
 match = -100.0%%
