--- a/images/chan-long-muji/config.ini
+++ b/images/chan-long-muji/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-long-muji.html
 lastopen = 2024-07-01 21:12:38
 
 [search]
-lastsearch = 2024-08-09 14:40:48
+lastsearch = 2024-08-09 17:52:02
 
 [www.muji.com]
 match = -33.3%%
@@ -64,7 +64,7 @@ url = https://tiki.vn/chan-long-tuyet-muji-sieu-mem-min-cao-cap-1-8kg-p157163129
 [www.muji.us]
 match = -7.1%%
 title = Tableware | Home
-url = https://www.muji.us/collections/tableware
+url = https://www.muji.us/collections/tableware?srsltid=AfmBOop80ZzUfipHD3WXOA94liFBYBYTkpmAwpEdzBhsabk6rz1ulEd4
 
 [xachtaynhat.com.vn]
 match = -35.7%%
@@ -102,9 +102,9 @@ title = Muji Rice Bran Pickle
 url = https://www.tiktok.com/discover/muji-rice-bran-pickle
 
 [www.lazada.vn]
-match = -57.1%%
-title = Chăn Tuyết Muji Giá Tốt T08/2024
-url = https://www.lazada.vn/tag/chan-tuyet-muji/
+match = -62.5%%
+title = Untitled
+url = https://www.lazada.vn/tag/chan-long-muji/?srsltid=AfmBOoo8UIwnc4J2VRBBw06m27_tg-1j2NhXRTI1p6I__wMOQwvYOae_
 
 [sugoimart.com]
 match = -257.1%%
