--- a/images/chieu-lac-soc-16/config.ini
+++ b/images/chieu-lac-soc-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-16.html
 lastopen = 2024-06-09 23:48:14
 
 [search]
-lastsearch = 2024-08-09 15:39:40
+lastsearch = 2024-08-09 17:58:41
 
 [www.pnj.com.vn]
 match = -56.2%%
@@ -99,7 +99,7 @@ url = https://baodongthap.vn/suy-ngam/cau-chuyen-soi-lac-soi-bo-cau-chuyen-ve-la
 [nhathuoclongchau.com.vn]
 match = -193.8%%
 title = 16 tuổi còn tăng chiều cao được không và tăng bằng cách ...
-url = https://nhathuoclongchau.com.vn/bai-viet/16-tuoi-con-tang-chieu-cao-duoc-khong-va-tang-bang-cach-nao.html?srsltid=AfmBOoqtcTPZum9sBeGaLhEZ_myr2XVbZXRDwAPDwpkbKMgaa4tGZv7l
+url = https://nhathuoclongchau.com.vn/bai-viet/16-tuoi-con-tang-chieu-cao-duoc-khong-va-tang-bang-cach-nao.html
 
 [npkdinhvu.com.vn]
 match = -81.2%%
