--- a/images/ga-chun-thang-loi-180x200/config.ini
+++ b/images/ga-chun-thang-loi-180x200/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-chun-thang-loi-180x200.html
 lastopen = 2024-06-06 16:41:04
 
 [search]
-lastsearch = 2024-08-09 13:52:16
+lastsearch = 2024-08-09 17:54:53
 
 [maythangloi.com.vn]
 match = -77.8%%
@@ -44,12 +44,12 @@ url = https://nemhana.com/ga-chun/
 [demxanh.com]
 match = 0.0%%
 title = Bộ ga chun Cotton chống thấm màu xám đậm
-url = https://demxanh.com/bo-ga-chun-cotton-chong-tham-mau-xam-dam.html?srsltid=AfmBOorveweZSgSBNlrPo5uMyn7ZGJAa0nrfOm9cj376-Yz6oFGIYI_K
+url = https://demxanh.com/bo-ga-chun-cotton-chong-tham-mau-xam-dam.html?srsltid=AfmBOop0m_2Hrw0s6k3_Oo5RnETF0DFpSeBWF56UBDeGPGCKfk9FEM5I
 
 [www.lazada.vn]
 match = 0.0%%
 title = TXVhIELhu5kgZ2EgZ2nGsOG7n...
-url = https://www.lazada.vn/ga-giuong/th-ng-l-i/
+url = https://www.lazada.vn/ga-giuong/th-ng-l-i/?srsltid=AfmBOoqOWAO_uXNmGUl284oMa_IbOx2oIzeCpahOVVTRccindVjZWhjZ
 
 [nemcaosuthangloi.vn]
 match = 4.0%%
