--- a/images/man-ren-14/config.ini
+++ b/images/man-ren-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-ren-14.html
 lastopen = 2024-06-06 17:06:44
 
 [search]
-lastsearch = 2024-08-09 16:31:05
+lastsearch = 2024-08-09 17:57:59
 
 [www.youtube.com]
 match = -420.0%%
@@ -17,9 +17,9 @@ title = Tung's Acupuncture points 33.13 (Ren shi), 33.14 (Di ...
 url = https://www.sinimed.co.il/en/acupuncture/en-33-13-33-14-33-15/
 
 [www.tumblr.com]
-match = -70.0%%
-title = ren 14 days with you
-url = https://www.tumblr.com/tagged/ren 14 days with you
+match = -40.0%%
+title = 14dwy ren on Tumblr
+url = https://www.tumblr.com/tagged/14dwy ren
 
 [www.garagejournal.com]
 match = -200.0%%
@@ -37,9 +37,9 @@ title = Ren (@Renmakesmusic) / X
 url = https://twitter.com/renmakesmusic
 
 [www.facebook.com]
-match = -370.0%%
-title = AcuPro Academy - Ren 14 (CV 14) located 6 cun above ...
-url = https://www.facebook.com/photo.php?fbid=1547299565411654&id=393176087490680&set=a.395996077208681
+match = -390.0%%
+title = Ren - Coming up to 14 years of living with a chronic...
+url = https://www.facebook.com/renmakesmusic/posts/coming-up-to-14-years-of-living-with-a-chronic-illnessi-always-said-if-i-ever-ha/913039023526946/
 
 [books.google.com]
 match = -460.0%%
@@ -122,9 +122,9 @@ title =
 url = https://vndb.org/v36279
 
 [cutiesai.itch.io]
-match = 0.0%%
-title = 
-url = https://cutiesai.itch.io/14dayswithyou/purchase
+match = -240.0%%
+title = 14 Days With You by cutiesai - Itch.io
+url = https://cutiesai.itch.io/14dayswithyou
 
 [www.koha.net]
 match = 0.0%%
