--- a/images/nem-everon-180x200x9/config.ini
+++ b/images/nem-everon-180x200x9/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-everon-180x200x9.html
 lastopen = 2024-06-06 17:09:32
 
 [search]
-lastsearch = 2024-08-09 16:58:45
+lastsearch = 2024-08-09 17:55:58
 
 [www.everonvn.vn]
 match = -105.0%%
@@ -54,7 +54,7 @@ url = https://nemgiakho.com/cua-hang-nem-everon-180x200x10-gia-re-chinh-hang.htm
 [www.lazada.vn]
 match = -90.0%%
 title = [Trả góp 0%%] Nệm bông ép gấp 3 Everon Ceramic ...
-url = https://www.lazada.vn/products/tra-gop-0-nem-bong-ep-gap-3-everon-ceramic-180x200x9cm-bao-hanh-5-nam-i100711236.html?srsltid=AfmBOopLMb_v58oTbizFlQET6ELv7qeMrHpBG9AdEF5_9qQMQwUPt-s7
+url = https://www.lazada.vn/products/tra-gop-0-nem-bong-ep-gap-3-everon-ceramic-180x200x9cm-bao-hanh-5-nam-i100711236.html
 
 [nemeveron.com.vn]
 match = -165.0%%
