--- a/images/tham-xop-18/config.ini
+++ b/images/tham-xop-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-xop-18.html
 lastopen = 2024-06-07 00:22:33
 
 [search]
-lastsearch = 2024-08-09 16:28:52
+lastsearch = 2024-08-09 17:48:09
 
 [www.sendo.vn]
 match = 0.0%%
@@ -28,13 +28,13 @@ url = https://thamtretho.com/
 
 [trieuchau.com]
 match = -200.0%%
-title = 30*30*18 tấm - Thảm xốp trải sàn nỉ Âu Lạc
-url = https://trieuchau.com/vi-vn/1057/28066/Tham-Xop-30x30cm/303018-tam--Tham-xop-trai-san-ni-Au-Lac
+title = 30*30*18 tấm - Thảm xốp mặt nỉ ghép Âu Lạc
+url = https://trieuchau.com/vi-vn/1057/28077/Tham-Xop-30x30cm/303018-tam--Tham-xop-mat-ni-ghep-Au-Lac
 
 [www.lazada.vn]
 match = -109.1%%
-title = BỘ THẢM XỐP LÓT TRẢI SÀN CAO CẤP
-url = https://www.lazada.vn/products/bo-tham-xop-lot-trai-san-cao-cap-tham-xop-lot-san-van-go-bo-gom-6-12-18-24-30-36-42-48-tam-tham-trai-san-i377144776.html?srsltid=AfmBOoohnwfvxmFgHZxEcf11yPbtgZNoHyXhVAsBdLdlKGsGSdSZaGIk
+title = Thảm Xốp Lót Sàn - BỘ gồm 18 MIẾNG
+url = https://www.lazada.vn/products/tham-xop-lot-san-bo-gom-18mieng-i1865380749.html
 
 [tayphuthuan.com]
 match = -154.5%%
