--- a/images/tui-singapore14/config.ini
+++ b/images/tui-singapore14/config.ini
@@ -4,11 +4,11 @@ url = https://www.diepxuan.com/tui-singapore14.html
 lastopen = 2024-06-17 10:45:32
 
 [search]
-lastsearch = 2024-08-09 13:30:06
+lastsearch = 2024-08-09 17:46:47
 
 [www.tui.co.uk]
-match = -153.3%%
-title = Where We Fly | Flights with TUI 2024 / ...
+match = -160.0%%
+title = Where We Fly | Flights with TUI 2024 / 2025
 url = https://www.tui.co.uk/flight/where-we-fly
 
 [cruisepanda.com]
@@ -72,8 +72,8 @@ title = First TUI passenger flight from Birmingham to Singapore ...
 url = https://www.shropshirestar.com/news/business/2023/12/14/first-tui-passenger-flight-to-singapore-takes-off-from-birmingham/
 
 [www.flightaware.com]
-match = -200.0%%
-title = BY58 (TOM58) TUI Airways Flight Tracking and History ...
+match = -213.3%%
+title = BY58 (TOM58) TUI Airways Flight Tracking and History 14- ...
 url = https://www.flightaware.com/live/flight/TOM58/history/20240214/1945Z/EGKK/WSSS
 
 [www.teddyblake.com]
