--- a/images/bo-ga-goi-chun-xoa-14/config.ini
+++ b/images/bo-ga-goi-chun-xoa-14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/bo-ga-goi-chun-xoa-14.html
 lastopen = 2024-06-09 23:12:23
 
 [search]
-lastsearch = 2024-08-09 17:49:11
+lastsearch = 2024-08-09 18:46:20
 
 [hanvico.com.vn]
 match = 28.6%%
-title = Bộ ga chun LIVING - LV53
-url = https://hanvico.com.vn/san-pham/bo-ga-chun-living-lv53/
+title = Bộ ga chun LIVING - LV45
+url = https://hanvico.com.vn/san-pham/bo-ga-chun-living-lv45/
 
 [www.diepxuan.com]
 match = -4.8%%
@@ -32,14 +32,14 @@ title = Bộ chăn ga gối TTN 14 (120*190 cm) - Koala
 url = https://koala.vn/bo-chan-ga-goi-ttn-14.html
 
 [changagoidemsonghong.com]
-match = -95.2%%
-title = Bộ chăn ga gối Sông Hồng chính hãng 100%% cotton mã BC21 ...
-url = https://changagoidemsonghong.com/chan-ga-goi-bc29
+match = -28.6%%
+title = Bộ chăn ga gối 100%% cotton mã mầu BC22-061
+url = https://changagoidemsonghong.com/chan-ga-goi-bc61
 
 [songhong.info]
-match = -19.0%%
-title = Chăn ga gối Sông Hồng dòng Basic mã BC-14
-url = https://songhong.info/chan-ga-goi-bc14
+match = -28.6%%
+title = Bộ chăn ga gối cao cấp Urban mã UC22-020 -
+url = https://songhong.info/chan-ga-goi-uc020
 
 [demxanh.com]
 match = -52.4%%
@@ -117,9 +117,9 @@ title = Bộ chăn ga gối cotton 5 món chăn hè ga chun chần mẫu 14
 url = https://thegioidemonline.com/bo-chan-ga-goi-cotton-5-mon-chan-he-ga-chun-chan-mau-14.html
 
 [runa.vn]
-match = -19.0%%
-title = Bộ Chăn Ga Gối Satin Cotton Màu Burgundy
-url = https://runa.vn/bo-chan-ga-goi-satin-cotton-mau-burgundy
+match = -23.8%%
+title = Bộ Chăn Ga Gối Satin Cotton Màu Chocolate
+url = https://runa.vn/bo-chan-ga-goi-satin-cotton-mau-beige
 
 [demgiare.vn]
 match = 14.3%%
