--- a/images/chan-5-kg-kq-khong-song/config.ini
+++ b/images/chan-5-kg-kq-khong-song/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-5-kg-kq-khong-song.html
 lastopen = 2024-06-09 23:49:54
 
 [search]
-lastsearch = 2024-08-09 17:47:06
+lastsearch = 2024-08-09 18:45:38
 
 [demxanh.com]
 match = 26.3%%
@@ -27,9 +27,9 @@ title = Chăn lông KQ cao cấp
 url = https://thegioidemonline.com/chan-long-kq-ma-01.html
 
 [www.youtube.com]
-match = -100.0%%
-title = Bang Chan vibing to cool music while his computer kinda ...
-url = https://www.youtube.com/watch?v=rezmW8IDkRk
+match = -56.5%%
+title = KHÁM PHÁ MÁY BAY MỚI NHẤT CỦA KHÔNG QUÂN NHÂN ...
+url = https://www.youtube.com/watch?v=zj_WP5hkru0
 
 [phongkhongkhongquan.vn]
 match = -82.6%%
@@ -152,8 +152,8 @@ title = SUY TỦY XƯƠNG
 url = https://bthh.org.vn/74/suy-tuy-xuong-282.html
 
 [www.staleyfarmshomeskc.com]
-match = -143.5%%
-title = Here Is Staley Farms Golf Community In Beautiful North Kansas ...
+match = -104.3%%
+title = News Staley Farms Private Golf Community Kansas City MO
 url = http://www.staleyfarmshomeskc.com/docs/news-frame.asp?title=Here Is Staley Farms Golf Community In Beautiful North Kansas ...&page=https://xn--b1aktidr.xn--p1ai/54138796bzlqkz-modelscomk3fe43a
 
 [nhidong.org.vn]
