--- a/images/chieu-dieu-hoa-khong-goi-cao-su-18/config.ini
+++ b/images/chieu-dieu-hoa-khong-goi-cao-su-18/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-khong-goi-cao-su-18.html
 lastopen = 2024-06-10 00:19:48
 
 [search]
-lastsearch = 2024-08-09 17:46:01
+lastsearch = 2024-08-09 18:49:07
 
 [demxanh.com]
-match = 11.8%%
-title = [Hot] Bảng giá chiếu Điều Hoà mới nhất 2023
-url = https://demxanh.com/bang-gia-chieu-dieu-hoa-moi-nhat-2019.html
+match = 38.2%%
+title = Chiếu điều hòa cao su non vỏ bọc vải Tencel
+url = https://demxanh.com/chieu-dieu-hoa-cao-su-non.html
 
 [shopee.vn]
 match = -2.9%%
@@ -32,9 +32,9 @@ title = Chiếu Điều Hòa Cao Su Non
 url = https://www.facebook.com/groups/753270865357544/
 
 [suongtuyet.com]
-match = 2.9%%
-title = Có Mấy Loại Chiếu Điều Hòa? Chiếu Điều Hòa Loại Nào ...
-url = https://suongtuyet.com/nen-su-dung-chieu-dieu-hoa-loai-nao-chieu-dieu-hoa-loai-nao-tot.html
+match = 17.6%%
+title = có nên sử dụng chiếu điều hòa không?
+url = https://suongtuyet.com/chieu-dieu-hoa-co-nen-su-dung-chieu-dieu-hoa-khong.html
 
 [russo.vn]
 match = -2.9%%
@@ -67,9 +67,9 @@ title = CHIẾU ĐIỀU HÒA CAO SU NON CAO CẤP TẶNG 2 VỎ GỐI ...
 url = https://tchome.vn/gia-dung-doi-song-chan-chieukhoacoc-chen/chieu-dieu-hoa-mu-non-cao-su-cao-cap-tang-2-vo-goi-1m8x2m-sp22559.html
 
 [vtvhyundai.vn]
-match = 26.5%%
-title = Ruiton_Chiếu điều hoà 1m6x2m (kèm 2 vỏ gối cao su)
-url = https://vtvhyundai.vn/shoppingMall/product/editcrruitonchieu-dieu-hoa-1m6x2m-kem-2-vo-goi-cao-su--2-goi-cao-su-non-30x50cm.30008392
+match = 14.7%%
+title = RUITON - Chiếu điều hoà 1m6 x 2m (Kèm 2 vỏ gối cao su)
+url = https://vtvhyundai.vn/shoppingMall/product/xa-khoruitonchieu-dieu-hoa-1m6x2m-kem-2-vo-goi-cao-su-.30008691
 
 [dropbuy.vn]
 match = 38.2%%
