--- a/images/chieu-lac-gam-14/config.ini
+++ b/images/chieu-lac-gam-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-14.html
 lastopen = 2024-06-09 23:47:29
 
 [search]
-lastsearch = 2024-08-09 13:25:51
+lastsearch = 2024-08-09 18:50:12
 
 [www.diepxuan.com]
 match = 56.2%%
@@ -122,9 +122,9 @@ title = Con lắc đơn chiều dài l = 0,5 (m), m = 100 gam dao động ở ..
 url = https://moon.vn/hoi-dap/con-lac-don-chieu-dai-l-05-m-m-100-gam-dao-dong-o-noi-co-g-98-ms2-voi-bien-do-goc-ba-679117
 
 [m.facebook.com]
-match = -131.2%%
-title = Deadpool & Wolverine - phân đoạn chưa chiếu.
-url = https://m.facebook.com/daiphatthanh.sound/photos/deadpool-wolverine-phân-đoạn-chưa-chiếu/1062488365243551/
+match = -112.5%%
+title = VCS LMHT - TỈ LỆ DỰ ĐOÁN CẶP TRẬN BÁN KẾT ...
+url = https://m.facebook.com/vcslmht/photos/tỉ-lệ-dự-đoán-cặp-trận-bán-kết-nhánh-thắng-trên-discordkhán-giả-trên-discord-vcs/461629470107715/
 
 [dangcongsan.vn]
 match = -231.2%%
