--- a/images/chieu-lac-gam-18/config.ini
+++ b/images/chieu-lac-gam-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-18.html
 lastopen = 2024-06-09 23:47:34
 
 [search]
-lastsearch = 2024-08-09 16:48:21
+lastsearch = 2024-08-09 18:55:41
 
 [www.diepxuan.com]
 match = 22.2%%
@@ -189,7 +189,7 @@ url = https://petaldesigns.co.za/ảnh-cặc-to-anime.html
 [m.facebook.com]
 match = -112.5%%
 title = VCS LMHT - TỈ LỆ DỰ ĐOÁN CẶP TRẬN BÁN KẾT ...
-url = https://m.facebook.com/vcslmht/photos/tỉ-lệ-dự-đoán-cặp-trận-bán-kết-nhánh-thắng-trên-discordkhán-giả-trên-discord-vcs/461629470107715/
+url = https://m.facebook.com/story.php/?story_fbid=461630403440955&id=100087819968175
 
 [baomoi.com]
 match = -193.8%%
