--- a/images/ga-chong-tham-dreamland-200x220/config.ini
+++ b/images/ga-chong-tham-dreamland-200x220/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-chong-tham-dreamland-200x220.html
 lastopen = 2024-06-07 00:24:06
 
 [search]
-lastsearch = 2024-08-09 16:51:49
+lastsearch = 2024-08-09 18:52:53
 
 [www.dreamland.vn]
 match = -14.3%%
@@ -19,11 +19,11 @@ url = https://demdreamland.vn/kich-thuoc/200x220/page/14/
 [demxanh.com]
 match = -6.5%%
 title = Đệm bông ép Dreamland chống thoái hóa cột sống
-url = https://demxanh.com/dem-bong-ep-dreamland-chong-thoai-hoa-cot-song.html?srsltid=AfmBOorTwsIVtm4P0ZMfnCowndbK_rO7olK4BqYNyOCufDPa3JXzbpjg
+url = https://demxanh.com/dem-bong-ep-dreamland-chong-thoai-hoa-cot-song.html
 
 [dreamland.vn]
-match = -21.1%%
-title = Chăn Tuyết Điều Hòa
+match = -38.7%%
+title = Chăn Tuyết Điều Hòa - Chăn ga gối đệm cao cấp Dreamland
 url = http://dreamland.vn/Chan-Tuyet-Dieu-Hoa-i4421.html
 
 [demxinh.vn]
