--- a/images/man-in-hoa-dep-16/config.ini
+++ b/images/man-in-hoa-dep-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-in-hoa-dep-16.html
 lastopen = 2024-06-10 01:11:01
 
 [search]
-lastsearch = 2024-08-09 17:34:19
+lastsearch = 2024-08-09 18:54:56
 
 [www.tiktok.com]
 match = -235.3%%
@@ -67,9 +67,9 @@ title = Chiêm ngưỡng mùa hoa cực đẹp ở Hà Giang vào tháng 03
 url = https://www.pinterest.com/pin/1087971222468991265/
 
 [books.google.com]
-match = -123.5%%
-title = The army list - Page 234 - Google Books Result
-url = https://books.google.com/books?id=tfANAAAAQAAJ&pg=RA2-PA234&lpg=RA2-PA234&dq=man+in+hoa+dep+16&source=bl&ots=vQEa9YwsVF&sig=ACfU3U1igkFzjoEFqtkQfgIYxuwxrv_R3Q&hl=en&sa=X&ved=2ahUKEwiDhv62vueHAxU0FFkFHevPKycQ6AF6BAgYEAM
+match = -158.8%%
+title = The Monthly Army List - Page 23 - Google Books Result
+url = https://books.google.com/books?id=rEVEAQAAIAAJ&pg=RA68-PA23&lpg=RA68-PA23&dq=man+in+hoa+dep+16&source=bl&ots=kbdohc81mX&sig=ACfU3U0LBCv7sh1vVApuZ-wOFbi5NPqsbQ&hl=en&sa=X&ved=2ahUKEwjxpK3_7OeHAxVgM1kFHdQnCzYQ6AF6BAhBEAM
 
 [tax.vermont.gov]
 match = -29.4%%
