CI images update

--- a/images/chieu-cay-ht-tre-em/config.ini
+++ b/images/chieu-cay-ht-tre-em/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-ht-tre-em.html
 lastopen = 2024-06-06 16:42:52
 
 [search]
-lastsearch = 2024-08-09 18:24:50
+lastsearch = 2024-08-09 19:40:24
 
 [shopee.vn]
 match = -152.6%%
@@ -112,9 +112,9 @@ title = Chiếu Trúc Tăm H&T - Công ty TNHH Sản xuất và thương mại .
 url = https://huongtruc.com/chi-tiet/chieu-ht
 
 [chieutruc.info]
-match = -68.4%%
-title = Chiếu Tăm H&T - Chiếu Thanh Hương Trúc cao cấp
-url = https://chieutruc.info/chieu-tam-ht/
+match = -136.8%%
+title = Chiếu cây chất liệu tre trúc tự nhiên, mẫu mã phong phú, giá ...
+url = https://chieutruc.info/chieu-cay/
 
 [shoptretho.com.vn]
 match = -126.3%%
