--- a/images/bo-bon-mua-epm19064-180x200/config.ini
+++ b/images/bo-bon-mua-epm19064-180x200/config.ini
@@ -4,22 +4,22 @@ url = https://www.diepxuan.com/bo-bon-mua-epm19064-180x200.html
 lastopen = 2024-06-06 17:08:27
 
 [search]
-lastsearch = 2024-08-09 18:44:56
+lastsearch = 2024-08-09 19:33:46
 
 [everonvn.com.vn]
 match = 15.8%%
 title = Bộ Everon Epm-19064
-url = https://everonvn.com.vn/everon/754/bo-everon-epm19064?srsltid=AfmBOoraXEoskr9OmZIrCyM8l-svYjLe1a6NTd9sxiqnqruB68reH9vE
+url = https://everonvn.com.vn/everon/754/bo-everon-epm19064
 
 [everon.com.vn]
 match = 5.3%%
 title = BỘ EVERON EPC 19043
-url = https://everon.com.vn/epc-19043/?srsltid=AfmBOoo_dx9b7Oy-kXWBY3VFRHcMXI6N8POpNfD1cM1gWiB7GSiAtcQC
+url = https://everon.com.vn/epc-19043/
 
 [demxanh.com]
 match = 18.5%%
 title = Bộ chăn ga gối EVeron EPM19068
-url = https://demxanh.com/bo-chan-ga-goi-everon-epm19068.html?srsltid=AfmBOorMeU6ifD1teJFLuLeocFk7tTha8Db_tQGpCWIOGigo79rA18GH
+url = https://demxanh.com/bo-chan-ga-goi-everon-epm19068.html
 
 [shopee.vn]
 match = -48.1%%
