--- a/images/chan-5-kg-kq-song/config.ini
+++ b/images/chan-5-kg-kq-song/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-5-kg-kq-song.html
 lastopen = 2024-06-09 23:17:50
 
 [search]
-lastsearch = 2024-08-09 16:24:18
+lastsearch = 2024-08-09 19:28:33
 
 [en.wikipedia.org]
 match = 0.0%%
@@ -27,9 +27,9 @@ title = QSC K12.2 premium powered, 12-inch, two-way loudspeaker
 url = https://www.qsc.com/solutions-products/loudspeakers/portable/powered/portable-pa/k2-series/k122/
 
 [www.ncbi.nlm.nih.gov]
-match = -200.0%%
-title = Discovery of a novel third-generation EGFR inhibitor and ...
-url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC7218543/
+match = -223.5%%
+title = Translational strategies for neuroprotection in ischemic stroke
+url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC3933947/
 
 [books.google.com]
 match = -11.8%%
@@ -42,9 +42,9 @@ title =
 url = https://www.ateezstoryline.com/ateez
 
 [www.youtube.com]
-match = -200.0%%
-title = DAILY UPLOADS DAY 1 JFJFJFJF #music #fortnite #ukulele ...
-url = https://www.youtube.com/watch?v=SfhTqo-KgkQ
+match = -76.5%%
+title = Eltee Skhillz - Odg (Official Video)
+url = https://www.youtube.com/watch?v=DfOdZ3CTXko
 
 [www.tiktok.com]
 match = 37.5%%
@@ -109,7 +109,7 @@ url = https://www.aasv.org/library/swineinfo/series_index.php?id=4
 [www.diepxuan.com]
 match = -29.4%%
 title = Chăn KQ không sóng 5kg - Điệp Xuân
-url = https://www.diepxuan.com/chan-kq-khong-song-5kg.html
+url = https://www.diepxuan.com/chan-kq-khong-song-5kg.html?srsltid=AfmBOorqMVsfTHu87p_a4-RJODE9KG9s1D-bjUz36rLJO8GmdUn36sF_
 
 [www.kvaser.cn]
 match = -5.9%%
