--- a/images/chieu-dieu-hoa-kem-goi-14/config.ini
+++ b/images/chieu-dieu-hoa-kem-goi-14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-kem-goi-14.html
 lastopen = 2024-07-01 09:57:37
 
 [search]
-lastsearch = 2024-08-09 15:20:46
+lastsearch = 2024-08-09 19:37:14
 
 [shopee.vn]
-match = -4.0%%
-title = CHIẾU ĐIỀU HOÀ CAO SU NON CAO CẤP MODERN ...
-url = https://shopee.vn/CHIẾU-ĐIỀU-HOÀ-CAO-SU-NON-CAO-CẤP-MODERN-(-video-quay-cận-chất)-i.46360011.4484797264
+match = -24.0%%
+title = chiếu điều hòa kèm gối giá tốt Tháng 8, 2024 | Mua ngay
+url = https://shopee.vn/search?keyword=chiếu điều hòa kèm gối
 
 [meoi.com.vn]
 match = 24.0%%
@@ -42,9 +42,9 @@ title = Chiếu điều hòa 4D Hanvico Cool Mattress kẻ kem (XẢ KHO)
 url = https://demxanh.com/chieu-dieu-hoa-4d-hanvico-cool-mattress-ke-kem.html
 
 [tiki.vn]
-match = 16.0%%
-title = Chiếu điều hòa có mát không? Review 10 ...
-url = https://tiki.vn/blog/chieu-dieu-hoa/
+match = -20.0%%
+title = Chieu dieu hoa kem vo goi hàng chính hãng, giao nhanh
+url = https://tiki.vn/search?q=chieu dieu hoa kem vo goi
 
 [goni.vn]
 match = 8.0%%
@@ -54,7 +54,7 @@ url = https://goni.vn/chieu-dieu-hoa-goni/
 [www.diepxuan.com]
 match = 8.0%%
 title = Chiếu điều hòa lụa 140x190 kèm gối - Điệp Xuân
-url = https://www.diepxuan.com/chieu-dieu-hoa-lua-140x190-kem-goi.html?srsltid=AfmBOoqU4K_8K2rwTXxJiylYL9fDE0EeIbn4lxyMw_OUi5K9fPHUzxJh
+url = https://www.diepxuan.com/chieu-dieu-hoa-lua-140x190-kem-goi.html
 
 [voibaby.vn]
 match = 40.0%%
