--- a/images/chieu-dieu-hoa-lua-140x190/config.ini
+++ b/images/chieu-dieu-hoa-lua-140x190/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-lua-140x190.html
 lastopen = 2024-08-08 17:47:40
 
 [search]
-lastsearch = 2024-08-09 18:27:12
+lastsearch = 2024-08-09 19:35:10
 
 [www.diepxuan.com]
 match = 23.1%%
@@ -32,9 +32,9 @@ title = Chiếu lụa điều hòa hàng chính hãng, giao nhanh
 url = https://tiki.vn/search?q=chiếu lụa điều hòa
 
 [shopee.vn]
-match = -73.1%%
-title = Chiếu điều hòa( lót lụa) sợi mây cao cấp . có chun cài góc , ...
-url = https://shopee.vn/Chiếu-điều-hòa(-lót-lụa)-sợi-mây-cao-cấp-.-có-chun-cài-góc-hàng-loại-1.-Ship-hỏa-tốc-i.184023281.17297249331
+match = -30.8%%
+title = Chiếu Điều Hòa Lụa Dày các cỡ 1.2m - 1.5m - 1.6m - 1.8m
+url = https://shopee.vn/Chiếu-Điều-Hòa-Lụa-Dày-các-cỡ-1.2m-1.5m-1.6m-1.8m-2m-i.331106991.12046528350
 
 [thegioidemviet.vn]
 match = -19.2%%
