--- a/images/chieu-lac-soc-08/config.ini
+++ b/images/chieu-lac-soc-08/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-08.html
 lastopen = 2024-06-06 16:42:06
 
 [search]
-lastsearch = 2024-08-09 18:33:44
+lastsearch = 2024-08-09 19:26:47
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -17,9 +17,9 @@ title = Hướng dẫn đo size lắc và vòng tay
 url = https://www.pnj.com.vn/blog/huong-dan-do-size-lac-va-vong-tay/
 
 [www.facebook.com]
-match = -187.5%%
-title = 21-08-2023 Thời sự chiều 18h30 | By Truyền Hình Sóc Trăng
-url = https://www.facebook.com/soctrangtv/videos/21-08-2023-thời-sự-chiều-18h30/1110320116612660/
+match = -131.2%%
+title = CHƯƠNG TRÌNH LỤC LẠC VÀNG VẾ VỚI XÃ MỸ THUẬN ...
+url = https://www.facebook.com/soctrangtv/videos/chương-trình-lục-lạc-vàng-vế-với-xã-mỹ-thuận-huyện-mỹ-tú-tỉnh-sóc-trăng-phát-són/1649583821733030/
 
 [thuvienphapluat.vn]
 match = -206.2%%
@@ -282,9 +282,9 @@ title = Địa chấn lớn nhất EURO 2024: Georgia đánh bại Bồ Đào ..
 url = https://baolongan.vn/dia-chan-lon-nhat-euro-2024-georgia-danh-bai-bo-dao-nha-khien-ronaldo-hoan-toan-tat-tieng-a178337.html
 
 [vietstock.vn]
-match = -187.5%%
-title = Chứng khoán Tuần 05-09/08/2024: Đà hồi phục chưa ổn ...
-url = https://vietstock.vn/2024/08/chung-khoan-tuan-05-09082024-da-hoi-phuc-chua-on-dinh-1636-1218011.htm
+match = -218.8%%
+title = Phân tích kỹ thuật phiên chiều 09/08: Tâm lý phân vân vẫn ...
+url = https://vietstock.vn/2024/08/phan-tich-ky-thuat-phien-chieu-0908-tam-ly-phan-van-van-con-hien-huu-585-1217868.htm
 
 [baohungyen.vn]
 match = -200.0%%
@@ -925,4 +925,9 @@ url = https://hanamtv.vn/canh-sat-giao-thong-ha-nam-giup-do-tre-bi-lac-ve-gia-di
 match = -75.0%%
 title = Việc Nhà - Domestic Assistance - mrv
 url = https://mraovat.nguoi-viet.com/classified/viec-nha-domestic-assistance-browse-94.aspx
+
+[baophutho.vn]
+match = -12.5%%
+title = Loạt phim chiếu rạp tháng 8
+url = https://baophutho.vn/loat-phim-chieu-rap-thang-8-197265.htm
 
