--- a/images/chieu-lac-soc-18/config.ini
+++ b/images/chieu-lac-soc-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-18.html
 lastopen = 2024-06-06 16:53:55
 
 [search]
-lastsearch = 2024-08-09 16:36:18
+lastsearch = 2024-08-09 19:30:39
 
 [scholar.google.com]
 match = -43.8%%
@@ -47,9 +47,9 @@ title = Khám phá làng nghề làm chiếu Long Cang truyền thống
 url = https://laodongtre.laodong.vn/doi-song/kham-pha-lang-nghe-lam-chieu-long-cang-truyen-thong-1277659.ldo
 
 [www.vinmec.com]
-match = -81.2%%
-title = Chiều cao, cân nặng bé trai 18 tháng tuổi
-url = https://www.vinmec.com/vie/bai-viet/chieu-cao-can-nang-be-trai-18-thang-tuoi-vi
+match = -75.0%%
+title = Chiều cao, cân nặng bé gái 18 tháng tuổi
+url = https://www.vinmec.com/vie/bai-viet/chieu-cao-can-nang-be-gai-18-thang-tuoi-vi
 
 [www.bachhoaxanh.com]
 match = -218.8%%
@@ -112,9 +112,9 @@ title = Giá vàng 9999 hôm nay tại 64 tỉnh 4/8/2024 | Bảng giá vàng
 url = https://primagold.com.vn/
 
 [www.youtube.com]
-match = -218.8%%
-title = Toàn cảnh thế giới: “Chiêu mới” cao tay của ông Trump, dồn ...
-url = https://www.youtube.com/watch?v=gBx4rpDipqA
+match = -181.2%%
+title = 18 BƯỚC 💥 Modern Tacking CỰC ĐẸP // CÓ HƯỚNG DẪN Ở ...
+url = https://www.youtube.com/watch?v=PWk3nmCXI0k
 
 [books.google.com]
 match = -156.2%%
