--- a/images/chieu-nhua-ha-noi-14/config.ini
+++ b/images/chieu-nhua-ha-noi-14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-nhua-ha-noi-14.html
 lastopen = 2024-06-09 22:51:04
 
 [search]
-lastsearch = 2024-08-09 16:53:12
+lastsearch = 2024-08-09 19:25:02
 
 [www.diepxuan.com]
 match = 10.0%%
 title = Chiếu nhựa Hà Nội 160x200 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-nhua-ha-noi-160x200.html?srsltid=AfmBOor5JZF3YQGkbYt-GU1GndaNDfiR0SCccaCrCfjC69xFM0UMBszy
+url = https://www.diepxuan.com/chieu-nhua-ha-noi-160x200.html
 
 [shopee.vn]
 match = 70.0%%
