--- a/images/bo-bon-mua-chun-chan-1602m/config.ini
+++ b/images/bo-bon-mua-chun-chan-1602m/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-bon-mua-chun-chan-1602m.html
 lastopen = 2024-06-07 01:32:26
 
 [search]
-lastsearch = 2024-08-09 16:46:12
+lastsearch = 2024-08-09 20:34:48
 
 [everon.online]
 match = 15.4%%
@@ -72,9 +72,9 @@ title = Fuji Master
 url = https://fujimaster.com.vn/
 
 [store.steampowered.com]
-match = -50.0%%
-title = Tiết kiệm đến 75%% khi mua Anno 2070™ trên Steam
-url = https://store.steampowered.com/app/48240?l=vietnamese&curator_clanid=33358846
+match = -76.9%%
+title = Tiết kiệm đến 75%% khi mua Marvel's Midnight Suns trên ...
+url = https://store.steampowered.com/app/368260/Marvels_Midnight_Suns/?l=vietnamese&curator_clanid=38262110&curator_listid=67239&snr=1_1056_1055_1056
 
 [vi.wikipedia.org]
 match = -23.1%%
@@ -163,8 +163,8 @@ url = https://www.tanhkhong.org/p1185a1901/4/dd0210-nhu-chieu-
 
 [enews.agu.edu.vn]
 match = 16.0%%
-title = Còn mãi kỷ niệm ở nơi đây
-url = https://enews.agu.edu.vn/index.php?option=com_content&view=article&id=23439&Itemid=122
+title = Bâng khuâng chiều nội trú
+url = https://enews.agu.edu.vn/index.php?option=com_content&view=article&id=13283&Itemid=126
 
 [watv.org]
 match = -76.9%%
