--- a/images/chan-3-k-tuyet-sin-thai-lan/config.ini
+++ b/images/chan-3-k-tuyet-sin-thai-lan/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-3-k-tuyet-sin-thai-lan.html
 lastopen = 2024-06-09 23:46:49
 
 [search]
-lastsearch = 2024-08-09 20:13:36
+lastsearch = 2024-08-09 20:30:19
 
 [shopee.vn]
 match = -51.9%%
@@ -174,7 +174,7 @@ url = https://dogiasi.net/san-pham/chan-men-long-tuyet-trang-in-tho-gau-xuat-han
 [bebubam.vn]
 match = 43.5%%
 title = Chăn tuyết cho bé 2 lớp
-url = https://bebubam.vn/products/chan-tuyet-cho-be-2-lop?srsltid=AfmBOopP2xUy6cjxa-VDyEqrZAG_jKP9LIn6zTQOS6Ta2uStZu1TYXjY
+url = https://bebubam.vn/products/chan-tuyet-cho-be-2-lop
 
 [tuoitre.vn]
 match = -59.3%%
