--- a/images/chieu-dieu-hoa-kem-goi-14/config.ini
+++ b/images/chieu-dieu-hoa-kem-goi-14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-kem-goi-14.html
 lastopen = 2024-07-01 09:57:37
 
 [search]
-lastsearch = 2024-08-09 19:37:14
+lastsearch = 2024-08-09 20:26:49
 
 [shopee.vn]
-match = -24.0%%
-title = chiếu điều hòa kèm gối giá tốt Tháng 8, 2024 | Mua ngay
-url = https://shopee.vn/search?keyword=chiếu điều hòa kèm gối
+match = -4.0%%
+title = CHIẾU ĐIỀU HOÀ CAO SU NON CAO CẤP MODERN ...
+url = https://shopee.vn/CHIẾU-ĐIỀU-HOÀ-CAO-SU-NON-CAO-CẤP-MODERN-(-video-quay-cận-chất)-i.46360011.4484797264
 
 [meoi.com.vn]
 match = 24.0%%
@@ -42,9 +42,9 @@ title = Chiếu điều hòa 4D Hanvico Cool Mattress kẻ kem (XẢ KHO)
 url = https://demxanh.com/chieu-dieu-hoa-4d-hanvico-cool-mattress-ke-kem.html
 
 [tiki.vn]
-match = -20.0%%
-title = Chieu dieu hoa kem vo goi hàng chính hãng, giao nhanh
-url = https://tiki.vn/search?q=chieu dieu hoa kem vo goi
+match = 16.0%%
+title = Chiếu điều hòa có mát không? Review 10 ...
+url = https://tiki.vn/blog/chieu-dieu-hoa/
 
 [goni.vn]
 match = 8.0%%
@@ -107,7 +107,7 @@ title = Chiếu điều hòa cao su non loại tốt - Mẫu 5 - Nệm Uy Tín
 url = https://www.nemuytin.com/product/chieu-dieu-hoa-cao-su-non-loai-tot-mau-5/
 
 [www.lazada.vn]
-match = 32.0%%
-title = Chiếu điều hòa kèm gối 3D cao cấp cho bé
-url = https://www.lazada.vn/products/chieu-dieu-hoa-kem-goi-3d-cao-cap-cho-be-i2705633902-s13216292168.html?from_gmc=1&fl_tag=1
+match = -52.0%%
+title = Chiếu mây điều hòa, chiếu điều hòa nhật bản loại dày 2 ...
+url = https://www.lazada.vn/products/chieu-may-dieu-hoa-chieu-dieu-hoa-nhat-ban-loai-day-2-lop-cao-cap-thong-minh-sieu-mat-va-sieu-thoang-i1358882625.html
 
