--- a/images/nem-lo-xo-everon-kingkoil-180x200x27-cloud-firm/config.ini
+++ b/images/nem-lo-xo-everon-kingkoil-180x200x27-cloud-firm/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-lo-xo-everon-kingkoil-180x200x27-cloud-firm.h
 lastopen = 2024-07-01 00:11:36
 
 [search]
-lastsearch = 2024-08-09 15:37:34
+lastsearch = 2024-08-09 20:28:31
 
 [www.everonvn.vn]
 match = 31.1%%
@@ -19,7 +19,7 @@ url = https://everonkorea.com/dem-lo-xo-kingkoil-cloud-firm/
 [demxanh.com]
 match = 27.9%%
 title = Đệm lò xo 1m8x2m (180x200cm) giá bao nhiêu?
-url = https://demxanh.com/dem-lo-xo-1m8x2m-180x200cm-gia-bao-nhieu.html?srsltid=AfmBOorefkJ5B9DGfb8yQFhlZl4rqcF1pgpjOyTarceZs7685ZesCpEU
+url = https://demxanh.com/dem-lo-xo-1m8x2m-180x200cm-gia-bao-nhieu.html
 
 [nemragoi.com]
 match = 37.9%%
@@ -34,7 +34,7 @@ url = https://everon.online/collections/dem-lo-xo-king-koil
 [www.diepxuan.com]
 match = 57.4%%
 title = Nệm lò xo Everon Kingkoil Cloud Firm 180x200x27
-url = https://www.diepxuan.com/nem-lo-xo-everon-kingkoil-cloud-firm-180x200x27.html?srsltid=AfmBOooIlvpn-8mGzSaXDY5aDpjG5G7X_onFgYim3KO53O6j-XUjDYgs
+url = https://www.diepxuan.com/nem-lo-xo-everon-kingkoil-cloud-firm-180x200x27.html
 
 [www.everonqb.com]
 match = 57.4%%
