--- a/images/ruot-nem-korea-9f-15-19/config.ini
+++ b/images/ruot-nem-korea-9f-15-19/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-15-19.html
 lastopen = 2024-06-10 00:18:43
 
 [search]
-lastsearch = 2024-08-09 18:35:46
+lastsearch = 2024-08-09 20:27:52
 
 [www.diepxuan.com]
 match = -60.9%%
@@ -32,9 +32,9 @@ title = Kings of Convenience- KOC - Zenész/együttes
 url = https://www.facebook.com/kingsofconvenience/?locale=hu_HU
 
 [www.cia.gov]
-match = -82.6%%
-title = N. KOREAN PATROL BOATS SEIZE U.S. SPY SHIP WITH ...
-url = https://www.cia.gov/readingroom/document/06638269
+match = -65.2%%
+title = THE KOREAN LABOR PARTY AND THE KIM IL-SONG ...
+url = https://www.cia.gov/readingroom/document/cia-rdp80t00246a064800250001-5
 
 [journal.transformativeworks.org]
 match = -91.3%%
@@ -422,9 +422,9 @@ title = Investor relations - PCH (EN) - ProCredit Holding
 url = https://www.procredit-holding.com/investor-relations/
 
 [en.yna.co.kr]
-match = -82.6%%
-title = 122 ships affected by suspected N. Korean GPS jamming
-url = https://en.yna.co.kr/view/AEN20120504005000315
+match = -121.7%%
+title = S. Korean vice foreign minister holds bilateral meetings at ...
+url = https://en.yna.co.kr/view/AEN20171121002500315
 
 [www.usmcu.edu]
 match = -104.3%%
