--- a/images/chieu-cay-ht-18/config.ini
+++ b/images/chieu-cay-ht-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-ht-18.html
 lastopen = 2024-06-09 22:15:47
 
 [search]
-lastsearch = 2024-08-09 18:32:22
+lastsearch = 2024-08-09 20:51:28
 
 [shadow.vn]
 match = -140.0%%
@@ -14,7 +14,7 @@ url = https://shadow.vn/den-pin-chieu-xa-fenix-ht18r
 [chuyentactical.com]
 match = 0.0%%
 title = Đèn Pin Fenix - HT18R
-url = https://chuyentactical.com/den-pin/den-pin-fenix-ht18r/
+url = https://chuyentactical.com/den-pin/den-pin-fenix-ht18r/?srsltid=AfmBOopC2OI7jR9E3HZA_gqE76dS7pDf1EiGzoRBQQE9dqWYBpnjGsuz
 
 [bisu.vn]
 match = -113.3%%
@@ -189,7 +189,7 @@ url = https://moc.gov.vn/tl/tin-tuc/62544/ha-noi--dam-bao-chieu-sang--ve-sinh-mo
 [www.lazada.vn]
 match = -140.0%%
 title = Đèn pin chiếu xa FENIX HT18R sáng 2800 lumen ...
-url = https://www.lazada.vn/products/den-pin-chieu-xa-fenix-ht18r-sang-2800-lumen-chieu-xa-1100m-pin-sac-21700-5000mah-kem-theo-i2503097309.html
+url = https://www.lazada.vn/products/den-pin-chieu-xa-fenix-ht18r-sang-2800-lumen-chieu-xa-1100m-pin-sac-21700-5000mah-kem-theo-i2503097309.html?srsltid=AfmBOorgH7XmErHy3o_0qt-PFAFbnuYjaJhKnUuLGsu-yM7AlL5yOfdz
 
 [hachi.com.vn]
 match = -173.3%%
