--- a/images/chieu-dieu-hoa-khong-goi-12/config.ini
+++ b/images/chieu-dieu-hoa-khong-goi-12/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-khong-goi-12.html
 lastopen = 2024-06-09 23:15:39
 
 [search]
-lastsearch = 2024-08-09 20:02:56
+lastsearch = 2024-08-09 20:46:33
 
 [demxanh.com]
-match = -14.8%%
-title = Bảng giá chiếu điều hòa cao cấp giá tốt nhất tại ...
-url = https://demxanh.com/chieu-dieu-hoa.html?srsltid=AfmBOopLTALMX03l75o6Jl4OxmMpZl5KcLuMog-Ut3W2wpOhrURIpc-j
+match = 40.7%%
+title = Chiếu điều hòa mây viền lụa loại đẹp
+url = https://demxanh.com/chieu-dieu-hoa-may-vien-lua.html
 
 [shopee.vn]
 match = 0.0%%
