--- a/images/chieu-dieu-hoa-khong-goi-15/config.ini
+++ b/images/chieu-dieu-hoa-khong-goi-15/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-khong-goi-15.html
 lastopen = 2024-06-09 23:41:33
 
 [search]
-lastsearch = 2024-08-09 17:32:53
+lastsearch = 2024-08-09 20:51:07
 
 [demxanh.com]
 match = 0.0%%
 title = [Hot] Bảng giá chiếu Điều Hoà mới nhất 2023
-url = https://demxanh.com/bang-gia-chieu-dieu-hoa-moi-nhat-2019.html?srsltid=AfmBOopfIyDchQnACA-hW6FOuMilfAigvtZoamhKZca2BzF_lJlSBQpM
+url = https://demxanh.com/bang-gia-chieu-dieu-hoa-moi-nhat-2019.html?srsltid=AfmBOoqNM6JwUDW89j4ZIbzb5YdWH_do9KF6k0MC1DWqXElLKoe9D6EB
 
 [goni.vn]
 match = 14.8%%
@@ -17,9 +17,9 @@ title = Chiếu Điều Hòa Goni - Ưu Đãi Tháng 08/2024
 url = https://goni.vn/chieu-dieu-hoa-goni/
 
 [shopee.vn]
-match = 0.0%%
-title = Chiếu Điều Hoà Sợi Mây Tơ Tằm Mát Lạnh Không Gối ...
-url = https://shopee.vn/Chiếu-Điều-Hoà-Sợi-Mây-Tơ-Tằm-Mát-Lạnh-Không-Gối-Cao-Cấp-Chiếu-Có-Chun-Cài-Góc-Hàng-Loại-1-i.529742790.25073007553
+match = -33.3%%
+title = Chiếu điều hòa cao su non Latex Thái Lan M2T BEDDING ...
+url = https://shopee.vn/Chiếu-điều-hòa-cao-su-non-Latex-Thái-Lan-M2T-BEDDING-mềm-mịn-mát-thấm-hút-mồ-hôi-tốt-i.64675099.22244612519
 
 [foreverbedding.net]
 match = 0.0%%
@@ -37,9 +37,9 @@ title = Chiếu điều hòa có mát không? Review 10 ...
 url = https://tiki.vn/blog/chieu-dieu-hoa/
 
 [kyoryo.vn]
-match = 18.5%%
-title = Chiếu (Ga) Điều Hòa Viscose mát - Kyoryo
-url = https://kyoryo.vn/chieu-cao-cap/chieu-dieu-hoa-viscose.html
+match = -40.7%%
+title = Top 3 loại chiếu điều hòa cao cấp nhất thị trường - Kyoryo
+url = https://kyoryo.vn/tin-tuc/top-3-loai-chieu-dieu-hoa-cao-cap-nhat-thi-truong-.html
 
 [suongtuyet.com]
 match = 18.5%%
@@ -52,9 +52,9 @@ title = Chiếu điều hòa 0,9x1m95, chiếu mây điều hòa Ca Rô La Mã
 url = https://chieutrelanlan.com/chieu-dieu-hoa-90x1m95-chieu-may-dieu-hoa-ca-ro-la-ma-98.html
 
 [thegioinem.com]
-match = 7.4%%
-title = Nằm chiếu điều hoà có tốt cho sức khoẻ không?
-url = https://thegioinem.com/nam-chieu-dieu-hoa-co-tot-cho-suc-khoe-khong.html
+match = 33.3%%
+title = 10+ mẫu chiếu điều hoà hot nhất năm
+url = https://thegioinem.com/top-chieu-dieu-hoa-hot-nhat-nam.html
 
 [www.youtube.com]
 match = -55.6%%
@@ -84,7 +84,7 @@ url = https://www.congnghieptieudung.vn/su-that-ve-cong-dung-cua-chieu-dieu-hoa-
 [spacet.vn]
 match = -40.7%%
 title = Hướng dẫn giặt chiếu điều hòa đúng cách, đơn giản, hiệu ...
-url = https://spacet.vn/blog/nguon-cam-hung/huong-dan-giat-chieu-dieu-hoa-dung-cach-don-gian-hieu-qua?srsltid=AfmBOopbRjCWeGdSdvsxhYVeQA0FVOGzqjxbsE2UGHklZrXRxWmxRIT9
+url = https://spacet.vn/blog/nguon-cam-hung/huong-dan-giat-chieu-dieu-hoa-dung-cach-don-gian-hieu-qua?srsltid=AfmBOorM64jXtK-3c6C0TW3tDBt0QhwFG_Z127dk7mEg7S05uuKAgYzz
 
 [chieutrelinhchi.com]
 match = 0.0%%
