--- a/images/chieu-truc-cong-ty-16-19/config.ini
+++ b/images/chieu-truc-cong-ty-16-19/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-cong-ty-16-19.html
 lastopen = 2024-06-07 00:18:26
 
 [search]
-lastsearch = 2024-08-09 19:32:25
+lastsearch = 2024-08-09 20:58:32
 
 [chieutrelanlan.com]
 match = -37.5%%
@@ -365,4 +365,9 @@ url = https://thhp.vn/
 match = -83.3%%
 title = Bộ trưởng Nguyễn Hồng Diên làm việc với tỉnh Quảng Ngãi
 url = https://moit.gov.vn/tin-tuc/hoat-dong/chum-anh-bo-truong-nguyen-hong-dien-lam-viec-voi-tinh-quang-ngai.html
+
+[khangminhstone.com]
+match = -87.5%%
+title = Độ cao các bậc thang tiêu chuẩn trong thiết kế kiến trúc nhà
+url = https://khangminhstone.com/do-cao-cac-bac-thang/
 
