--- a/images/ruot-nem-korea-9f-12/config.ini
+++ b/images/ruot-nem-korea-9f-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-12.html
 lastopen = 2024-06-09 23:03:30
 
 [search]
-lastsearch = 2024-08-09 16:18:41
+lastsearch = 2024-08-09 20:50:26
 
 [www.diepxuan.com]
 match = -35.0%%
@@ -192,9 +192,9 @@ title = 12 Days in Seoul - by LA Seoulite - Everything about Korea
 url = https://laseoulite.substack.com/p/12-days-in-seoul
 
 [www.tiktok.com]
-match = -170.0%%
-title = me vs sour 😖 thank you @Fruit Riot for sending me these to try ...
-url = https://www.tiktok.com/@peachcreamsoda/video/7398389927420906783
+match = 0.0%%
+title = Korean Englishman Harvey
+url = https://www.tiktok.com/discover/korean-englishman-harvey?lang=en
 
 [www.imdb.com]
 match = 0.0%%
