CI images update

--- a/images/chieu-lac-soc-08/config.ini
+++ b/images/chieu-lac-soc-08/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-08.html
 lastopen = 2024-06-06 16:42:06
 
 [search]
-lastsearch = 2024-08-09 20:06:45
+lastsearch = 2024-08-09 21:12:03
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -17,8 +17,8 @@ title = Hướng dẫn đo size lắc và vòng tay
 url = https://www.pnj.com.vn/blog/huong-dan-do-size-lac-va-vong-tay/
 
 [www.facebook.com]
-match = -187.5%%
-title = 21-08-2023 Thời sự chiều 18h30 | By Truyền Hình Sóc Trăng
+match = -218.8%%
+title = 21-08-2023 Thời sự chiều 18h30 | 21-08-2023 Thời sự chiều ...
 url = https://www.facebook.com/soctrangtv/videos/21-08-2023-thời-sự-chiều-18h30/1110320116612660/
 
 [thuvienphapluat.vn]
@@ -930,4 +930,9 @@ url = https://mraovat.nguoi-viet.com/classified/viec-nha-domestic-assistance-bro
 match = -12.5%%
 title = Loạt phim chiếu rạp tháng 8
 url = https://baophutho.vn/loat-phim-chieu-rap-thang-8-197265.htm
+
+[cafef.vn]
+match = -206.2%%
+title = Phim mới chiếu 9 tiếng đã kiếm 95 tỷ, nữ chính phất lên ...
+url = https://cafef.vn/phim-moi-chieu-9-tieng-da-kiem-95-ty-nu-chinh-phat-len-nho-mang-danh-ban-sao-song-hye-kyo-188240809195935302.chn
 
