--- a/images/bo-bon-mua-chun-chan-1602m/config.ini
+++ b/images/bo-bon-mua-chun-chan-1602m/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-bon-mua-chun-chan-1602m.html
 lastopen = 2024-06-07 01:32:26
 
 [search]
-lastsearch = 2024-08-09 20:34:48
+lastsearch = 2024-08-09 21:15:50
 
 [everon.online]
 match = 15.4%%
@@ -72,14 +72,14 @@ title = Fuji Master
 url = https://fujimaster.com.vn/
 
 [store.steampowered.com]
-match = -76.9%%
-title = Tiết kiệm đến 75%% khi mua Marvel's Midnight Suns trên ...
-url = https://store.steampowered.com/app/368260/Marvels_Midnight_Suns/?l=vietnamese&curator_clanid=38262110&curator_listid=67239&snr=1_1056_1055_1056
+match = -50.0%%
+title = Tiết kiệm đến 75%% khi mua Anno 2070™ trên Steam
+url = https://store.steampowered.com/app/48240?l=vietnamese&curator_clanid=33358846
 
 [vi.wikipedia.org]
-match = -23.1%%
-title = Mậu dịch Nanban – Wikipedia tiếng Việt
-url = https://vi.wikipedia.org/wiki/Mậu_dịch_Nanban
+match = -3.8%%
+title = San Diego – Wikipedia tiếng Việt
+url = https://vi.wikipedia.org/wiki/San_Diego
 
 [baocaotaichinh.vn]
 match = -19.2%%
@@ -153,8 +153,8 @@ url = https://www.vosco.vn/
 
 [www.tripadvisor.com.vn]
 match = -80.8%%
-title = THE TIKI RESORT (Lake George) - Đánh giá Khách sạn & So ...
-url = https://www.tripadvisor.com.vn/Hotel_Review-g48016-d99716-Reviews-The_Tiki_Resort-Lake_George_New_York.html
+title = AQUA PALMS WAIKIKI (Honolulu) - Đánh giá Khách sạn & So ...
+url = https://www.tripadvisor.com.vn/Hotel_Review-g60982-d559726-Reviews-Aqua_Palms_Waikiki-Honolulu_Oahu_Hawaii.html
 
 [www.tanhkhong.org]
 match = -34.6%%
