--- a/images/bo-bon-mua-epm19064-180x200/config.ini
+++ b/images/bo-bon-mua-epm19064-180x200/config.ini
@@ -4,22 +4,22 @@ url = https://www.diepxuan.com/bo-bon-mua-epm19064-180x200.html
 lastopen = 2024-06-06 17:08:27
 
 [search]
-lastsearch = 2024-08-09 20:24:42
+lastsearch = 2024-08-09 21:12:25
 
 [everonvn.com.vn]
 match = 15.8%%
 title = Bộ Everon Epm-19064
-url = https://everonvn.com.vn/everon/754/bo-everon-epm19064
+url = https://everonvn.com.vn/everon/754/bo-everon-epm19064?srsltid=AfmBOornR9Uet-2nwg7Uez4LZZEAn9catN4-kyvPrsyINk7qT1_Bzhv1
 
 [everon.com.vn]
 match = 5.3%%
 title = BỘ EVERON EPC 19043
-url = https://everon.com.vn/epc-19043/
+url = https://everon.com.vn/epc-19043/?srsltid=AfmBOoqkYAzQ8Xs_cnOGLVdEkCTp4JqLdMiOna7SVfzp4hFfLkBK2bSu
 
 [demxanh.com]
 match = 18.5%%
 title = Bộ chăn ga gối EVeron EPM19068
-url = https://demxanh.com/bo-chan-ga-goi-everon-epm19068.html
+url = https://demxanh.com/bo-chan-ga-goi-everon-epm19068.html?srsltid=AfmBOorjQxIlepYPcwB2Y6sO12TrlkKqDr2SXvs8XNTAITTuIIRN5eTq
 
 [shopee.vn]
 match = -48.1%%
