--- a/images/chan-hoi-coco/config.ini
+++ b/images/chan-hoi-coco/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chan-hoi-coco.html
 lastopen = 2024-06-09 23:18:33
 
 [search]
-lastsearch = 2024-08-09 10:14:44
+lastsearch = 2024-08-09 21:16:53
 
 [hk.linkedin.com]
-match = -53.8%%
-title = Coco Chan - DFI Retail Group
-url = https://hk.linkedin.com/in/coco-chan-044763ba
+match = 7.7%%
+title = Coco Chan - Innity
+url = https://hk.linkedin.com/in/coco-chan-63ba63169
 
 [www.instagram.com]
 match = -38.5%%
