--- a/images/chieu-dieu-hoa-co-goi-16/config.ini
+++ b/images/chieu-dieu-hoa-co-goi-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-co-goi-16.html
 lastopen = 2024-06-06 16:55:12
 
 [search]
-lastsearch = 2024-08-09 20:59:13
+lastsearch = 2024-08-09 21:16:13
 
 [shopee.vn]
 match = 0.0%%
@@ -24,7 +24,7 @@ url = https://goni.vn/chieu-dieu-hoa-goni/
 [demxanh.com]
 match = 60.9%%
 title = Chiếu điều hòa Nhật Bản
-url = https://demxanh.com/chieu-dieu-hoa-nhat-ban.html
+url = https://demxanh.com/chieu-dieu-hoa-nhat-ban.html?srsltid=AfmBOoplznW-i95Ipdcgj736XC39o95_BRhzZX6z0EHGxF2-7CGUkU-z
 
 [giadunganhvan.vn]
 match = 70.8%%
@@ -39,7 +39,7 @@ url = https://thegioinem.com/top-chieu-dieu-hoa-hot-nhat-nam.html
 [sieuthidem.vn]
 match = 16.7%%
 title = Bộ chiếu điều hoà Tencel TC01 - Hà Nội
-url = https://sieuthidem.vn/san-pham/bo-chieu-dieu-hoa-tencel-tc01/
+url = https://sieuthidem.vn/san-pham/bo-chieu-dieu-hoa-tencel-tc01/?srsltid=AfmBOopTjYO9qtSALUXnCn4U7PAt-GnYP2gaB-7ybhsggFrRFHrenBw1
 
 [lybalansieucute.com]
 match = 29.2%%
@@ -54,7 +54,7 @@ url = https://suongtuyet.com/nen-su-dung-chieu-dieu-hoa-loai-nao-chieu-dieu-hoa-
 [www.lazada.vn]
 match = 8.3%%
 title = Chiếu Mây Điều Hòa Chiếu mát mùa hè. ...
-url = https://www.lazada.vn/products/chieu-may-dieu-hoa-chieu-mat-mua-he-chieu-dieu-hoa-16x-2m-loai-tot-thoang-khi-mat-ruoi-ben-dep-co-the-gap-gon-giup-ban-tan-huong-nhung-giay-phut-thu-gian-i517380866.html
+url = https://www.lazada.vn/products/chieu-may-dieu-hoa-chieu-mat-mua-he-chieu-dieu-hoa-16x-2m-loai-tot-thoang-khi-mat-ruoi-ben-dep-co-the-gap-gon-giup-ban-tan-huong-nhung-giay-phut-thu-gian-i517380866.html?srsltid=AfmBOorlKvT2-E2GOGyAhVEAg03wq0fPvejzTTuv_zrro8ML6e-EkEIP
 
 [ababy.com.vn]
 match = -4.2%%
