CI images update

--- a/images/chieu-dieu-hoa-khong-goi-14/config.ini
+++ b/images/chieu-dieu-hoa-khong-goi-14/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-khong-goi-14.html
 lastopen = 2024-06-09 22:26:37
 
 [search]
-lastsearch = 2024-08-09 20:23:19
+lastsearch = 2024-08-09 21:47:03
 
 [shopee.vn]
-match = 0.0%%
-title = chiếu điều hoà giá tốt Tháng 8, 2024 | Mua ngay
-url = https://shopee.vn/search?keyword=chiếu điều hoà
+match = -40.7%%
+title = Chiếu điều hòa mây lạnh cao cấp 2 lớp ( loại 1, có nhiều ...
+url = https://shopee.vn/Chiếu-điều-hòa-mây-lạnh-cao-cấp-2-lớp-(-loại-1-có-nhiều-loại-kích-thước)-không-kèm-vỏ-gối-i.17226131.25877940173
 
 [demxanh.com]
-match = -14.8%%
-title = Bảng giá chiếu điều hòa cao cấp giá tốt nhất tại ...
-url = https://demxanh.com/chieu-dieu-hoa.html
+match = 14.8%%
+title = Sử dụng chiếu điều hòa có tốt hay không?
+url = https://demxanh.com/su-dung-chieu-dieu-hoa-co-tot-hay-khong.html
 
 [tiki.vn]
 match = 33.3%%
