--- a/images/bo-ga-goi-chun-coco-18/config.ini
+++ b/images/bo-ga-goi-chun-coco-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-goi-chun-coco-18.html
 lastopen = 2024-06-09 23:53:28
 
 [search]
-lastsearch = 2024-08-09 19:24:41
+lastsearch = 2024-08-09 21:39:13
 
 [www.diepxuan.com]
 match = 4.5%%
@@ -17,9 +17,9 @@ title = Bộ ga gối nỉ nhung sữa coco màu trơn siêu mềm mịn ...
 url = https://shopee.vn/Bộ-ga-gối-nỉ-nhung-sữa-coco-màu-trơn-siêu-mềm-mịn-ga-giường-bọc-đệm-bo-chun-kèm-đôi-vỏ-gối-cao-cấp-siêu-mềm-mịn-i.568873105.21595456538
 
 [m.facebook.com]
-match = 13.6%%
-title = Tổng kho Chăn Ga Gối - Cao Cấp
-url = https://m.facebook.com/61550932296338
+match = -18.2%%
+title = Chăn Ga Gối- Chuyên Hàng Nhập Khẩu Cao Cấp
+url = https://m.facebook.com/p/Chăn-Ga-Gối-Chuyên-Hàng-Nhập-Khẩu-Cao-Cấp-100094781869824/
 
 [hanvico.com.vn]
 match = 31.8%%
@@ -47,9 +47,9 @@ title = Bộ Ga Gối Nỉ Nhung MÀU XÁM COCO 1m6x2m in Nổi Hoạ ...
 url = https://www.sendo.vn/bo-ga-goi-ni-nhung-mau-xam-coco-1m6x2m-in-noi-hoa-tiet-mau-moi-2023-116258982.html
 
 [demxanh.com]
-match = -45.5%%
-title = Chiếu cao su non Coco bo chun màu xanh mint
-url = https://demxanh.com/chieu-cao-su-non-coco-bo-chun-mau-xanh-mint.html
+match = -40.9%%
+title = Chiếu cao su non Coco bo chun màu xám nhạt
+url = https://demxanh.com/chieu-cao-su-non-coco-bo-chun-mau-xam-nhat.html
 
 [www.tiktok.com]
 match = -59.1%%
