--- a/images/bo-ga-goi-chun-xoa-2m-22/config.ini
+++ b/images/bo-ga-goi-chun-xoa-2m-22/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-goi-chun-xoa-2m-22.html
 lastopen = 2024-06-09 22:43:18
 
 [search]
-lastsearch = 2024-08-09 17:59:23
+lastsearch = 2024-08-09 21:48:04
 
 [www.diepxuan.com]
 match = -62.5%%
@@ -39,7 +39,7 @@ url = https://songhongchinhhang.vn/URBAN-COLLECTION/bo-urban-coleection-2022-202
 [everon.com.vn]
 match = -66.7%%
 title = Bộ Chăn Ga Everon EPM 22060 | Mới Nhất Năm 2022. Hotline
-url = https://everon.com.vn/bo-chan-ga-everon-epm-22060/
+url = https://everon.com.vn/bo-chan-ga-everon-epm-22060/?srsltid=AfmBOorerJd6u0G-5vMbr2Jnf8GyLYxJh3BZIlAXMPMJZuv5QKadaVvZ
 
 [dailyeveron.vn]
 match = -66.7%%
@@ -58,8 +58,8 @@ url = https://songhongonline.vn/products/bo-san-pham-song-hong-sh-bc22-1
 
 [dongahome.vn]
 match = -12.5%%
-title = Bộ chăn ga SH_UC22 018 cao cấp Sông Hồng
-url = https://dongahome.vn/bo-chan-ga-sh_uc22-018
+title = Bộ chăn ga SH_UC22 019 cao cấp Sông Hồng
+url = https://dongahome.vn/bo-chan-ga-sh_uc22-019
 
 [thegioinem.com]
 match = -12.5%%
@@ -79,7 +79,7 @@ url = https://everonletrongtan.com/bo-suu-tap-everon-2022
 [jysk.vn]
 match = 0.0%%
 title = Phụ kiện chăn ga gối - JYSK.vn
-url = https://jysk.vn/phu-kien-chan-ga-goi
+url = https://jysk.vn/phu-kien-chan-ga-goi?srsltid=AfmBOorax9MFx6wX4L37lbaukxD_XeRsyyO96DdD85H32R23jyIJPlbr
 
 [www.facebook.com]
 match = 20.8%%
@@ -114,7 +114,7 @@ url = https://m.facebook.com/p/Nam-phuongshop-100023919678729/
 [www.everonvni.vn]
 match = 0.0%%
 title = BỘ CHĂN GA GỐI CÁNH ĐỒNG NẮNG - EST24035
-url = https://www.everonvni.vn/bo-chan-ga-goi-canh-dong-nang-est24035/
+url = https://www.everonvni.vn/bo-chan-ga-goi-canh-dong-nang-est24035/?srsltid=AfmBOoopfduMH0jOt4gk1TaowsumSZtlOVy3kECwlwQeCDAEarZwOnnO
 
 [lasantevn.com]
 match = -66.7%%
