--- a/images/chieu-lac-d2-12/config.ini
+++ b/images/chieu-lac-d2-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-12.html
 lastopen = 2024-06-21 05:09:22
 
 [search]
-lastsearch = 2024-08-09 20:54:40
+lastsearch = 2024-08-09 21:34:18
 
 [agasound.vn]
 match = 6.7%%
@@ -54,7 +54,7 @@ url = https://www.lineabon.vn/product-page/lineabon-d3k2
 [www.diepxuan.com]
 match = 33.3%%
 title = Điệp Xuân Chiếu lác D2 12
-url = https://www.diepxuan.com/chieu-lac-d2-12.html?srsltid=AfmBOorbzusR9Nasm3KZKUWc8bWjkSN_yOrbFXXbwVbaiL3FW5Slke5Y
+url = https://www.diepxuan.com/chieu-lac-d2-12.html?srsltid=AfmBOopDs9PsJ2jBqX_dodZdV_A_N83Wr2UAbZ6q7S1IAizI28y7VRrP
 
 [shopee.vn]
 match = -186.7%%
@@ -82,9 +82,9 @@ title = D2 Cột Bóng rổ, Hầm chui, Vận động-Thể chất - Đồ chơ
 url = https://dochoimamnon123.com/d2-cot-bong-ro-ham-chui-van-dong-the-chat
 
 [m.facebook.com]
-match = -166.7%%
-title = English Teachers and Tutors in Ho Chi Minh City
-url = https://m.facebook.com/groups/284373409022717/posts/1511796389613740/
+match = -33.3%%
+title = tìm trẻ lạc d2 NGT Long Biên✌️✌️✌️✌️✌️
+url = https://m.facebook.com/groups/HocSinhHN/posts/1619809158664939/
 
 [vietnamairport.vn]
 match = -93.3%%
