--- a/images/chieu-truc-que-lam-loai-2-18/config.ini
+++ b/images/chieu-truc-que-lam-loai-2-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-que-lam-loai-2-18.html
 lastopen = 2024-06-07 00:19:47
 
 [search]
-lastsearch = 2024-08-09 14:35:40
+lastsearch = 2024-08-09 21:30:42
 
 [chieutrelanlan.com]
 match = -7.1%%
@@ -19,12 +19,12 @@ url = https://thegioidemviet.vn/chieu-truc-que-lam/
 [demxanh.com]
 match = -28.6%%
 title = Tổng kho Chiếu trúc cao cấp khuyến mãi giá rẻ nhất 2024
-url = https://demxanh.com/chieu-truc.html?srsltid=AfmBOoqcbsXcGL6dsD_aLSmOwvzpZiGWC4Jb1Y6Ff3O5zjRj5Toz2TZp
+url = https://demxanh.com/chieu-truc.html
 
 [shopee.vn]
 match = -3.6%%
-title = Chiếu trúc Quế Lâm mắt ngọc hạt vàng bóng đẹp loại 1
-url = https://shopee.vn/Chiếu-trúc-Quế-Lâm-mắt-ngọc-hạt-vàng-bóng-đẹp-loại-1-i.121274905.7879754206
+title = chiếu trúc hạt giá tốt Tháng 8, 2024 | Mua ngay
+url = https://shopee.vn/search?keyword=chiếu trúc hạt
 
 [www.diepxuan.com]
 match = 28.6%%
