--- a/images/chieu-truc-thai-den14/config.ini
+++ b/images/chieu-truc-thai-den14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-truc-thai-den14.html
 lastopen = 2024-06-09 23:36:30
 
 [search]
-lastsearch = 2024-08-09 20:07:28
+lastsearch = 2024-08-09 21:43:06
 
 [www.diepxuan.com]
 match = 42.9%%
 title = Chiếu trúc thai đen14 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-truc-thai-den14.html
+url = https://www.diepxuan.com/chieu-truc-thai-den14.html?srsltid=AfmBOooQrk8NkhMMD8RfgVVYuhNDRUkAEzhN-TA-pG8lfJDctPNZuRgM
 
 [demxanh.com]
 match = -28.6%%
@@ -19,7 +19,7 @@ url = https://demxanh.com/chieu-truc-hat-huong-truc.html
 [www.lazada.vn]
 match = -81.0%%
 title = Chiếu Trúc Thái Lan Giá Tốt T08/2024 | Mua tại Lazada.vn
-url = https://www.lazada.vn/tag/chieu-truc-thai-lan/
+url = https://www.lazada.vn/tag/chieu-truc-thai-lan/?srsltid=AfmBOooeTkIYtPp-z6Ydn4y_0rQFPobnwkWHdxcudt6BmxctpXh6pvIW
 
 [tiki.vn]
 match = -42.9%%
@@ -117,9 +117,9 @@ title = Đồng bộ thi hành Luật Căn cước
 url = https://baolangson.vn/dong-bo-thi-hanh-luat-can-cuoc-5013468.html
 
 [baomoi.com]
-match = -128.6%%
-title = ĐH Kỹ thuật Công nghiệp: Không kê chỉ tiêu, số nhập học ...
-url = https://baomoi.com/dh-ky-thuat-cong-nghiep-khong-ke-chi-tieu-so-nhap-hoc-o-de-an-du-co-tuyen-sinh-c49834329.epi
+match = -133.3%%
+title = Xe tải tông trực diện xe máy, cả gia đình 3 người tử vong ...
+url = https://baomoi.com/xe-tai-tong-truc-dien-xe-may-ca-gia-dinh-3-nguoi-tu-vong-thuong-tam-c49862065.epi
 
 [plo.vn]
 match = -104.8%%
@@ -277,9 +277,9 @@ title = Mức đóng bảo hiểm xã hội của công chức thay đổi thế
 url = https://bptv.vn/news/9/159224/muc-dong-bao-hiem-xa-hoi-cua-cong-chuc-thay-doi-the-nao-khi-luong-co-so-du-kien-tang-30
 
 [m.facebook.com]
-match = -95.2%%
-title = casual Đà nẵng | KHÁCH SẠN SEL DE MER HOTEL & ...
-url = https://m.facebook.com/groups/303223456724518/posts/2101917873521725/
+match = -137.5%%
+title = AOV News
+url = https://m.facebook.com/mobaaovnews/photos/-văn-hóa-đôn-hoàng-rực-rỡ-và-bí-ẩn-tranh-đôn-hoàng-cát-vàng-chảy-sấm-sét-đan-xen/1135114811471973/
 
 [thuvienphapluat.vn]
 match = -109.5%%
@@ -532,9 +532,9 @@ title = Giá vàng: Trang chủ
 url = https://giavang.pnj.com.vn/
 
 [hanoionline.vn]
-match = -76.2%%
-title = Công viên Cầu Giấy, điểm xanh trong lòng đô thị
-url = https://hanoionline.vn/video/cong-vien-cau-giay-diem-xanh-trong-long-do-thi-256258.htm
+match = 14.3%%
+title = Ai dọn 'rác trời' vô chủ?
+url = https://hanoionline.vn/video/ai-don-rac-troi-vo-chu-257453.htm
 
 [laodong.vn]
 match = -109.5%%
@@ -658,8 +658,8 @@ url = https://moitruong.net.vn/nhieu-nguoi-thuong-vong-do-sat-lo-da-tai-cac-tinh
 
 [doanhnhansaigon.vn]
 match = -119.0%%
-title = Thiếu nhi Bình Chánh sôi nổi với ngày hội môi trường xanh
-url = https://doanhnhansaigon.vn/thieu-nhi-binh-chanh-soi-noi-voi-ngay-hoi-moi-truong-xanh-312485.html
+title = Thành phố Thủ Đức thành lập Hội Golf, tổ chức giải đấu ...
+url = https://doanhnhansaigon.vn/thanh-pho-thu-duc-thanh-lap-hoi-golf-to-chuc-giai-dau-gay-quy-vi-nguoi-ngheo-312659.html
 
 [vi.wikipedia.org]
 match = -33.3%%
