--- a/images/nem-everon-160x200x14/config.ini
+++ b/images/nem-everon-160x200x14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-everon-160x200x14.html
 lastopen = 2024-06-06 17:09:53
 
 [search]
-lastsearch = 2024-08-09 19:32:47
+lastsearch = 2024-08-09 21:45:59
 
 [everon.vip]
 match = 44.4%%
@@ -14,7 +14,7 @@ url = https://everon.vip/nem-everon-ceramic
 [everonvn.com.vn]
 match = 23.8%%
 title = Bảng Giá Đệm Everon Năm 2024
-url = https://everonvn.com.vn/everon/344/bang-gia-dem-everon
+url = https://everonvn.com.vn/everon/344/bang-gia-dem-everon?srsltid=AfmBOoq_DjokxRPTYDtFeJuQGGwHh-ki5YUgbR-hrBwCrAhsY0UMzQpk
 
 [www.sieuthinem.vn]
 match = -95.2%%
