--- a/images/ruot-goi-ke-korea/config.ini
+++ b/images/ruot-goi-ke-korea/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/ruot-goi-ke-korea.html
 lastopen = 2024-06-10 00:58:26
 
 [search]
-lastsearch = 2024-08-09 15:30:50
+lastsearch = 2024-08-09 21:37:06
 
 [www.diepxuan.com]
-match = -5.9%%
-title = Ruột gối kê Korea 45x65 - Điệp Xuân
-url = https://www.diepxuan.com/ruot-goi-ke-korea-45x65.html
+match = 5.9%%
+title = Điệp Xuân Ruột gối kê Korea 45x65
+url = https://www.diepxuan.com/ruot-goi-ke-korea-45x65.html?srsltid=AfmBOopJ366hh1QMWYM6ZQIwvp9pMim7qs_rC494fhVF8H1hewKqEiS8
 
 [entershopping.vn]
 match = -123.5%%
@@ -29,7 +29,7 @@ url = https://shopee.vn/Ruột-gối-ép-hơi-Korea-i.86050283.1557277406
 [demxanh.com]
 match = -100.0%%
 title = Ruột gối chính hãng giá khuyến mãi rẻ nhất Hà Nội
-url = https://demxanh.com/ruot-goi.html?srsltid=AfmBOooDQmLtj0TnzPD24-zxKWK5ppm0r0Semy-SyC-yoWz0VyTE1Bby
+url = https://demxanh.com/ruot-goi.html?srsltid=AfmBOorI5wxjaznGUbQot1MR_Nb-j7rc40bdVTYxyLHpN1SrSB1g12hm
 
 [everonkorea.com]
 match = -100.0%%
@@ -49,7 +49,7 @@ url = https://sieuthidemonline.vn/ruot-goi-don-song-hong/
 [www.lazada.vn]
 match = -147.1%%
 title = Gối Ngủ MOSAM KOREA (Ruột Kèm Vỏ Gối) 35x55 cm có ...
-url = https://www.lazada.vn/products/goi-ngu-mosam-korea-ruot-kem-vo-goi-35x55-cm-co-khoa-keo-phu-hop-cho-be-di-hoc-nguoi-di-cong-trinhsinh-vien-i2334711515.html
+url = https://www.lazada.vn/products/goi-ngu-mosam-korea-ruot-kem-vo-goi-35x55-cm-co-khoa-keo-phu-hop-cho-be-di-hoc-nguoi-di-cong-trinhsinh-vien-i2334711515.html?srsltid=AfmBOooZnxCKogU71pmXbXkYcvPPoYaAtihjMAleydTxp9J2-A0rFcVk
 
 [www.hotdeal.vn]
 match = -111.8%%
