CI images update

--- a/images/chieu-lac-soc-18/config.ini
+++ b/images/chieu-lac-soc-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-18.html
 lastopen = 2024-06-06 16:53:55
 
 [search]
-lastsearch = 2024-08-09 21:55:00
+lastsearch = 2024-08-09 22:30:58
 
 [scholar.google.com]
 match = -43.8%%
@@ -427,9 +427,9 @@ title = Cảnh khoả thân 100%% ở bom tấn 18+ House of the Dragon
 url = https://afamily.vn/soc-voi-canh-khoa-than-100-o-bom-tan-18-20240705163644594.chn
 
 [phatsuonline.vn]
-match = -200.0%%
-title = [Video] Bình Thuận: Khai mạc khoá tu “Gieo mầm an lạc” ...
-url = https://phatsuonline.vn/video-binh-thuan-khai-mac-khoa-tu-gieo-mam-an-lac-lan-thu-2-va-nhung-hoat-dong-ngay-dau-tien-tai-tu-vien-quang-duc-78
+match = -225.0%%
+title = Hà Nội: Đại diện 18 Trường hạ về Tổ đình Viên Minh lễ tạ ...
+url = https://phatsuonline.vn/ha-noi-dai-dien-18-truong-ha-ve-to-dinh-vien-minh-le-ta-duc-de-tam-phap-chu-44
 
 [docln.net]
 match = -75.0%%
@@ -492,9 +492,9 @@ title = Huyện Bảo Lạc thăm, tặng quà các gia đình chính sách
 url = http://caobangtv.vn/tin-tuc-n75384/huyen-bao-lac-tham-tang-qua-cac-gia-dinh-chinh-sach.html
 
 [vietnamnet.vn]
-match = -237.5%%
-title = Nhóm 6 đối tượng dưới 18 tuổi bị khởi tố trong vụ án giết ...
-url = https://vietnamnet.vn/nhom-6-doi-tuong-duoi-18-tuoi-bi-khoi-to-trong-vu-an-giet-nguoi-2307455.html
+match = -193.8%%
+title = Cuộc sống hiện tại của cô bé từng kiếm 18 triệu USD khi ...
+url = https://vietnamnet.vn/cuoc-song-hien-tai-cua-co-be-tung-kiem-18-trieu-usd-khi-moi-6-tuoi-2310198.html
 
 [baobinhphuoc.com.vn]
 match = -225.0%%
