--- a/images/man-tu-bung-dinh-vuong18/config.ini
+++ b/images/man-tu-bung-dinh-vuong18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-tu-bung-dinh-vuong18.html
 lastopen = 2024-06-07 00:52:24
 
 [search]
-lastsearch = 2024-08-09 20:29:37
+lastsearch = 2024-08-09 22:16:33
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -184,5 +184,5 @@ url = https://tbmart.vn/san-pham/man-chup-tu-bung-dinh-vuong/
 [bonggio.com]
 match = 16.7%%
 title = Gạch bông gió đỏ đất nung Vuông 18
-url = https://bonggio.com/product/gach-bong-gio-do-dat-nung-vuong-18/?srsltid=AfmBOorqg6k0YjvaR7CjAYBDhBKjrrQ8MnG00XNo26nRvEQueQQhDt3V
+url = https://bonggio.com/product/gach-bong-gio-do-dat-nung-vuong-18/
 
