--- a/images/chan-3-kg/config.ini
+++ b/images/chan-3-kg/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chan-3-kg.html
 lastopen = 2024-06-09 21:50:05
 
 [search]
-lastsearch = 2024-08-09 21:41:41
+lastsearch = 2024-08-09 22:29:12
 
 [silverwow.net]
 match = -255.6%%
 title = Heaviest Mens Silver Necklaces Chains
-url = https://silverwow.net/collections/heaviest-chunky-mens-necklace-chains
+url = https://silverwow.net/collections/heaviest-chunky-mens-necklace-chains?srsltid=AfmBOorzF2z9OkkHZ6nnj-xuAb3rUEjIUDV3P1gFApPhdV7AJXZdeY60
 
 [www.whittingtonsteel.com]
 match = 37.5%%
@@ -219,7 +219,7 @@ url = https://www.itshot.com/jewelry/education-guides/strongest-chains
 [mightydepot.com]
 match = -377.8%%
 title = Chung John Wong Sun Chan pepper 3kg Korean food ...
-url = https://mightydepot.com/products/chung-john-wong-sun-chan-pepper-3kg-korean-food-korea-seasoning-ryokiyoshi-sei-en_b004jhiys0_
+url = https://mightydepot.com/products/chung-john-wong-sun-chan-pepper-3kg-korean-food-korea-seasoning-ryokiyoshi-sei-en_b004jhiys0_?srsltid=AfmBOorygmpLqzEHiXbt24GcUAQ_5TO2-bd_KEOe1yM4T4Ssz6R37Liy
 
 [s.click.aliexpress.com]
 match = -444.4%%
