--- a/images/chieu-cay-dai-loan-vien-da14/config.ini
+++ b/images/chieu-cay-dai-loan-vien-da14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-dai-loan-vien-da14.html
 lastopen = 2024-06-09 22:14:06
 
 [search]
-lastsearch = 2024-08-09 15:45:11
+lastsearch = 2024-08-09 22:23:54
 
 [www.diepxuan.com]
 match = 65.4%%
@@ -47,9 +47,9 @@ title = HỒ SƠ ĐỀ XUẤT KHU VỰC PHÁT TRIỂN ĐÔ THỊ
 url = https://trangbom.dongnai.gov.vn/SiteAssets/Lists/ThongBao/EditForm/01-Ho so de xuat KV PTDT Khu 1 TT Trang Bom.pdf
 
 [vnexpress.net]
-match = -17.9%%
-title = Thiên thạch có thể đâm trúng vệ tinh vào năm 2013
-url = https://vnexpress.net/thien-thach-co-the-dam-trung-ve-tinh-vao-nam-2013-2231539.html
+match = -14.3%%
+title = Chỉ đá 14 trận, Beckham đã thành huyền thoại PSG
+url = https://vnexpress.net/chi-da-14-tran-beckham-da-thanh-huyen-thoai-psg-3609469.html
 
 [nancyshop.net]
 match = -57.1%%
@@ -107,9 +107,9 @@ title = 14 năm Rooney ra mắt MU: Hat-trick huyền thoại, "Quỷ đầu ...
 url = https://www.24h.com.vn/bong-da/14-nam-rooney-ra-mat-mu-hat-trick-huyen-thoai-quy-dau-dan-gam-vang-c48a993554.html
 
 [www.facebook.com]
-match = -25.0%%
-title = Trust+ - HÀNH TRÌNH “PEEL DA” 14 NGÀY BẰNG ...
-url = https://www.facebook.com/Trustplus1304/posts/hành-trình-peel-da-14-ngày-bằng-mandelic-acid-chỉ-180k-của-mình-thật-ra-hôm-nay-/1992134787558676/
+match = -17.9%%
+title = CATHAY LIFE TẬP ĐOÀN TÀI CHÍNH SỐ 1 ĐÀI LOAN ...
+url = https://www.facebook.com/groups/tuyendunglanhdao/posts/cathay-life-tập-đoàn-tài-chính-số-1-đài-loan-tuyển-dụng-nhân-sự-cuối-năm-yêu-cầu/1500987144140322/
 
 [trongdoitam1.mysapo.net]
 match = 7.1%%
