--- a/images/chieu-lac-gam-16/config.ini
+++ b/images/chieu-lac-gam-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-16.html
 lastopen = 2024-06-09 23:10:09
 
 [search]
-lastsearch = 2024-08-09 20:48:18
+lastsearch = 2024-08-09 22:24:13
 
 [www.diepxuan.com]
 match = 22.2%%
@@ -117,9 +117,9 @@ title = Bảng cân nặng và chiều dài thai nhi từng tuần theo tiêu ch
 url = https://hoanmy.com/bang-can-nang-thai-nhi/
 
 [m.facebook.com]
-match = -212.5%%
-title = 16. Tạ Tử Thành tỉnh lại vào buổi sáng hôm sau, hắn vừa ...
-url = https://m.facebook.com/100078695363159/photos/493851199914721/
+match = -206.2%%
+title = Trận chiến vì danh dự - GAM vs TS | Bán Kết Nhánh Thắng 1 ...
+url = https://m.facebook.com/vcslmht/videos/trận-chiến-vì-danh-dự-gam-vs-ts-bán-kết-nhánh-thắng-1-vcs-2024-mùa-hè/892848602698546/
 
 [www.sjcallahabad.org]
 match = -212.5%%
@@ -152,9 +152,9 @@ title = lịch thi đấu sea games 32 ngày 16 tháng 05
 url = https://caodangtkv.edu.vn/Xsn/20240615-77kfuhesoi kèo tài xỉu việt nam malaysia.html
 
 [www.facebook.com]
-match = -193.8%%
-title = 🔴 Livestream Danang Dragons - Cantho Catfish | Game 40 ...
-url = https://www.facebook.com/OnBongRo/videos/-livestream-danang-dragons-cantho-catfish-game-40-giải-bóng-rổ-chuyên-nghiệp-việ/1008533021057074/
+match = -8.3%%
+title = Mai Thanh Hạ
+url = https://www.facebook.com/maithanhha19/
 
 [suckhoedoisong.vn]
 match = -225.0%%
@@ -707,9 +707,9 @@ title = Tổng Bí thư Nguyễn Phú Trọng với Đảng ủy Khối các cơ
 url = https://baotintuc.vn/chinh-tri/tong-bi-thu-nguyen-phu-trong-voi-dang-uy-khoi-cac-co-quan-trung-uong-20240803092407595.htm
 
 [baochinhphu.vn]
-match = -156.2%%
-title = Trải nghiệm 'Em vẽ sắc màu tình nguyện' đầy ý nghĩa
-url = https://baochinhphu.vn/trai-nghiem-em-ve-sac-mau-tinh-nguyen-day-y-nghia-102240806171448997.htm
+match = -206.2%%
+title = Ra mắt Thư viện điện tử Quốc gia về giáo dục phòng tránh ...
+url = https://baochinhphu.vn/ra-mat-thu-vien-dien-tu-quoc-gia-ve-giao-duc-phong-tranh-tai-nan-bom-min-10224080914220659.htm
 
 [nbtv.vn]
 match = -206.2%%
