--- a/images/chieu-nhua-thai-binh-12/config.ini
+++ b/images/chieu-nhua-thai-binh-12/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-nhua-thai-binh-12.html
 lastopen = 2024-06-10 00:20:10
 
 [search]
-lastsearch = 2024-08-09 16:54:55
+lastsearch = 2024-08-09 22:22:53
 
 [shopee.vn]
-match = -17.4%%
-title = Chiếu nhựa thái bình gấp gọn (đủ mọi kích thươc)
-url = https://shopee.vn/Chiếu-nhựa-thái-bình-gấp-gọn-(đủ-mọi-kích-thươc)-i.266319381.9544957396
+match = 4.3%%
+title = Chiếu Nhựa Gấp Gọn Đủ Kích Cỡ Cao Cấp
+url = https://shopee.vn/Chiếu-Nhựa-Thái-Bình-Hàng-Việt-Nam-Chiếu-Nhựa-Gấp-Gọn-Đủ-Kích-Cỡ-Cao-Cấp-i.398388048.13666402755
 
 [www.facebook.com]
 match = 52.2%%
@@ -42,8 +42,8 @@ title = chiếu nhựa gấp gọn Thái Bình tiện dụng 1.6 m x 2 m
 url = https://www.lazada.vn/products/chieu-nhua-gap-gon-thai-binh-tien-dung-16-m-x-2-m-i813788696.html
 
 [chuyenhangviet.com]
-match = -82.6%%
-title = Chiếu Tre Việt Phổ Mến Thái Bình cao cấp - Chuyên Hàng Việt!
+match = -73.9%%
+title = Chiếu Tre Việt Phổ Mến Thái Bình cao cấp - Chăn ga gối đệm
 url = https://chuyenhangviet.com/chieu-tre-viet-pho-men-thai-binh-cao-cap/
 
 [tiki.vn]
