--- a/images/ga-chun-thang-loi-180x200/config.ini
+++ b/images/ga-chun-thang-loi-180x200/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-chun-thang-loi-180x200.html
 lastopen = 2024-06-06 16:41:04
 
 [search]
-lastsearch = 2024-08-09 21:18:38
+lastsearch = 2024-08-09 22:18:42
 
 [maythangloi.com.vn]
 match = -77.8%%
@@ -49,7 +49,7 @@ url = https://demxanh.com/bo-ga-chun-cotton-chong-tham-mau-xam-dam.html?srsltid=
 [www.lazada.vn]
 match = 0.0%%
 title = TXVhIELhu5kgZ2EgZ2nGsOG7n...
-url = https://www.lazada.vn/ga-giuong/th-ng-l-i/?srsltid=AfmBOoqIep-TbYZh-t_JIbK4-oQ_h4UIqq4NrEZjz434nAmU-Mo5tlz_
+url = https://www.lazada.vn/ga-giuong/th-ng-l-i/
 
 [nemcaosuthangloi.vn]
 match = 4.0%%
