--- a/images/man-in-hoa-dep-14/config.ini
+++ b/images/man-in-hoa-dep-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-in-hoa-dep-14.html
 lastopen = 2024-06-10 00:17:58
 
 [search]
-lastsearch = 2024-08-09 20:56:25
+lastsearch = 2024-08-09 22:28:49
 
 [www.rockawayinc.com]
 match = 0.0%%
@@ -297,9 +297,9 @@ title = The Reinstatement of Covenants, Conditions, and ...
 url = https://www.floridabar.org/the-florida-bar-journal/the-reinstatement-of-covenants-conditions-and-restrictions-extinguished-by-the-marketable-record-title-act/
 
 [books.google.com]
-match = -194.1%%
-title = Bradshaw's General Railway and Steam Navigation Guide for ...
-url = https://books.google.com/books?id=6R8pAAAAYAAJ&pg=PA131&lpg=PA131&dq=man+in+hoa+dep+14&source=bl&ots=rUQ7ypAE92&sig=ACfU3U0S4JTpJ2mkcwC3IveZPyJ7MgU1hg&hl=en&sa=X&ved=2ahUKEwjk9u6SiOiHAxXECTQIHbJuBZIQ6AF6BAgfEAM
+match = -217.6%%
+title = The new army list, by H.G. Hart [afterw.] Hart's army list. ...
+url = https://books.google.com/books?id=8-8NAAAAQAAJ&pg=RA1-PA596&lpg=RA1-PA596&dq=man+in+hoa+dep+14&source=bl&ots=2iloQvz_0E&sig=ACfU3U2hJI7FL48RDOj-ad_CLZ7fLE-Z1A&hl=en&sa=X&ved=2ahUKEwjyhL_mnOiHAxWUtokEHRMuCPEQ6AF6BAgcEAM
 
 [www.house.gov]
 match = 11.8%%
