--- a/images/vo-goi-bears-45x65/config.ini
+++ b/images/vo-goi-bears-45x65/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/vo-goi-bears-45x65.html
 lastopen = 2024-07-01 17:35:59
 
 [search]
-lastsearch = 2024-08-09 21:39:34
+lastsearch = 2024-08-09 22:14:50
 
 [everonvn.com.vn]
 match = -94.4%%
 title = Bộ Everon Ep 1738 - chăn ga gối đệm Everon
-url = https://everonvn.com.vn/everon/553/bo-everon-ep-1738?srsltid=AfmBOopeyYGATBXOEJf58Q6PwniOf76TSVtoo0EUq3v2H4hLSNBn6ZCS
+url = https://everonvn.com.vn/everon/553/bo-everon-ep-1738
 
 [www.lazada.vn]
 match = -161.1%%
 title = Hoạt động♀Chất lượng cao Vỏ gối bông 45x65 etami, mềm mại ...
-url = https://www.lazada.vn/products/hoat-dongchat-luong-cao-vo-goi-bong-45x65-etami-mem-mai-va-min-mang-thiet-ke-i2641874444-s12892934652.html?from_gmc=1&fl_tag=1&srsltid=AfmBOoqA-LX5x6JwoMmxv5QFKgjIBWMLBiodu21cwWLhFN-kcD-HeJlu
+url = https://www.lazada.vn/products/hoat-dongchat-luong-cao-vo-goi-bong-45x65-etami-mem-mai-va-min-mang-thiet-ke-i2641874444-s12892934652.html?from_gmc=1&fl_tag=1
 
 [www.reddit.com]
 match = -150.0%%
@@ -34,12 +34,12 @@ url = https://muathongminh.vn/xu-huong-vo-goi-dau-cotton-poly-45x65-ao-goi-nam-n
 [www.diepxuan.com]
 match = 11.1%%
 title = Điệp Xuân Vỏ gối EP1818 45x65
-url = https://www.diepxuan.com/vo-goi-ep1818-45x65.html?srsltid=AfmBOorzS2U98h5MvoziiomA4GUTT_ielRFAo8hRFhw8XqJfopQ-Unk6
+url = https://www.diepxuan.com/vo-goi-ep1818-45x65.html
 
 [www.everonqb.com]
 match = -111.1%%
-title = Vỏ gối EPM21065 45x65 - Everon Quảng Bình Trang Chủ
-url = https://www.everonqb.com/vo-goi-epm21065-45x65.html
+title = Vỏ gối EPC19056 45x65 - Everon Quảng Bình Trang Chủ
+url = https://www.everonqb.com/vo-goi-epc19056-45x65.html
 
 [shopee.vn]
 match = -127.8%%
